Macosx fromsource patch 3 (#7)
* [UI, Tool Windows] IJPL-248129 Move TW Bookmarks stripe title to correct bundle

IJPL-223852 moved the bookmarks into the `intellij.platform.bookmarks.plugin` plugin. The
platform then stopped reading `messages.IdeBundle` for the module, and the descriptor
declared no bundle of its own. `getStripeTitleSupplier` returned `null`, and the stripe
showed the raw tool window ID.

The descriptor now declares `messages.BookmarkBundle`, which it already uses for its two
advanced settings. The key moves there. The `<actions>` block keeps `messages.ActionsBundle`
through its own `resource-bundle` attribute.

No `exportable.*.presentable.name` key exists for the bookmark settings, so the new bundle
does not change the name that Settings Sync shows.

GitOrigin-RevId: f5d38d50ae5da07677cbe38fcf725045aa6bcfaf

* [UI, Tool Windows] IJPL-248129 Move TW Problems View stripe title to correct bundle

The `intellij.platform.problemView.plugin` plugin owns `intellij.platform.problemView.ui`,
so the platform stopped reading `messages.IdeBundle` for the module. The descriptor declared
no bundle of its own, so `getStripeTitleSupplier` returned `null` and the stripe showed the
raw tool window ID.

The descriptor now declares `messages.ProblemsViewBundle`, and the key moves there. The
`<actions>` block keeps `messages.ActionsBundle` through its own `resource-bundle` attribute.

`toolwindow.stripe.ProblemsView` stays in `IdeBundle`. That key belongs to the Rider tool
window with the ID `ProblemsView`, which is a different tool window.

GitOrigin-RevId: dda09aab33ff427ff09e4b74bcd4f14691eb495a

* [UI, Tool Windows] IJPL-248129 Read TW Terminal stripe title from the plugin bundle

`toolwindow.stripe.Terminal` is already in `messages.TerminalBundle`, but the descriptor
declared no `<resource-bundle>`. `getStripeTitleSupplier` reads that element and returns
`null` when it is absent, so the stripe showed the raw tool window ID.

The descriptor now declares the bundl