@@ -1,144 +1,186 @@
-/*
- * Copyright 2000-2016 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.debugger.impl;
 
-import com.intellij.debugger.DebuggerBundle;
+import com.intellij.debugger.DebuggerInvocationUtil;
 import com.intellij.debugger.DebuggerManagerEx;
-import com.intellij.debugger.engine.*;
+import com.intellij.debugger.JavaDebuggerBundle;
+import com.intellij.debugger.actions.ThreadDumpAction;
+import com.intellij.debugger.engine.DebugProcessImpl;
+import com.intellij.debugger.engine.DebuggerManagerThreadImpl;
+import com.intellij.debugger.impl.hotswap.JvmHotSwapListener;
+import com.intellij.debugger.jdi.ThreadReferenceProxyImpl;
 import com.intellij.debugger.jdi.VirtualMachineProxyImpl;
 import com.intellij.debugger.ui.breakpoints.BreakpointManager;
+import com.intellij.debugger.ui.breakpoints.StackCapturingLineBreakpoint;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.progress.ProcessCanceledException;
 import com.intellij.openapi.project.Project;
-import com.intellij.openapi.util.io.FileUtil;
-import com.intellij.util.StringBuilderSpinAllocator;
+import com.intellij.openapi.util.registry.Registry;
+import com.intellij.threadDumpParser.ThreadState;
 import com.intellij.util.concurrency.Semaphore;
 import com.intellij.util.ui.MessageCategory;
 import com.intellij.xdebugger.XDebugSession;
-import com.intellij.xdebugger.frame.XExecutionStack;
+import com.intellij.xdebugger.impl.hotswap.HotSwapFailureReason;
+import com.intellij.xdebugger.impl.hotswap.HotSwapStatistics;
+import com.jetbrains.jdi.JDWP;
+import com.jetbrains.jdi.JDWPUnsupportedOperationException;
+import com.jetbrains.jdi.VirtualMachineImpl;
 import com.sun.jdi.ReferenceType;
+import one.util.streamex.StreamEx;
+import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
+import org.jetbrains.annotations.Range;
 
-import javax.swing.*;
-import java.io.File;
 import java.io.IOException;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
+import java.util.stream.IntStream;
 
-/**
- * @author lex
- */
 class ReloadClassesWorker {
-  private static final Logger LOG = Logger.getInstance("#com.intellij.debugger.impl.ReloadClassesWorker");
-  private final DebuggerSession  myDebuggerSession;
-  private final HotSwapProgress  myProgress;
+  private static final Logger LOG = Logger.getInstance(ReloadClassesWorker.class);
+  private final @NotNull DebuggerSession myDebuggerSession;
+  private final @NotNull HotSwapProgress myProgress;
 
-  public ReloadClassesWorker(DebuggerSession session, HotSwapProgress progress) {
+  ReloadClassesWorker(@NotNull DebuggerSession session, @NotNull HotSwapProgress progress) {
     myDebuggerSession = session;
     myProgress = progress;
   }
 
-  private DebugProcessImpl getDebugProcess() {
-    return myDebuggerSession.getProcess();
-  }
-
-  private void processException(Throwable e) {
-    if (e.getMessage() != null) {
-      myProgress.addMessage(myDebuggerSession, MessageCategory.ERROR, e.getMessage());
-    }
-
+  private void processException(@NotNull Throwable e) {
     if (e instanceof ProcessCanceledException) {
-      myProgress.addMessage(myDebuggerSession, MessageCategory.INFORMATION, DebuggerBundle.message("error.operation.canceled"));
+      myProgress.addMessage(myDebuggerSession, MessageCategory.INFORMATION, JavaDebuggerBundle.message("error.operation.canceled"));
       return;
     }
 
+    String message;
+    String reason = e.getLocalizedMessage();
+    HotSwapFailureReason failureReason = getFailureReason(e);
+    HotSwapStatistics.logFailureReason(myProgress.getProject(), failureReason, myProgress.getHotSwapSource());
     if (e instanceof UnsupportedOperationException) {
-      myProgress.addMessage(myDebuggerSession, MessageCategory.ERROR, DebuggerBundle.message("error.operation.not.supported.by.vm"));
+      message = JavaDebuggerBundle.message("error.operation.not.supported.by.vm", reason);
     }
     else if (e instanceof NoClassDefFoundError) {
-      myProgress.addMessage(myDebuggerSession, MessageCategory.ERROR, DebuggerBundle.message("error.class.def.not.found", e.getLocalizedMessage()));
+      message = JavaDebuggerBundle.message("error.class.def.not.found", reason);
     }
     else if (e instanceof VerifyError) {
-      myProgress.addMessage(myDebuggerSession, MessageCategory.ERROR, DebuggerBundle.message("error.verification.error", e.getLocalizedMessage()));
+      message = JavaDebuggerBundle.message("error.verification.error", reason);
     }
     else if (e instanceof UnsupportedClassVersionError) {
-      myProgress.addMessage(myDebuggerSession, MessageCategory.ERROR, DebuggerBundle.message("error.unsupported.class.version", e.getLocalizedMessage()));
+      message = JavaDebuggerBundle.message("error.unsupported.class.version", reason);
     }
     else if (e instanceof ClassFormatError) {
-      myProgress.addMessage(myDebuggerSession, MessageCategory.ERROR, DebuggerBundle.message("error.class.format.error", e.getLocalizedMessage()));
+      message = JavaDebuggerBundle.message("error.class.format.error", reason);
     }
     else if (e instanceof ClassCircularityError) {
-      myProgress.addMessage(myDebuggerSession, MessageCategory.ERROR, DebuggerBundle.message("error.class.circularity.error", e.getLocalizedMessage()));
+      message = JavaDebuggerBundle.message("error.class.circularity.error", reason);
     }
     else {
-      myProgress.addMessage(
-        myDebuggerSession, MessageCategory.ERROR,
-        DebuggerBundle.message("error.exception.while.reloading", e.getClass().getName(), e.getLocalizedMessage())
-      );
+      message = JavaDebuggerBundle.message("error.exception.while.reloading", e.getClass().getName(), reason);
+    }
+
+    myProgress.addMessage(myDebuggerSession, MessageCategory.ERROR, message);
+  }
+
+  /**
+   * @see VirtualMachineImpl#redefineClasses(Map)
+   */
+  private static @NotNull HotSwapFailureReason getFailureReason(Throwable e) {
+    if (!(e instanceof JDWPUnsupportedOperationException exception)) {
+      return HotSwapFailureReason.OTHER;
+    }
+    switch (exception.getErrorCode()) {
+      case JDWP.Error.ADD_METHOD_NOT_IMPLEMENTED -> {
+        return HotSwapFailureReason.METHOD_ADDED;
+      }
+      case JDWP.Error.DELETE_METHOD_NOT_IMPLEMENTED -> {
+        return HotSwapFailureReason.METHOD_REMOVED;
+      }
+      case JDWP.Error.SCHEMA_CHANGE_NOT_IMPLEMENTED -> {
+        return HotSwapFailureReason.SIGNATURE_MODIFIED;
+      }
+      case JDWP.Error.HIERARCHY_CHANGE_NOT_IMPLEMENTED -> {
+        return HotSwapFailureReason.STRUCTURE_MODIFIED;
+      }
+      case JDWP.Error.CLASS_MODIFIERS_CHANGE_NOT_IMPLEMENTED -> {
+        return HotSwapFailureReason.CLASS_MODIFIERS_CHANGED;
+      }
+      case JDWP.Error.METHOD_MODIFIERS_CHANGE_NOT_IMPLEMENTED -> {
+        return HotSwapFailureReason.METHOD_MODIFIERS_CHANGED;
+      }
+      case JDWP.Error.CLASS_ATTRIBUTE_CHANGE_NOT_IMPLEMENTED -> {
+        return HotSwapFailureReason.CLASS_ATTRIBUTES_CHANGED;
+      }
+      default -> {
+        return HotSwapFailureReason.OTHER;
+      }
     }
   }
 
-  public void reloadClasses(final Map<String, HotSwapFile> modifiedClasses) {
+  public void reloadClasses(@NotNull Map<@NotNull String, ? extends @NotNull HotSwapClassFile> modifiedClasses) {
     DebuggerManagerThreadImpl.assertIsManagerThread();
 
-    if(modifiedClasses == null || modifiedClasses.size() == 0) {
-      myProgress.addMessage(myDebuggerSession, MessageCategory.INFORMATION, DebuggerBundle.message("status.hotswap.loaded.classes.up.to.date"));
+    if (modifiedClasses.isEmpty()) {
+      myProgress.addMessage(myDebuggerSession, MessageCategory.INFORMATION,
+                            JavaDebuggerBundle.message("status.hotswap.loaded.classes.up.to.date"));
       return;
     }
 
-    final DebugProcessImpl debugProcess = getDebugProcess();
-    final VirtualMachineProxyImpl virtualMachineProxy = debugProcess.getVirtualMachineProxy();
+    final DebugProcessImpl debugProcess = myDebuggerSession.getProcess();
+    final VirtualMachineProxyImpl virtualMachineProxy = VirtualMachineProxyImpl.getCurrent();
 
     final Project project = debugProcess.getProject();
     final BreakpointManager breakpointManager = (DebuggerManagerEx.getInstanceEx(project)).getBreakpointManager();
     breakpointManager.disableBreakpoints(debugProcess);
+    StackCapturingLineBreakpoint.deleteAll(debugProcess);
 
     //virtualMachineProxy.suspend();
+    if (LOG.isDebugEnabled()) {
+      LOG.debug("Threads before hotswap:\n",
+                StreamEx.of(ThreadDumpAction.buildThreadStates(virtualMachineProxy)).map(ThreadState::getStackTrace).joining("\n"));
+    }
 
+    if (Registry.is("debugger.resume.yourkit.threads")) {
+      virtualMachineProxy.allThreads().stream()
+        .filter(ThreadReferenceProxyImpl::isResumeOnHotSwap)
+        .filter(ThreadReferenceProxyImpl::isSuspended)
+        .forEach(t -> IntStream.range(0, t.getSuspendCount()).forEach(i -> {
+          t.setIgnoreModelSuspendCount(true);
+          t.resume();
+        }));
+    }
+
+    Set<String> classesToReload = Set.copyOf(modifiedClasses.keySet());
+    notifyBeforeHotSwap(classesToReload);
+    Set<String> reloadedClasses = Collections.emptySet();
     try {
       RedefineProcessor redefineProcessor = new RedefineProcessor(virtualMachineProxy);
 
       int processedEntriesCount = 0;
-      for (final Map.Entry<String, HotSwapFile> entry : modifiedClasses.entrySet()) {
-        // stop if process is finished already
+      for (Map.Entry<@NotNull String, ? extends @NotNull HotSwapClassFile> entry : modifiedClasses.entrySet()) {
+        // stop if the process is finished already
         if (debugProcess.isDetached() || debugProcess.isDetaching()) {
           break;
         }
-        if (redefineProcessor.getProcessedClassesCount() == 0 && myProgress.isCancelled()) {
-          // once at least one class has been actually reloaded, do not interrupt the whole process
+        if (redefineProcessor.mayCancel() && myProgress.isCancelled()) {
           break;
         }
         processedEntriesCount++;
-        final String qualifiedName = entry.getKey();
-        if (qualifiedName != null) {
-          myProgress.setText(qualifiedName);
-          myProgress.setFraction(processedEntriesCount / (double)modifiedClasses.size());
-        }
+        String qualifiedName = entry.getKey();
+        myProgress.setText(qualifiedName);
+        myProgress.setFraction(processedEntriesCount / (double)modifiedClasses.size());
         try {
-          redefineProcessor.processClass(qualifiedName, entry.getValue().file);
+          redefineProcessor.processClass(qualifiedName, entry.getValue());
         }
         catch (IOException e) {
           reportProblem(qualifiedName, e);
         }
       }
 
-      if (redefineProcessor.getProcessedClassesCount() == 0 && myProgress.isCancelled()) {
-        // once at least one class has been actually reloaded, do not interrupt the whole process
+      if (redefineProcessor.mayCancel() && myProgress.isCancelled()) {
         return;
       }
 
@@ -147,42 +189,35 @@ class ReloadClassesWorker {
 
       final int partiallyRedefinedClassesCount = redefineProcessor.getPartiallyRedefinedClassesCount();
       if (partiallyRedefinedClassesCount == 0) {
-        myProgress.addMessage(
-          myDebuggerSession, MessageCategory.INFORMATION,
-          DebuggerBundle.message("status.classes.reloaded", redefineProcessor.getProcessedClassesCount())
-        );
+        if (!Registry.is("debugger.hotswap.floating.toolbar")) {
+          myProgress.addMessage(
+            myDebuggerSession, MessageCategory.INFORMATION,
+            JavaDebuggerBundle.message("status.classes.reloaded", redefineProcessor.getProcessedClassesCount())
+          );
+        }
       }
       else {
-        final String message = DebuggerBundle.message(
+        final String message = JavaDebuggerBundle.message(
           "status.classes.not.all.versions.reloaded", partiallyRedefinedClassesCount, redefineProcessor.getProcessedClassesCount()
         );
         myProgress.addMessage(myDebuggerSession, MessageCategory.WARNING, message);
       }
 
       LOG.debug("classes reloaded");
+      reloadedClasses = Set.copyOf(redefineProcessor.myRedefinedClasses);
     }
     catch (Throwable e) {
       processException(e);
     }
 
-    debugProcess.getPositionManager().clearCache();
-
-    DebuggerContextImpl context = myDebuggerSession.getContextManager().getContext();
-    SuspendContextImpl suspendContext = context.getSuspendContext();
-    if (suspendContext != null) {
-      XExecutionStack stack = suspendContext.getActiveExecutionStack();
-      if (stack != null) {
-        ((JavaExecutionStack)stack).initTopFrame();
-      }
-    }
+    notifyAfterHotSwap(classesToReload, reloadedClasses);
+    debugProcess.onHotSwapFinished();
 
     final Semaphore waitSemaphore = new Semaphore();
     waitSemaphore.down();
-    //noinspection SSBasedInspection
-    SwingUtilities.invokeLater(() -> {
+    DebuggerInvocationUtil.invokeLaterAnyModality(() -> {
       try {
         if (!project.isDisposed()) {
-          breakpointManager.reloadBreakpoints();
           debugProcess.getRequestsManager().clearWarnings();
           if (LOG.isDebugEnabled()) {
             LOG.debug("requests updated");
@@ -209,6 +244,7 @@ class ReloadClassesWorker {
     if (!project.isDisposed()) {
       try {
         breakpointManager.enableBreakpoints(debugProcess);
+        StackCapturingLineBreakpoint.createAll(debugProcess);
       }
       catch (Exception e) {
         processException(e);
@@ -216,22 +252,20 @@ class ReloadClassesWorker {
     }
   }
 
-  private void reportProblem(final String qualifiedName, @Nullable Exception ex) {
-    String reason = null;
-    if (ex != null)  {
-      reason = ex.getLocalizedMessage();
+  private void notifyBeforeHotSwap(@NotNull Set<String> classesToReload) {
+    JvmHotSwapListener.EP_NAME.forEachExtensionSafe(listener -> listener.beforeHotSwap(myDebuggerSession, classesToReload));
+  }
+
+  private void notifyAfterHotSwap(@NotNull Set<String> classesToReload, @NotNull Set<String> reloadedClasses) {
+    JvmHotSwapListener.EP_NAME.forEachExtensionSafe(listener -> listener.afterHotSwap(myDebuggerSession, classesToReload, reloadedClasses));
+  }
+
+  private void reportProblem(String qualifiedName, @Nullable Exception ex) {
+    String reason = ex != null ? ex.getLocalizedMessage() : null;
+    if (reason == null || reason.isEmpty()) {
+      reason = JavaDebuggerBundle.message("error.io.error");
     }
-    if (reason == null || reason.length() == 0) {
-      reason = DebuggerBundle.message("error.io.error");
-    }
-    final StringBuilder buf = StringBuilderSpinAllocator.alloc();
-    try {
-      buf.append(qualifiedName).append(" : ").append(reason);
-      myProgress.addMessage(myDebuggerSession, MessageCategory.ERROR, buf.toString());
-    }
-    finally {
-      StringBuilderSpinAllocator.dispose(buf);
-    }
+    myProgress.addMessage(myDebuggerSession, MessageCategory.ERROR, qualifiedName + " : " + reason);
   }
 
   private static class RedefineProcessor {
@@ -240,24 +274,28 @@ class ReloadClassesWorker {
      * Such restriction is needed to deal with big number of classes being reloaded
      */
     private static final int CLASSES_CHUNK_SIZE = 100;
-    private final VirtualMachineProxyImpl myVirtualMachineProxy;
-    private final Map<ReferenceType, byte[]> myRedefineMap = new HashMap<>();
-    private int myProcessedClassesCount;
-    private int myPartiallyRedefinedClassesCount;
+    private final @NotNull VirtualMachineProxyImpl myVirtualMachineProxy;
+    private final @NotNull Map<@NotNull ReferenceType, byte @NotNull []> myRedefineMap = new HashMap<>();
+    private final @NotNull Set<@NotNull String> myRedefinedClasses = new HashSet<>();
+    private @Range(from = 0, to = Integer.MAX_VALUE) int myProcessedClassesCount;
+    private @Range(from = 0, to = Integer.MAX_VALUE) int myPartiallyRedefinedClassesCount;
 
-    public RedefineProcessor(VirtualMachineProxyImpl virtualMachineProxy) {
+    RedefineProcessor(@NotNull VirtualMachineProxyImpl virtualMachineProxy) {
       myVirtualMachineProxy = virtualMachineProxy;
     }
 
-    public void processClass(String qualifiedName, File file) throws Throwable {
+    public void processClass(@NotNull String qualifiedName, @NotNull HotSwapClassFile file)
+      throws IOException, LinkageError, UnsupportedOperationException {
+
       final List<ReferenceType> vmClasses = myVirtualMachineProxy.classesByName(qualifiedName);
       if (vmClasses.isEmpty()) {
         return;
       }
 
-      final byte[] content = FileUtil.loadFileBytes(file);
+      final byte[] content = file.loadBytes();
       if (vmClasses.size() == 1) {
-        myRedefineMap.put(vmClasses.get(0), content);
+        ReferenceType vmClass = vmClasses.getFirst();
+        myRedefineMap.put(vmClass, content);
         if (myRedefineMap.size() >= CLASSES_CHUNK_SIZE) {
           processChunk();
         }
@@ -265,30 +303,46 @@ class ReloadClassesWorker {
       }
 
       int redefinedVersionsCount = 0;
-      Throwable error = null;
+      LinkageError error = null;
+      UnsupportedOperationException exception = null;
       for (ReferenceType vmClass : vmClasses) {
         try {
           myVirtualMachineProxy.redefineClasses(Collections.singletonMap(vmClass, content));
           redefinedVersionsCount++;
         }
-        catch (Throwable t) {
-          error = t;
+        catch (LinkageError e) {
+          error = e;
+        }
+        catch (UnsupportedOperationException e) {
+          exception = e;
         }
       }
       if (redefinedVersionsCount == 0) {
-        throw error;
+        if (error != null) throw error;
+        assert exception != null;
+        throw exception;
       }
 
       if (redefinedVersionsCount < vmClasses.size()) {
         myPartiallyRedefinedClassesCount++;
       }
+      myRedefinedClasses.add(qualifiedName);
       myProcessedClassesCount++;
     }
 
-    private void processChunk() throws Throwable {
+    public void processPending() throws LinkageError, UnsupportedOperationException {
+      if (!myRedefineMap.isEmpty()) {
+        processChunk();
+      }
+    }
+
+    private void processChunk() throws LinkageError, UnsupportedOperationException {
       // reload this portion of classes and clear the map to free memory
       try {
         myVirtualMachineProxy.redefineClasses(myRedefineMap);
+        for (ReferenceType vmClass : myRedefineMap.keySet()) {
+          myRedefinedClasses.add(vmClass.name());
+        }
         myProcessedClassesCount += myRedefineMap.size();
       }
       finally {
@@ -296,10 +350,9 @@ class ReloadClassesWorker {
       }
     }
 
-    public void processPending() throws Throwable {
-      if (myRedefineMap.size() > 0) {
-        processChunk();
-      }
+    public boolean mayCancel() {
+      // once at least one class has been actually reloaded, do not interrupt the whole process
+      return myProcessedClassesCount == 0;
     }
 
     public int getProcessedClassesCount() {
