@@ -1,18 +1,4 @@
-/*
- * Copyright 2000-2016 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.debugger.ui.tree.render;
 
 import com.intellij.debugger.DebuggerContext;
@@ -24,12 +10,17 @@ import com.intellij.debugger.engine.evaluation.TextWithImports;
 import com.intellij.debugger.impl.descriptors.data.UserExpressionData;
 import com.intellij.debugger.settings.NodeRendererSettings;
 import com.intellij.debugger.ui.impl.watch.ValueDescriptorImpl;
-import com.intellij.debugger.ui.tree.*;
+import com.intellij.debugger.ui.tree.DebuggerTreeNode;
+import com.intellij.debugger.ui.tree.NodeDescriptor;
+import com.intellij.debugger.ui.tree.NodeDescriptorFactory;
+import com.intellij.debugger.ui.tree.NodeManager;
+import com.intellij.debugger.ui.tree.UserExpressionDescriptor;
+import com.intellij.debugger.ui.tree.ValueDescriptor;
 import com.intellij.openapi.util.InvalidDataException;
 import com.intellij.openapi.util.JDOMExternalizerUtil;
-import com.intellij.openapi.util.Pair;
 import com.intellij.openapi.util.WriteExternalException;
 import com.intellij.psi.PsiElement;
+import com.intellij.xdebugger.impl.evaluate.XEvaluationOrigin;
 import com.sun.jdi.Value;
 import org.jdom.Element;
 import org.jetbrains.annotations.NonNls;
@@ -37,27 +28,24 @@ import org.jetbrains.annotations.Nullable;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.concurrent.CompletableFuture;
 
-/**
- * User: lex
- * Date: Dec 19, 2003
- * Time: 1:25:15 PM
- */
-public final class EnumerationChildrenRenderer extends TypeRenderer implements ChildrenRenderer{
+public final class EnumerationChildrenRenderer extends ReferenceRenderer implements ChildrenRenderer {
   public static final @NonNls String UNIQUE_ID = "EnumerationChildrenRenderer";
 
   private boolean myAppendDefaultChildren;
-  private List<Pair<String, TextWithImports>> myChildren;
+  private List<ChildInfo> myChildren;
 
   public static final @NonNls String APPEND_DEFAULT_NAME = "AppendDefault";
   public static final @NonNls String CHILDREN_EXPRESSION = "ChildrenExpression";
   public static final @NonNls String CHILD_NAME = "Name";
+  public static final @NonNls String CHILD_ONDEMAND = "OnDemand";
 
   public EnumerationChildrenRenderer() {
     this(new ArrayList<>());
   }
 
-  public EnumerationChildrenRenderer(List<Pair<String, TextWithImports>> children) {
+  public EnumerationChildrenRenderer(List<ChildInfo> children) {
     super();
     myChildren = children;
   }
@@ -70,30 +58,35 @@ public final class EnumerationChildrenRenderer extends TypeRenderer implements C
     return myAppendDefaultChildren;
   }
 
+  @Override
   public String getUniqueId() {
     return UNIQUE_ID;
   }
 
+  @Override
   public EnumerationChildrenRenderer clone() {
     return (EnumerationChildrenRenderer)super.clone();
   }
 
+  @Override
   public void readExternal(Element element) throws InvalidDataException {
     super.readExternal(element);
 
     myChildren.clear();
 
-    myAppendDefaultChildren = "true".equals(JDOMExternalizerUtil.readField(element, APPEND_DEFAULT_NAME));
+    myAppendDefaultChildren = Boolean.parseBoolean(JDOMExternalizerUtil.readField(element, APPEND_DEFAULT_NAME));
 
     List<Element> children = element.getChildren(CHILDREN_EXPRESSION);
     for (Element item : children) {
       String name = item.getAttributeValue(CHILD_NAME);
-      TextWithImports text = DebuggerUtils.getInstance().readTextWithImports(item.getChildren().get(0));
+      TextWithImports text = DebuggerUtils.getInstance().readTextWithImports(item.getChildren().getFirst());
+      boolean onDemand = Boolean.parseBoolean(item.getAttributeValue(CHILD_ONDEMAND));
 
-      myChildren.add(Pair.create(name, text));
+      myChildren.add(new ChildInfo(name, text, onDemand));
     }
   }
 
+  @Override
   public void writeExternal(Element element) throws WriteExternalException {
     super.writeExternal(element);
 
@@ -101,62 +94,90 @@ public final class EnumerationChildrenRenderer extends TypeRenderer implements C
       JDOMExternalizerUtil.writeField(element, APPEND_DEFAULT_NAME, "true");
     }
 
-    for (Pair<String, TextWithImports> pair : myChildren) {
+    for (ChildInfo childInfo : myChildren) {
       Element child = new Element(CHILDREN_EXPRESSION);
-      child.setAttribute(CHILD_NAME, pair.getFirst());
-      child.addContent(DebuggerUtils.getInstance().writeTextWithImports(pair.getSecond()));
+      child.setAttribute(CHILD_NAME, childInfo.myName);
+      if (childInfo.myOnDemand) {
+        child.setAttribute(CHILD_ONDEMAND, "true");
+      }
+      child.addContent(DebuggerUtils.getInstance().writeTextWithImports(childInfo.myExpression));
 
       element.addContent(child);
     }
   }
 
+  @Override
   public void buildChildren(Value value, ChildrenBuilder builder, EvaluationContext evaluationContext) {
     NodeManager nodeManager = builder.getNodeManager();
     NodeDescriptorFactory descriptorFactory = builder.getDescriptorManager();
 
     List<DebuggerTreeNode> children = new ArrayList<>();
     int idx = 0;
-    for (Pair<String, TextWithImports> pair : myChildren) {
-      UserExpressionData data =
-        new UserExpressionData((ValueDescriptorImpl)builder.getParentDescriptor(), getClassName(), pair.getFirst(), pair.getSecond());
+    for (ChildInfo childInfo : myChildren) {
+      UserExpressionData data = new UserExpressionData((ValueDescriptorImpl)builder.getParentDescriptor(),
+                                                       getClassName(),
+                                                       childInfo.myName,
+                                                       childInfo.myExpression);
       data.setEnumerationIndex(idx++);
-      children.add(nodeManager.createNode(
-        descriptorFactory.getUserExpressionDescriptor(builder.getParentDescriptor(), data), evaluationContext));
+      UserExpressionDescriptor descriptor = descriptorFactory.getUserExpressionDescriptor(builder.getParentDescriptor(), data);
+      XEvaluationOrigin.setOrigin(descriptor, XEvaluationOrigin.RENDERER);
+      if (childInfo.myOnDemand) {
+        descriptor.putUserData(OnDemandRenderer.ON_DEMAND_CALCULATED, false);
+      }
+      children.add(nodeManager.createNode(descriptor, evaluationContext));
     }
-    builder.setChildren(children);
+    builder.addChildren(children, !myAppendDefaultChildren);
 
     if (myAppendDefaultChildren) {
       DebugProcessImpl.getDefaultRenderer(value).buildChildren(value, builder, evaluationContext);
     }
   }
 
+  @Override
   public PsiElement getChildValueExpression(DebuggerTreeNode node, DebuggerContext context) throws EvaluateException {
-    return ((ValueDescriptor) node.getDescriptor()).getDescriptorEvaluation(context);
+    return ((ValueDescriptor)node.getDescriptor()).getDescriptorEvaluation(context);
   }
 
-  public boolean isExpandable(Value value, EvaluationContext evaluationContext, NodeDescriptor parentDescriptor) {
-    return myChildren.size() > 0 ||
-           (myAppendDefaultChildren && DebugProcessImpl.getDefaultRenderer(value).isExpandable(value, evaluationContext, parentDescriptor));
+  @Override
+  public CompletableFuture<Boolean> isExpandableAsync(Value value, EvaluationContext evaluationContext, NodeDescriptor parentDescriptor) {
+    if (!myChildren.isEmpty()) {
+      return CompletableFuture.completedFuture(true);
+    }
+    if (myAppendDefaultChildren) {
+      return DebugProcessImpl.getDefaultRenderer(value).isExpandableAsync(value, evaluationContext, parentDescriptor);
+    }
+    return CompletableFuture.completedFuture(false);
   }
 
-  public List<Pair<String, TextWithImports>> getChildren() {
+  public List<ChildInfo> getChildren() {
     return myChildren;
   }
 
-  public void setChildren(List<Pair<String, TextWithImports>> children) {
+  public void setChildren(List<ChildInfo> children) {
     myChildren = children;
   }
 
-  @Nullable
-  public static EnumerationChildrenRenderer getCurrent(ValueDescriptorImpl valueDescriptor) {
+  public static @Nullable EnumerationChildrenRenderer getCurrent(ValueDescriptorImpl valueDescriptor) {
     Renderer renderer = valueDescriptor.getLastRenderer();
-    if (renderer instanceof CompoundNodeRenderer &&
+    if (renderer instanceof CompoundReferenceRenderer referenceRenderer &&
         NodeRendererSettings.getInstance().getCustomRenderers().contains((NodeRenderer)renderer)) {
-      ChildrenRenderer childrenRenderer = ((CompoundNodeRenderer)renderer).getChildrenRenderer();
-      if (childrenRenderer instanceof EnumerationChildrenRenderer) {
-        return (EnumerationChildrenRenderer)childrenRenderer;
+      ChildrenRenderer childrenRenderer = referenceRenderer.getChildrenRenderer();
+      if (childrenRenderer instanceof EnumerationChildrenRenderer enumerationChildrenRenderer) {
+        return enumerationChildrenRenderer;
       }
     }
     return null;
+  }
+
+  public static class ChildInfo implements Cloneable {
+    public String myName;
+    public TextWithImports myExpression;
+    public boolean myOnDemand;
+
+    public ChildInfo(String name, TextWithImports expression, boolean onDemand) {
+      myName = name;
+      myExpression = expression;
+      myOnDemand = onDemand;
+    }
   }
 }
