@@ -1,33 +1,25 @@
-/*
- * Copyright 2000-2016 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2026 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.execution.configurations;
 
 import com.intellij.execution.CantRunException;
 import com.intellij.execution.ExecutionBundle;
+import com.intellij.execution.JavaExecutionUtil;
 import com.intellij.openapi.actionSystem.DataKey;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.module.Module;
 import com.intellij.openapi.project.Project;
+import com.intellij.openapi.projectRoots.JavaSdkVersion;
+import com.intellij.openapi.projectRoots.JavaSdkVersionUtil;
 import com.intellij.openapi.projectRoots.Sdk;
-import com.intellij.openapi.roots.*;
+import com.intellij.openapi.roots.ModuleRootManager;
+import com.intellij.openapi.roots.NativeLibraryOrderRootType;
+import com.intellij.openapi.roots.OrderEnumerator;
+import com.intellij.openapi.roots.OrderRootType;
+import com.intellij.openapi.roots.OrderRootsEnumerator;
 import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.openapi.vfs.encoding.EncodingProjectManager;
 import com.intellij.openapi.vfs.jrt.JrtFileSystem;
 import com.intellij.util.PathsList;
-import com.intellij.util.text.VersionComparatorUtil;
 import org.intellij.lang.annotations.MagicConstant;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -40,6 +32,8 @@ import java.util.Set;
 public class JavaParameters extends SimpleJavaParameters {
   private static final Logger LOG = Logger.getInstance(JavaParameters.class);
   private static final String JAVA_LIBRARY_PATH_PROPERTY = "java.library.path";
+
+  public static final String JAVA_ENABLE_PREVIEW_PROPERTY = "--enable-preview";
   public static final DataKey<JavaParameters> JAVA_PARAMETERS = DataKey.create("javaParameters");
 
   public String getJdkPath() throws CantRunException {
@@ -58,13 +52,15 @@ public class JavaParameters extends SimpleJavaParameters {
   public static final int JDK_ONLY = 0x1;
   public static final int CLASSES_ONLY = 0x2;
   public static final int TESTS_ONLY = 0x4;
+  public static final int INCLUDE_PROVIDED = 0x8;
   public static final int JDK_AND_CLASSES = JDK_ONLY | CLASSES_ONLY;
   public static final int JDK_AND_CLASSES_AND_TESTS = JDK_ONLY | CLASSES_ONLY | TESTS_ONLY;
   public static final int CLASSES_AND_TESTS = CLASSES_ONLY | TESTS_ONLY;
+  public static final int JDK_AND_CLASSES_AND_PROVIDED = JDK_ONLY | CLASSES_ONLY | INCLUDE_PROVIDED;
 
-  public void configureByModule(final Module module,
-                                @MagicConstant(valuesFromClass = JavaParameters.class) final int classPathType,
-                                final Sdk jdk) throws CantRunException {
+  public void configureByModule(Module module,
+                                @MagicConstant(valuesFromClass = JavaParameters.class) int classPathType,
+                                Sdk jdk) throws CantRunException {
     if ((classPathType & JDK_ONLY) != 0) {
       if (jdk == null) {
         throw CantRunException.noJdkConfigured();
@@ -77,8 +73,27 @@ public class JavaParameters extends SimpleJavaParameters {
     }
 
     setDefaultCharset(module.getProject());
-    configureEnumerator(OrderEnumerator.orderEntries(module).runtimeOnly().recursively(), classPathType, jdk).collectPaths(getClassPath());
+    configureEnumerator(OrderEnumerator.orderEntries(module).recursively(), classPathType, jdk).collectPaths(getClassPath());
     configureJavaLibraryPath(OrderEnumerator.orderEntries(module).recursively());
+    configureJavaEnablePreviewProperty(module, jdk);
+  }
+
+  private void configureJavaEnablePreviewProperty(Module module, Sdk jdk) {
+    if (needsJavaEnablePreviewProperty(jdk) && JavaExecutionUtil.compilesPreviewFeatures(module)) {
+      getVMParametersList().add(JAVA_ENABLE_PREVIEW_PROPERTY);
+    }
+  }
+
+  private void configureJavaEnablePreviewProperty(Project project, Sdk jdk) {
+    if (needsJavaEnablePreviewProperty(jdk) && JavaExecutionUtil.compilesPreviewFeatures(project)) {
+      getVMParametersList().add(JAVA_ENABLE_PREVIEW_PROPERTY);
+    }
+  }
+
+  /** Whether the flag is still missing, and whether the JDK is new enough to accept it. */
+  private boolean needsJavaEnablePreviewProperty(Sdk jdk) {
+    return !getVMParametersList().hasParameter(JAVA_ENABLE_PREVIEW_PROPERTY) &&
+           JavaSdkVersionUtil.isAtLeast(jdk, JavaSdkVersion.JDK_11);
   }
 
   private void configureJavaLibraryPath(OrderEnumerator enumerator) {
@@ -106,26 +121,19 @@ public class JavaParameters extends SimpleJavaParameters {
     configureByModule(module, classPathType, getValidJdkToRunModule(module, (classPathType & TESTS_ONLY) == 0));
   }
 
-  /** @deprecated use {@link #getValidJdkToRunModule(Module, boolean)} instead */
-  public static Sdk getModuleJdk(final Module module) throws CantRunException {
-    return getValidJdkToRunModule(module, false);
-  }
-
-  @NotNull
-  public static Sdk getValidJdkToRunModule(final Module module, boolean productionOnly) throws CantRunException {
+  public static @NotNull Sdk getValidJdkToRunModule(final Module module, boolean productionOnly) throws CantRunException {
     Sdk jdk = getJdkToRunModule(module, productionOnly);
     if (jdk == null) {
       throw CantRunException.noJdkForModule(module);
     }
-    final VirtualFile homeDirectory = jdk.getHomeDirectory();
+    VirtualFile homeDirectory = jdk.getHomeDirectory();
     if (homeDirectory == null || !homeDirectory.isValid()) {
-      throw CantRunException.jdkMisconfigured(jdk, module);
+      throw CantRunException.jdkMisconfigured(jdk);
     }
     return jdk;
   }
 
-  @Nullable
-  public static Sdk getJdkToRunModule(Module module, boolean productionOnly) {
+  public static @Nullable Sdk getJdkToRunModule(Module module, boolean productionOnly) {
     final Sdk moduleSdk = ModuleRootManager.getInstance(module).getSdk();
     if (moduleSdk == null) {
       return null;
@@ -143,18 +151,7 @@ public class JavaParameters extends SimpleJavaParameters {
       }
       return true;
     });
-    return findLatestVersion(moduleSdk, sdksFromDependencies);
-  }
-
-  @NotNull
-  private static Sdk findLatestVersion(@NotNull Sdk mainSdk, @NotNull Set<Sdk> sdks) {
-    Sdk result = mainSdk;
-    for (Sdk sdk : sdks) {
-      if (VersionComparatorUtil.compare(result.getVersionString(), sdk.getVersionString()) < 0) {
-        result = sdk;
-      }
-    }
-    return result;
+    return sdksFromDependencies.stream().max(moduleSdk.getSdkType().versionComparator()).orElse(moduleSdk);
   }
 
   public void configureByProject(Project project,
@@ -173,9 +170,13 @@ public class JavaParameters extends SimpleJavaParameters {
     setDefaultCharset(project);
     configureEnumerator(OrderEnumerator.orderEntries(project).runtimeOnly(), classPathType, jdk).collectPaths(getClassPath());
     configureJavaLibraryPath(OrderEnumerator.orderEntries(project));
+    configureJavaEnablePreviewProperty(project, jdk);
   }
 
   private static OrderRootsEnumerator configureEnumerator(OrderEnumerator enumerator, int classPathType, Sdk jdk) {
+    if ((classPathType & INCLUDE_PROVIDED) == 0) {
+      enumerator = enumerator.runtimeOnly();
+    }
     if ((classPathType & JDK_ONLY) == 0) {
       enumerator = enumerator.withoutSdk();
     }
@@ -184,8 +185,7 @@ public class JavaParameters extends SimpleJavaParameters {
     }
     OrderRootsEnumerator rootsEnumerator = enumerator.classes();
     if ((classPathType & JDK_ONLY) != 0) {
-      rootsEnumerator = rootsEnumerator.usingCustomRootProvider(
-        e -> e instanceof JdkOrderEntry ? jdkRoots(jdk) : e.getFiles(OrderRootType.CLASSES));
+      rootsEnumerator = rootsEnumerator.usingCustomSdkRootProvider(_ -> jdkRoots(jdk));
     }
     return rootsEnumerator;
   }
