@@ -1,19 +1,4 @@
-/*
- * Copyright 2000-2016 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.openapi.roots.ui.configuration.projectRoot;
 
 import com.intellij.CommonBundle;
@@ -21,70 +6,114 @@ import com.intellij.facet.Facet;
 import com.intellij.facet.impl.ProjectFacetsConfigurator;
 import com.intellij.facet.impl.ui.actions.AddFacetToModuleAction;
 import com.intellij.icons.AllIcons;
-import com.intellij.ide.IdeBundle;
+import com.intellij.ide.IdeCoreBundle;
+import com.intellij.ide.JavaUiBundle;
 import com.intellij.ide.highlighter.ModuleFileType;
+import com.intellij.ide.impl.FlattenModulesToggleAction;
 import com.intellij.ide.projectView.impl.ModuleGroup;
-import com.intellij.ide.projectView.impl.ModuleGroupUtil;
+import com.intellij.ide.projectView.impl.ModuleGroupingImplementation;
+import com.intellij.ide.projectView.impl.ModuleGroupingTreeHelper;
 import com.intellij.ide.util.projectWizard.ModuleBuilder;
 import com.intellij.ide.util.projectWizard.NamePathComponent;
 import com.intellij.ide.util.projectWizard.ProjectWizardUtil;
-import com.intellij.openapi.actionSystem.*;
-import com.intellij.openapi.application.ApplicationManager;
-import com.intellij.openapi.components.ServiceManager;
-import com.intellij.openapi.module.*;
+import com.intellij.openapi.actionSystem.ActionManager;
+import com.intellij.openapi.actionSystem.ActionUpdateThread;
+import com.intellij.openapi.actionSystem.AnAction;
+import com.intellij.openapi.actionSystem.AnActionEvent;
+import com.intellij.openapi.actionSystem.IdeActions;
+import com.intellij.openapi.actionSystem.LangDataKeys;
+import com.intellij.openapi.actionSystem.PlatformCoreDataKeys;
+import com.intellij.openapi.actionSystem.Presentation;
+import com.intellij.openapi.actionSystem.Separator;
+import com.intellij.openapi.actionSystem.ToggleAction;
+import com.intellij.openapi.actionSystem.UiDataProvider;
+import com.intellij.openapi.extensions.BaseExtensionPointName;
+import com.intellij.openapi.module.LanguageLevelUtil;
+import com.intellij.openapi.module.ModifiableModuleModel;
+import com.intellij.openapi.module.Module;
+import com.intellij.openapi.module.ModuleConfigurationEditor;
+import com.intellij.openapi.module.ModuleGrouper;
+import com.intellij.openapi.module.ModuleGrouperKt;
+import com.intellij.openapi.module.ModuleManager;
+import com.intellij.openapi.module.ModuleType;
+import com.intellij.openapi.options.Configurable;
 import com.intellij.openapi.options.ConfigurationException;
 import com.intellij.openapi.project.DumbAware;
 import com.intellij.openapi.project.Project;
-import com.intellij.openapi.project.ProjectBundle;
-import com.intellij.openapi.roots.*;
+import com.intellij.openapi.roots.CompilerModuleExtension;
+import com.intellij.openapi.roots.JdkOrderEntry;
+import com.intellij.openapi.roots.LanguageLevelModuleExtension;
+import com.intellij.openapi.roots.LibraryOrderEntry;
+import com.intellij.openapi.roots.ModifiableRootModel;
+import com.intellij.openapi.roots.ModuleRootManager;
+import com.intellij.openapi.roots.ModuleSourceOrderEntry;
+import com.intellij.openapi.roots.OrderEntry;
+import com.intellij.openapi.roots.ProjectRootManager;
 import com.intellij.openapi.roots.impl.ClonableOrderEntry;
 import com.intellij.openapi.roots.impl.ProjectRootManagerImpl;
-import com.intellij.openapi.roots.impl.RootModelImpl;
 import com.intellij.openapi.roots.libraries.Library;
 import com.intellij.openapi.roots.ui.configuration.ClasspathEditor;
 import com.intellij.openapi.roots.ui.configuration.ModuleEditor;
 import com.intellij.openapi.roots.ui.configuration.ModulesConfigurator;
 import com.intellij.openapi.roots.ui.configuration.ProjectStructureConfigurable;
+import com.intellij.openapi.roots.ui.configuration.actions.ChangeModuleNamesAction;
 import com.intellij.openapi.roots.ui.configuration.projectRoot.daemon.LibraryProjectStructureElement;
 import com.intellij.openapi.roots.ui.configuration.projectRoot.daemon.ModuleProjectStructureElement;
 import com.intellij.openapi.roots.ui.configuration.projectRoot.daemon.ProjectStructureDaemonAnalyzer;
 import com.intellij.openapi.roots.ui.configuration.projectRoot.daemon.ProjectStructureElement;
-import com.intellij.openapi.ui.*;
+import com.intellij.openapi.ui.DialogBuilder;
+import com.intellij.openapi.ui.DialogWrapper;
+import com.intellij.openapi.ui.MasterDetailsComponent;
+import com.intellij.openapi.ui.Messages;
+import com.intellij.openapi.ui.NamedConfigurable;
 import com.intellij.openapi.util.ActionCallback;
 import com.intellij.openapi.util.Comparing;
 import com.intellij.openapi.util.NullableComputable;
+import com.intellij.openapi.util.Pair;
 import com.intellij.openapi.util.io.FileUtil;
+import com.intellij.openapi.util.io.NioFiles;
 import com.intellij.openapi.util.text.StringUtil;
-import com.intellij.openapi.vfs.LocalFileSystem;
 import com.intellij.openapi.vfs.VirtualFile;
+import com.intellij.openapi.vfs.VirtualFileManager;
 import com.intellij.openapi.vfs.pointers.VirtualFilePointerManager;
-import com.intellij.openapi.wm.WindowManager;
+import com.intellij.platform.eel.provider.EelProviderUtil;
 import com.intellij.ui.navigation.Place;
-import com.intellij.util.PathUtil;
 import com.intellij.util.PlatformIcons;
+import com.intellij.util.concurrency.ThreadingAssertions;
 import com.intellij.util.containers.ContainerUtil;
 import com.intellij.util.ui.tree.TreeUtil;
+import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NonNls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
+import org.jetbrains.annotations.VisibleForTesting;
 
-import javax.swing.*;
+import javax.swing.JComponent;
 import javax.swing.tree.DefaultMutableTreeNode;
 import javax.swing.tree.DefaultTreeModel;
+import javax.swing.tree.MutableTreeNode;
 import javax.swing.tree.TreeNode;
 import javax.swing.tree.TreePath;
-import java.awt.*;
-import java.util.*;
+import java.io.IOException;
+import java.io.UncheckedIOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.HashSet;
+import java.util.LinkedHashSet;
 import java.util.List;
+import java.util.Set;
+import java.util.function.Predicate;
 
-/**
- * User: anna
- * Date: 02-Jun-2006
- */
-public class ModuleStructureConfigurable extends BaseStructureConfigurable implements Place.Navigator {
+public final class ModuleStructureConfigurable extends BaseStructureConfigurable implements Place.Navigator, Configurable.WithEpDependencies {
   private static final Comparator<MyNode> NODE_COMPARATOR = (o1, o2) -> {
-    final NamedConfigurable configurable1 = o1.getConfigurable();
-    final NamedConfigurable configurable2 = o2.getConfigurable();
+    final NamedConfigurable<?> configurable1 = o1.getConfigurable();
+    final NamedConfigurable<?> configurable2 = o2.getConfigurable();
     if (configurable1.getClass() == configurable2.getClass()) {
       return StringUtil.naturalCompare(o1.getDisplayName(), o2.getDisplayName());
     }
@@ -97,23 +126,28 @@ public class ModuleStructureConfigurable extends BaseStructureConfigurable imple
     if (editableObject2 instanceof Module && editableObject1 instanceof String) return 1;
     if (editableObject1 instanceof Module && editableObject2 instanceof String) return -1;
 
+    if (editableObject2 instanceof Module && editableObject1 instanceof Facet) return 1;
+    if (editableObject1 instanceof Module && editableObject2 instanceof Facet) return -1;
+
     if (editableObject2 instanceof ModuleGroup && editableObject1 instanceof String) return 1;
     if (editableObject1 instanceof ModuleGroup && editableObject2 instanceof String) return -1;
 
     return 0;
   };
 
-  private boolean myPlainMode;
+  private boolean myHideModuleGroups;
+  private boolean myFlattenModules;
 
   private final ModuleManager myModuleManager;
 
-  private final FacetEditorFacadeImpl myFacetEditorFacade = new FacetEditorFacadeImpl(this, TREE_UPDATER);
+  private final FacetEditorFacadeImpl myFacetEditorFacade;
 
   private final List<RemoveConfigurableHandler<?>> myRemoveHandlers;
 
-  public ModuleStructureConfigurable(Project project, ModuleManager manager) {
-    super(project);
-    myModuleManager = manager;
+  public ModuleStructureConfigurable(ProjectStructureConfigurable projectStructureConfigurable) {
+    super(projectStructureConfigurable);
+    myFacetEditorFacade = new FacetEditorFacadeImpl(myProjectStructureConfigurable, TREE_UPDATER);
+    myModuleManager = ModuleManager.getInstance(myProject);
     myRemoveHandlers = new ArrayList<>();
     myRemoveHandlers.add(new ModuleRemoveHandler());
     myRemoveHandlers.add(new FacetInModuleRemoveHandler());
@@ -134,9 +168,19 @@ public class ModuleStructureConfigurable extends BaseStructureConfigurable imple
   }
 
   @Override
+  protected @NotNull String getTextForSpeedSearch(@NotNull MyNode node) {
+    return switch (node) {
+      case ModuleNode moduleNode -> moduleNode.getFullModuleName();
+      case ModuleGroupNodeImpl groupNode -> groupNode.getModuleGroup().getQualifiedName();
+      default -> super.getTextForSpeedSearch(node);
+    };
+  }
+
+  @Override
   protected ArrayList<AnAction> getAdditionalActions() {
     final ArrayList<AnAction> result = new ArrayList<>();
     result.add(ActionManager.getInstance().getAction(IdeActions.GROUP_MOVE_MODULE_TO_GROUP));
+    result.add(new ChangeModuleNamesAction());
     return result;
   }
 
@@ -146,35 +190,36 @@ public class ModuleStructureConfigurable extends BaseStructureConfigurable imple
   }
 
   @Override
-  @NotNull
-  protected ArrayList<AnAction> createActions(final boolean fromPopup) {
+  protected @NotNull ArrayList<AnAction> createActions(final boolean fromPopup) {
     final ArrayList<AnAction> result = super.createActions(fromPopup);
     if (fromPopup) {
       result.add(Separator.getInstance());
-      result.add(new MyGroupAction());
+      result.add(new FlattenModulesToggleAction(myProject, () -> true, () -> myFlattenModules, value -> {
+        myFlattenModules = value;
+        regroupModules();
+      }));
+      result.add(new HideGroupsAction());
       addCollapseExpandActions(result);
     }
     return result;
   }
 
   @Override
-  @NotNull
-  protected List<? extends AnAction> createCopyActions(boolean fromPopup) {
-    return Collections.singletonList(new MyCopyAction());
+  protected @NotNull List<? extends AnAction> createCopyActions(boolean fromPopup) {
+    return List.of(new MyCopyAction());
   }
 
   @Override
   protected void loadTree() {
     createProjectNodes();
 
-    ((DefaultTreeModel)myTree.getModel()).reload();
+    getTreeModel().reload();
 
     myUiDisposed = false;
   }
 
-  @NotNull
   @Override
-  protected Collection<? extends ProjectStructureElement> getProjectStructureElements() {
+  protected @NotNull Collection<? extends ProjectStructureElement> getProjectStructureElements() {
     final List<ProjectStructureElement> result = new ArrayList<>();
     for (Module module : myModuleManager.getModules()) {
       result.add(new ModuleProjectStructureElement(myContext, module));
@@ -183,15 +228,14 @@ public class ModuleStructureConfigurable extends BaseStructureConfigurable imple
   }
 
   @Override
-  protected void updateSelection(@Nullable final NamedConfigurable configurable) {
-    FacetStructureConfigurable.getInstance(myProject).disposeMultipleSettingsEditor();
-    ApplicationManager.getApplication().assertIsDispatchThread();
+  protected void updateSelection(@Nullable NamedConfigurable configurable) {
+    myProjectStructureConfigurable.getFacetStructureConfigurable().disposeMultipleSettingsEditor();
+    ThreadingAssertions.assertEventDispatchThread();
     super.updateSelection(configurable);
     if (configurable != null) {
       updateModuleEditorSelection(configurable);
     }
   }
-
 
   @Override
   protected boolean isAutoScrollEnabled() {
@@ -199,50 +243,37 @@ public class ModuleStructureConfigurable extends BaseStructureConfigurable imple
   }
 
   @Override
-  protected boolean updateMultiSelection(final List<NamedConfigurable> selectedConfigurables) {
-    return FacetStructureConfigurable.getInstance(myProject).updateMultiSelection(selectedConfigurables, getDetailsComponent());
+  protected boolean updateMultiSelection(final List<? extends NamedConfigurable> selectedConfigurables) {
+    return myProjectStructureConfigurable.getFacetStructureConfigurable().updateMultiSelection(selectedConfigurables, getDetailsComponent());
+  }
+
+  @Override
+  public @NotNull Collection<BaseExtensionPointName<?>> getDependencies() {
+    return List.of(ModuleStructureExtension.EP_NAME);
   }
 
   private void updateModuleEditorSelection(final NamedConfigurable configurable) {
-    if (configurable instanceof ModuleConfigurable){
-      final ModuleConfigurable moduleConfigurable = (ModuleConfigurable)configurable;
+    if (configurable instanceof ModuleConfigurable moduleConfigurable) {
       final ModuleEditor editor = moduleConfigurable.getModuleEditor();
       if (editor != null) { //already deleted
         editor.init(myHistory);
       }
     }
-    if (configurable instanceof FacetConfigurable) {
-      ((FacetConfigurable)configurable).getEditor().onFacetSelected();
+    if (configurable instanceof FacetConfigurable facetConfigurable) {
+      facetConfigurable.getEditor().onFacetSelected();
     }
   }
 
-
-
   private void createProjectNodes() {
-    final Map<ModuleGroup, MyNode> moduleGroup2NodeMap = new HashMap<>();
-    final Module[] modules = myModuleManager.getModules();
-    for (final Module module : modules) {
-      ModuleConfigurable configurable = new ModuleConfigurable(myContext.myModulesConfigurator, module, TREE_UPDATER);
-      final MyNode moduleNode = new MyNode(configurable);
-      boolean nodesAdded = myFacetEditorFacade.addFacetsNodes(module, moduleNode);
-      nodesAdded |= addNodesFromExtensions(module, moduleNode);
-      if (nodesAdded) {
-        myTree.setShowsRootHandles(true);
-      }
-      final String[] groupPath = myPlainMode ? null : myContext.myModulesConfigurator.getModuleModel().getModuleGroupPath(module);
-      if (groupPath == null || groupPath.length == 0){
-        myRoot.add(moduleNode);
-      }
-      else {
-        final MyNode moduleGroupNode = ModuleGroupUtil
-          .buildModuleGroupPath(new ModuleGroup(groupPath), myRoot, moduleGroup2NodeMap,
-                                parentChildRelation -> parentChildRelation.getParent().add(parentChildRelation.getChild()),
-                                moduleGroup -> {
-                                  final NamedConfigurable moduleGroupConfigurable = createModuleGroupConfigurable(moduleGroup);
-                                  return new MyNode(moduleGroupConfigurable, true);
-                                });
-        moduleGroupNode.add(moduleNode);
-      }
+    ModuleGrouper moduleGrouper = getModuleGrouper();
+    ModuleGroupingTreeHelper<Module, MyNode> helper = ModuleGroupingTreeHelper.forEmptyTree(!myHideModuleGroups && !myFlattenModules,
+                                                                                    ModuleGroupingTreeHelper.createDefaultGrouping(moduleGrouper),
+                                                                                    ModuleStructureConfigurable::createModuleGroupNode,
+                                                                                    m -> createModuleNode(m, moduleGrouper), getNodeComparator());
+    var modules = Arrays.stream(myModuleManager.getModules()).toList();
+    helper.createModuleNodes(modules, myRoot, getTreeModel());
+    if (containsSecondLevelNodes(myRoot)) {
+      myTree.setShowsRootHandles(true);
     }
     sortDescendants(myRoot);
     if (myProject.isDefault()) {  //do not add modules node in case of template project
@@ -250,11 +281,35 @@ public class ModuleStructureConfigurable extends BaseStructureConfigurable imple
     }
 
     addRootNodesFromExtensions(myRoot, myProject);
-    //final LibraryTable table = LibraryTablesRegistrar.getInstance().getLibraryTable(myProject);
-    //final LibrariesModifiableModel projectLibrariesProvider = new LibrariesModifiableModel(table);
-    //myLevel2Providers.put(LibraryTablesRegistrar.PROJECT_LEVEL, projectLibrariesProvider);
-    //
-    //myProjectNode.add(myLevel2Nodes.get(LibraryTablesRegistrar.PROJECT_LEVEL));
+  }
+
+  private static boolean containsSecondLevelNodes(TreeNode rootNode) {
+    int count = rootNode.getChildCount();
+    for (int i = 0; i < count; i++) {
+      TreeNode child = rootNode.getChildAt(i);
+      if (child.getChildCount() > 0) {
+        return true;
+      }
+    }
+    return false;
+  }
+
+  private @NotNull ModuleNode createModuleNode(Module module, ModuleGrouper moduleGrouper) {
+    ModuleConfigurable configurable = new ModuleConfigurable(myContext.myModulesConfigurator, module, TREE_UPDATER, moduleGrouper);
+    List<String> groupPath = moduleGrouper.getModuleAsGroupPath(module);
+    ModuleNode node = new ModuleNode(configurable, groupPath != null ? new ModuleGroup(groupPath) : null);
+    myFacetEditorFacade.addFacetsNodes(module, node);
+    addNodesFromExtensions(module, node);
+    return node;
+  }
+
+  private static @NotNull MyNode createModuleGroupNode(ModuleGroup moduleGroup) {
+    final NamedConfigurable<?> moduleGroupConfigurable = new TextConfigurable<>(moduleGroup, moduleGroup.toString(),
+                                                                                JavaUiBundle.message("module.group.banner.text",
+                                                                                                      moduleGroup.toString()),
+                                                                                JavaUiBundle.message("project.roots.module.groups.text"),
+                                                                                PlatformIcons.CLOSED_MODULE_GROUP_ICON);
+    return new ModuleGroupNodeImpl(moduleGroupConfigurable, moduleGroup);
   }
 
   private void addRootNodesFromExtensions(final MyNode root, final Project project) {
@@ -263,50 +318,46 @@ public class ModuleStructureConfigurable extends BaseStructureConfigurable imple
     }
   }
 
-  private boolean addNodesFromExtensions(final Module module, final MyNode moduleNode) {
-    boolean nodesAdded = false;
+  private void addNodesFromExtensions(final Module module, final MyNode moduleNode) {
     for (final ModuleStructureExtension extension : ModuleStructureExtension.EP_NAME.getExtensions()) {
-      nodesAdded |= extension.addModuleNodeChildren(module, moduleNode, TREE_UPDATER);
+      extension.addModuleNodeChildren(module, moduleNode, TREE_UPDATER);
     }
-    return nodesAdded;
   }
 
-  public boolean updateProjectTree(final Module[] modules, final ModuleGroup group) {
+  public boolean updateProjectTree(final Module[] modules) {
     if (myRoot.getChildCount() == 0) return false; //isn't visible
-    final MyNode [] nodes = new MyNode[modules.length];
-    int i = 0;
+    List<Pair<MyNode, Module>> nodes = new ArrayList<>(modules.length);
+    Set<MyNode> nodeSet = new HashSet<>();
     for (Module module : modules) {
       MyNode node = findModuleNode(module);
       LOG.assertTrue(node != null, "Module " + module.getName() + " is not in project.");
-      node.removeFromParent();
-      nodes[i ++] = node;
+      nodes.add(Pair.create(node, module));
+      nodeSet.add(node);
     }
-    for (final MyNode moduleNode : nodes) {
-      final String[] groupPath = myPlainMode
-                                 ? null
-                                 : group != null ? group.getGroupPath() : null;
-      if (groupPath == null || groupPath.length == 0){
-        myRoot.add(moduleNode);
-      } else {
-        final MyNode moduleGroupNode = ModuleGroupUtil
-          .updateModuleGroupPath(new ModuleGroup(groupPath), myRoot, group1 -> findNodeByObject(myRoot, group1), parentChildRelation -> parentChildRelation.getParent().add(parentChildRelation.getChild()), moduleGroup -> {
-            final NamedConfigurable moduleGroupConfigurable = createModuleGroupConfigurable(moduleGroup);
-            return new MyNode(moduleGroupConfigurable, true);
-          });
-        moduleGroupNode.add(moduleNode);
-      }
-      Module module = (Module)moduleNode.getConfigurable().getEditableObject();
-      myFacetEditorFacade.addFacetsNodes(module, moduleNode);
-      addNodesFromExtensions(module, moduleNode);
-    }
-    sortDescendants(myRoot);
+    ModuleGroupingTreeHelper<Module, MyNode> helper = createGroupingHelper(nodeSet::contains);
+    helper.moveModuleNodesToProperGroup(nodes, myRoot, getTreeModel(), myTree);
     return true;
+  }
+
+  private DefaultTreeModel getTreeModel() {
+    return (DefaultTreeModel)myTree.getModel();
+  }
+
+  private @NotNull ModuleGroupingTreeHelper<Module, MyNode> createGroupingHelper(Predicate<? super MyNode> nodeToBeMovedFilter) {
+    ModuleGrouper grouper = getModuleGrouper();
+    ModuleGroupingImplementation<Module> grouping = ModuleGroupingTreeHelper.createDefaultGrouping(grouper);
+    return ModuleGroupingTreeHelper.forTree(myRoot, node -> node instanceof ModuleGroupNode ? ((ModuleGroupNode)node).getModuleGroup() : null,
+                                            node -> node instanceof ModuleNode ? ((ModuleNode)node).getModule() : null,
+                                            !myHideModuleGroups && !myFlattenModules,
+                                            grouping, ModuleStructureConfigurable::createModuleGroupNode,
+                                            module -> createModuleNode(module, grouper), getNodeComparator(),
+                                            node -> nodeToBeMovedFilter.test(node));
   }
 
   @Override
   protected Comparator<MyNode> getNodeComparator() {
     List<Comparator<MyNode>> comparators = ContainerUtil
-      .mapNotNull(ModuleStructureExtension.EP_NAME.getExtensions(), moduleStructureExtension -> moduleStructureExtension.getNodeComparator());
+      .mapNotNull(ModuleStructureExtension.EP_NAME.getExtensions(), ModuleStructureExtension::getNodeComparator);
     return new MergingComparator<>(ContainerUtil.concat(comparators, Collections.singletonList(NODE_COMPARATOR)));
   }
 
@@ -317,21 +368,15 @@ public class ModuleStructureConfigurable extends BaseStructureConfigurable imple
     addItemsChangeListener(new ItemsChangeListener() {
       @Override
       public void itemChanged(@Nullable Object deletedItem) {
-        if (deletedItem instanceof Library) {
-          final Library library = (Library)deletedItem;
+        if (deletedItem instanceof Library library) {
           final MyNode node = findNodeByObject(myRoot, library);
           if (node != null) {
             final TreeNode parent = node.getParent();
             node.removeFromParent();
-            ((DefaultTreeModel)myTree.getModel()).reload(parent);
+            getTreeModel().reload(parent);
           }
           myContext.getDaemonAnalyzer().removeElement(new LibraryProjectStructureElement(myContext, library));
         }
-      }
-
-      @Override
-      public void itemsExternallyChanged() {
-        //do nothing
       }
     });
   }
@@ -346,8 +391,8 @@ public class ModuleStructureConfigurable extends BaseStructureConfigurable imple
 
   @Override
   public void apply() throws ConfigurationException {
-    checkForEmptyAndDuplicatedNames(ProjectBundle.message("rename.message.prefix.module"),
-                                    ProjectBundle.message("rename.module.title"), ModuleConfigurable.class);
+    checkForEmptyAndDuplicatedNames(JavaUiBundle.message("rename.message.prefix.module"),
+                                    JavaUiBundle.message("rename.module.title"), ModuleConfigurable.class);
 
     // let's apply extensions first, since they can write to/commit modifiable models
     for (final ModuleStructureExtension extension : ModuleStructureExtension.EP_NAME.getExtensions()) {
@@ -395,31 +440,23 @@ public class ModuleStructureConfigurable extends BaseStructureConfigurable imple
   @Override
   public void dispose() {}
 
-
   @Override
-  public JComponent createComponent() {
-    return new MyDataProviderWrapper(super.createComponent());
-  }
-
-  @Override
-  protected void processRemovedItems() {
-    // do nothing
-  }
-
-  @Override
-  protected boolean wasObjectStored(Object editableObject) {
-    return false;
+  public @NotNull JComponent createComponent() {
+    return UiDataProvider.wrapComponent(super.createComponent(), sink -> {
+      sink.set(LangDataKeys.MODULE_CONTEXT_ARRAY, getModuleContexts());
+      sink.set(LangDataKeys.MODULE_CONTEXT, getSelectedModule());
+      sink.set(LangDataKeys.MODIFIABLE_MODULE_MODEL, myContext.myModulesConfigurator.getModuleModel());
+      sink.set(PlatformCoreDataKeys.SELECTED_ITEM, getSelectedObject());
+    });
   }
 
   @Override
   public String getDisplayName() {
-    return ProjectBundle.message("project.roots.display.name");
+    return JavaUiBundle.message("project.roots.display.name");
   }
 
   @Override
-  @Nullable
-  @NonNls
-  public String getHelpTopic() {
+  public @NonNls @NotNull String getHelpTopic() {
     final String topic = super.getHelpTopic();
     if (topic != null) {
       return topic;
@@ -427,7 +464,7 @@ public class ModuleStructureConfigurable extends BaseStructureConfigurable imple
     return "reference.settingsdialog.project.structure.module";
   }
 
-  public ActionCallback selectOrderEntry(@NotNull final Module module, @Nullable final OrderEntry orderEntry) {
+  public ActionCallback selectOrderEntry(@NotNull Module module, @Nullable OrderEntry orderEntry) {
     for (final ModuleStructureExtension extension : ModuleStructureExtension.EP_NAME.getExtensions()) {
       final ActionCallback callback = extension.selectOrderEntry(module, orderEntry);
       if (callback != null) {
@@ -442,24 +479,23 @@ public class ModuleStructureConfigurable extends BaseStructureConfigurable imple
     final MasterDetailsComponent.MyNode node = findModuleNode(module);
     if (node != null) {
       p.putPath(TREE_OBJECT, module);
-      p.putPath(ModuleEditor.SELECTED_EDITOR_NAME, ClasspathEditor.NAME);
+      p.putPath(ModuleEditor.SELECTED_EDITOR_NAME, ClasspathEditor.getName());
       r = () -> {
         if (orderEntry != null) {
           ModuleEditor moduleEditor = ((ModuleConfigurable)node.getConfigurable()).getModuleEditor();
-          ModuleConfigurationEditor editor = moduleEditor.getEditor(ClasspathEditor.NAME);
+          ModuleConfigurationEditor editor = moduleEditor.getEditor(ClasspathEditor.getName());
           if (editor instanceof ClasspathEditor) {
             ((ClasspathEditor)editor).selectOrderEntry(orderEntry);
           }
         }
       };
     }
-    final ActionCallback result = ProjectStructureConfigurable.getInstance(myProject).navigateTo(p, true);
+    final ActionCallback result = myProjectStructureConfigurable.navigateTo(p, true);
     return r != null ? result.doWhenDone(r) : result;
   }
 
-
-  public static ModuleStructureConfigurable getInstance(final Project project) {
-    return ServiceManager.getService(project, ModuleStructureConfigurable.class);
+  private ModuleGrouper getModuleGrouper() {
+    return ModuleGrouper.instanceFor(myProject, myContext.myModulesConfigurator.getModuleModel());
   }
 
   public Project getProject() {
@@ -470,7 +506,8 @@ public class ModuleStructureConfigurable extends BaseStructureConfigurable imple
     if (myContext.myModulesConfigurator != null) {
       final ModifiableModuleModel model = myContext.myModulesConfigurator.getModuleModel();
       return model.getModules();
-    } else {
+    }
+    else {
       return myModuleManager.getModules();
     }
   }
@@ -492,17 +529,15 @@ public class ModuleStructureConfigurable extends BaseStructureConfigurable imple
   }
 
   public void addLibraryOrderEntry(final Module module, final Library library) {
-    Component parent = WindowManager.getInstance().suggestParentWindow(module.getProject());
-
     final ModuleEditor moduleEditor = myContext.myModulesConfigurator.getModuleEditor(module);
     LOG.assertTrue(moduleEditor != null, "Current module editor was not initialized");
     final ModifiableRootModel modelProxy = moduleEditor.getModifiableRootModelProxy();
     final OrderEntry[] entries = modelProxy.getOrderEntries();
     for (OrderEntry entry : entries) {
       if (entry instanceof LibraryOrderEntry && Comparing.strEqual(entry.getPresentableName(), library.getName())) {
-        if (Messages.showYesNoDialog(parent,
-                                     ProjectBundle.message("project.roots.replace.library.entry.message", entry.getPresentableName()),
-                                     ProjectBundle.message("project.roots.replace.library.entry.title"),
+        if (Messages.showYesNoDialog(module.getProject(),
+                                     JavaUiBundle.message("project.roots.replace.library.entry.message", entry.getPresentableName()),
+                                     JavaUiBundle.message("project.roots.replace.library.entry.title"),
                                      Messages.getInformationIcon()) == Messages.YES) {
           modelProxy.removeOrderEntry(entry);
           break;
@@ -514,8 +549,7 @@ public class ModuleStructureConfigurable extends BaseStructureConfigurable imple
     myTree.repaint();
   }
 
-  @Nullable
-  public MyNode findModuleNode(final Module module) {
+  public @Nullable MyNode findModuleNode(final Module module) {
     return findNodeByObject(myRoot, module);
   }
 
@@ -527,47 +561,74 @@ public class ModuleStructureConfigurable extends BaseStructureConfigurable imple
     return myContext.myModulesConfigurator.getFacetsConfigurator();
   }
 
-  private void addModule(boolean anImport) {
-    final List<Module> modules = myContext.myModulesConfigurator.addModule(myTree, anImport);
-    if (modules != null) {
+  private void addModule(boolean anImport, boolean detectModuleBase) {
+    final List<Module> modules;
+    if (anImport) {
+      modules = myContext.myModulesConfigurator.addImportModule(myTree);
+    } else {
+      // If the user creates a module when selecting an existing module in the project structure dialog,
+      //   they may expect that the new module "will be located under the selected one".
+      // This is not completely correct from the project model point of view, as the modules cannot be located under each other,
+      //   but from the user perspective it makes sense.
+      //
+      // So, here we take the first content root of the selected module and use it as the base path for the new module.
+      // In the majority of cases, there is only one content root, so the new module will be located there.
+      // If there are multiple content roots, it still makes sense to place the new module under some of them.
+      //
+      // The base path is detected only if the add action was executed from the tree context action. If it was executed from the "plus"
+      //   button, we don't detect the module base.
+      String basePath = null;
+      if (detectModuleBase) {
+        Module selectedModule = getSelectedModule();
+        if (selectedModule != null) {
+          VirtualFile file = Arrays.stream(ModuleRootManager.getInstance(selectedModule).getContentRoots()).findFirst().orElse(null);
+          if (file != null) {
+            basePath = file.getPath();
+          }
+        }
+      }
+      modules = myContext.myModulesConfigurator.addNewModule(basePath);
+    }
+    if (modules != null && !modules.isEmpty()) {
+      //new module wizard may add yet another SDK to the project
+      myProjectStructureConfigurable.getProjectJdksModel().syncSdks(EelProviderUtil.getEelMachine(myProject));
       for (Module module : modules) {
         addModuleNode(module);
       }
     }
   }
 
-  private void addModuleNode(final Module module) {
-    final MyNode node = new MyNode(new ModuleConfigurable(myContext.myModulesConfigurator, module, TREE_UPDATER));
+  private void addModuleNode(@NotNull Module module) {
     final TreePath selectionPath = myTree.getSelectionPath();
     MyNode parent = null;
     if (selectionPath != null) {
       MyNode selected = (MyNode)selectionPath.getLastPathComponent();
       final Object o = selected.getConfigurable().getEditableObject();
       if (o instanceof ModuleGroup) {
-        myContext.myModulesConfigurator.getModuleModel().setModuleGroupPath(module, ((ModuleGroup)o).getGroupPath());
+        if (!ModuleGrouperKt.isQualifiedModuleNamesEnabled(module.getProject())) {
+          myContext.myModulesConfigurator.getModuleModel().setModuleGroupPath(module, ((ModuleGroup)o).getGroupPath());
+        }
         parent = selected;
-      } else if (o instanceof Module) { //create near selected
+      }
+      else if (o instanceof Module) { //create near selected
         final ModifiableModuleModel modifiableModuleModel = myContext.myModulesConfigurator.getModuleModel();
         final String[] groupPath = modifiableModuleModel.getModuleGroupPath((Module)o);
         if (groupPath != null) {
           modifiableModuleModel.setModuleGroupPath(module, groupPath);
-          parent = findNodeByObject(myRoot, new ModuleGroup(groupPath));
+          parent = findNodeByObject(myRoot, new ModuleGroup(Arrays.asList(groupPath)));
         }
       }
     }
     if (parent == null) parent = myRoot;
-    addNode(node, parent);
-    myFacetEditorFacade.addFacetsNodes(module, node);
-    addNodesFromExtensions(module, node);
-    ((DefaultTreeModel)myTree.getModel()).reload(parent);
+    MyNode node = createModuleNode(module, getModuleGrouper());
+    TreeUtil.insertNode(node, parent, getTreeModel(), getNodeComparator());
     selectNodeInTree(node);
     final ProjectStructureDaemonAnalyzer daemonAnalyzer = myContext.getDaemonAnalyzer();
     daemonAnalyzer.queueUpdate(new ModuleProjectStructureElement(myContext, module));
     daemonAnalyzer.queueUpdateForAllElementsWithErrors(); //missing modules added
   }
 
-  @Nullable
-  public Module getSelectedModule() {
+  public @Nullable Module getSelectedModule() {
     final Object selectedObject = getSelectedObject();
     if (selectedObject instanceof Module) {
       return (Module)selectedObject;
@@ -582,30 +643,22 @@ public class ModuleStructureConfigurable extends BaseStructureConfigurable imple
   }
 
   @Override
-  @NotNull
-  @NonNls
-  public String getId() {
+  public @NotNull @NonNls String getId() {
     return "project.structure";
   }
 
-  @Nullable
-  public Module getModule(final String moduleName) {
+  public @Nullable Module getModule(final String moduleName) {
     if (moduleName == null) return null;
-    return (myContext != null && myContext.myModulesConfigurator != null) ? myContext.myModulesConfigurator.getModule(moduleName) : myModuleManager.findModuleByName(moduleName);
+    return myContext != null && myContext.myModulesConfigurator != null
+           ? myContext.myModulesConfigurator.getModule(moduleName)
+           : myModuleManager.findModuleByName(moduleName);
   }
 
   public StructureConfigurableContext getContext() {
     return myContext;
   }
 
-  private static TextConfigurable<ModuleGroup> createModuleGroupConfigurable(final ModuleGroup moduleGroup) {
-    return new TextConfigurable<>(moduleGroup, moduleGroup.toString(),
-                                  ProjectBundle.message("module.group.banner.text", moduleGroup.toString()),
-                                  ProjectBundle.message("project.roots.module.groups.text"),
-                                  PlatformIcons.CLOSED_MODULE_GROUP_ICON);
-  }
-
-  private boolean canBeCopiedByExtension(final NamedConfigurable configurable) {
+  private static boolean canBeCopiedByExtension(final NamedConfigurable<?> configurable) {
     for (final ModuleStructureExtension extension : ModuleStructureExtension.EP_NAME.getExtensions()) {
       if (extension.canBeCopied(configurable)) {
         return true;
@@ -614,42 +667,144 @@ public class ModuleStructureConfigurable extends BaseStructureConfigurable imple
     return false;
   }
 
-  private void copyByExtension(final NamedConfigurable configurable) {
+  private void copyByExtension(final NamedConfigurable<?> configurable) {
     for (final ModuleStructureExtension extension : ModuleStructureExtension.EP_NAME.getExtensions()) {
       extension.copy(configurable, TREE_UPDATER);
     }
   }
 
+  private class ModuleNode extends MyNode implements ModuleGroupNode {
+    private final ModuleGroup myModuleAsGroup;
+
+    ModuleNode(@NotNull ModuleConfigurable configurable, @Nullable ModuleGroup moduleAsGroup) {
+      super(configurable);
+      myModuleAsGroup = moduleAsGroup;
+    }
+
+    @Override
+    public ModuleGroup getModuleGroup() {
+      return myModuleAsGroup;
+    }
+
+    @Override
+    public @NotNull String getDisplayName() {
+      if (myFlattenModules) {
+        return getFullModuleName();
+      }
+      String parentGroupName = null;
+      if (parent instanceof ModuleGroupNode) {
+        ModuleGroup group = ((ModuleGroupNode)parent).getModuleGroup();
+        if (group != null) {
+          parentGroupName = group.getQualifiedName();
+        }
+      }
+      return getModuleGrouper().getShortenedName(getModule(), parentGroupName);
+    }
+
+    private @NotNull String getFullModuleName() {
+      return myContext.myModulesConfigurator.getModuleModel().getActualName(getModule());
+    }
+
+    private ModuleGrouper getModuleGrouper() {
+      return getConfigurable().getModuleGrouper();
+    }
+
+    @Override
+    public ModuleConfigurable getConfigurable() {
+      return (ModuleConfigurable)super.getConfigurable();
+    }
+
+    private Module getModule() {
+      return getConfigurable().getModule();
+    }
+
+    @Override
+    protected void reloadNode(DefaultTreeModel treeModel) {
+      boolean autoScrollWasEnabled = myAutoScrollEnabled;
+      try {
+        myAutoScrollEnabled = false;
+        ModuleGroupingTreeHelper<Module, MyNode> helper = createGroupingHelper(Predicate.isEqual(this));
+        MyNode newNode = helper.moveModuleNodeToProperGroup(this, getModule(), myRoot, treeModel, myTree);
+        treeModel.reload(newNode);
+      }
+      finally {
+        myAutoScrollEnabled = autoScrollWasEnabled;
+      }
+    }
+  }
+
+  private interface ModuleGroupNode extends MutableTreeNode {
+    @Nullable
+    ModuleGroup getModuleGroup();
+  }
+
+  private static class ModuleGroupNodeImpl extends MyNode implements ModuleGroupNode {
+    private final ModuleGroup myModuleGroup;
+
+    ModuleGroupNodeImpl(@NotNull NamedConfigurable configurable, @NotNull ModuleGroup moduleGroup) {
+      super(configurable, true);
+      myModuleGroup = moduleGroup;
+    }
+
+    @Override
+    public @NotNull String getDisplayName() {
+      List<String> parentGroupPath;
+      if (parent instanceof ModuleGroupNode) {
+        ModuleGroup parentGroup = ((ModuleGroupNode)parent).getModuleGroup();
+        parentGroupPath = parentGroup != null ? parentGroup.getGroupPathList() : Collections.emptyList();
+      }
+      else {
+        parentGroupPath = Collections.emptyList();
+      }
+      List<String> groupPath = myModuleGroup.getGroupPathList();
+      if (ContainerUtil.startsWith(groupPath, parentGroupPath)) {
+        return StringUtil.join(groupPath.subList(parentGroupPath.size(), groupPath.size()), ".");
+      }
+      else {
+        return StringUtil.join(groupPath, ".");
+      }
+    }
+
+    @Override
+    public @NotNull ModuleGroup getModuleGroup() {
+      return myModuleGroup;
+    }
+  }
+
   private class FacetInModuleRemoveHandler extends RemoveConfigurableHandler<Facet> {
-    public FacetInModuleRemoveHandler() {
+    FacetInModuleRemoveHandler() {
       super(FacetConfigurable.class);
     }
 
     @Override
-    public boolean remove(@NotNull Collection<Facet> facets) {
-      for (Facet facet : facets) {
+    public boolean remove(@NotNull Collection<? extends Facet> facets) {
+      for (Facet<?> facet : facets) {
         List<Facet> removed = myContext.myModulesConfigurator.getFacetsConfigurator().removeFacet(facet);
-        FacetStructureConfigurable.getInstance(myProject).removeFacetNodes(removed);
+        myProjectStructureConfigurable.getFacetStructureConfigurable().removeFacetNodes(removed);
       }
       return true;
     }
   }
 
   private class ModuleRemoveHandler extends RemoveConfigurableHandler<Module> {
-    public ModuleRemoveHandler() {
+    ModuleRemoveHandler() {
       super(ModuleConfigurable.class);
     }
 
     @Override
-    public boolean remove(@NotNull Collection<Module> modules) {
+    public boolean remove(@NotNull Collection<? extends Module> modules) {
       ModulesConfigurator modulesConfigurator = myContext.myModulesConfigurator;
-      List<Module> deleted = modulesConfigurator.deleteModules(modules);
-      if (deleted.isEmpty()) {
-        return false;
-      }
-      for (Module module : deleted) {
+      List<ModuleEditor> moduleEditors = ContainerUtil.mapNotNull(modules, modulesConfigurator::getModuleEditor);
+      if (moduleEditors.isEmpty()) return false;
+      if (!modulesConfigurator.canDeleteModules(moduleEditors)) return false;
+
+      List<Module> modulesToDelete = ContainerUtil.mapNotNull(moduleEditors, ModuleEditor::getModule);
+      for (Module module : modulesToDelete) {
         List<Facet> removed = modulesConfigurator.getFacetsConfigurator().removeAllFacets(module);
-        FacetStructureConfigurable.getInstance(myProject).removeFacetNodes(removed);
+        myProjectStructureConfigurable.getFacetStructureConfigurable().removeFacetNodes(removed);
+      }
+      modulesConfigurator.deleteModules(moduleEditors);
+      for (Module module : modulesToDelete) {
         myContext.getDaemonAnalyzer().removeElement(new ModuleProjectStructureElement(myContext, module));
 
         for (final ModuleStructureExtension extension : ModuleStructureExtension.EP_NAME.getExtensions()) {
@@ -660,57 +815,44 @@ public class ModuleStructureConfigurable extends BaseStructureConfigurable imple
     }
   }
 
-  private class MyDataProviderWrapper extends JPanel implements DataProvider {
-    public MyDataProviderWrapper(final JComponent component) {
-      super(new BorderLayout());
-      add(component, BorderLayout.CENTER);
-    }
-
-    @Override
-    @Nullable
-    public Object getData(@NonNls String dataId) {
-      if (DataKeys.MODULE_CONTEXT_ARRAY.is(dataId)){
-        final TreePath[] paths = myTree.getSelectionPaths();
-        if (paths != null) {
-          ArrayList<Module> modules = new ArrayList<>();
-          for (TreePath path : paths) {
-            MyNode node = (MyNode)path.getLastPathComponent();
-            final NamedConfigurable configurable = node.getConfigurable();
-            LOG.assertTrue(configurable != null, "already disposed");
-            final Object o = configurable.getEditableObject();
-            if (o instanceof Module) {
-              modules.add((Module)o);
+  private Module @Nullable [] getModuleContexts() {
+    final TreePath[] paths = myTree.getSelectionPaths();
+    Set<Module> modules = new LinkedHashSet<>();
+    if (paths != null) {
+      for (TreePath path : paths) {
+        MyNode node = (MyNode)path.getLastPathComponent();
+        final NamedConfigurable<?> configurable = node.getConfigurable();
+        LOG.assertTrue(configurable != null, "already disposed");
+        final Object o = configurable.getEditableObject();
+        if (o instanceof Module) {
+          modules.add((Module)o);
+        }
+        else if (node instanceof ModuleGroupNode && ((ModuleGroupNode)node).getModuleGroup() != null) {
+          TreeUtil.treeNodeTraverser(node).forEach(descendant -> {
+            if (descendant instanceof MyNode) {
+              Object object = ((MyNode)descendant).getConfigurable().getEditableObject();
+              if (object instanceof Module) {
+                modules.add((Module)object);
+              }
             }
-          }
-          return !modules.isEmpty() ? modules.toArray(new Module[modules.size()]) : null;
+          });
         }
       }
-      if (DataKeys.MODULE_CONTEXT.is(dataId)){
-        return getSelectedModule();
-      }
-      if (LangDataKeys.MODIFIABLE_MODULE_MODEL.is(dataId)){
-        return myContext.myModulesConfigurator.getModuleModel();
-      }
-
-      return null;
     }
+    return !modules.isEmpty() ? modules.toArray(Module.EMPTY_ARRAY) : null;
   }
 
-
-  private class MyGroupAction extends ToggleAction implements DumbAware {
-
-    public MyGroupAction() {
+  private class HideGroupsAction extends ToggleAction implements DumbAware {
+    HideGroupsAction() {
       super("", "", AllIcons.ObjectBrowser.CompactEmptyPackages);
     }
 
     @Override
-    public void update(final AnActionEvent e) {
+    public void update(final @NotNull AnActionEvent e) {
       super.update(e);
       final Presentation presentation = e.getPresentation();
-      String text = ProjectBundle.message("project.roots.plain.mode.action.text.disabled");
-      if (myPlainMode){
-        text = ProjectBundle.message("project.roots.plain.mode.action.text.enabled");
-      }
+      String text = JavaUiBundle
+        .message(myHideModuleGroups ? "project.roots.plain.mode.action.text.enabled" : "project.roots.plain.mode.action.text.disabled");
       presentation.setText(text);
       presentation.setDescription(text);
 
@@ -720,64 +862,53 @@ public class ModuleStructureConfigurable extends BaseStructureConfigurable imple
     }
 
     @Override
-    public boolean isSelected(AnActionEvent e) {
-      return myPlainMode;
+    public @NotNull ActionUpdateThread getActionUpdateThread() {
+      return ActionUpdateThread.EDT;
     }
 
     @Override
-    public void setSelected(AnActionEvent e, boolean state) {
-      myPlainMode = state;
-      DefaultMutableTreeNode selection = null;
-      final TreePath selectionPath = myTree.getSelectionPath();
-      if (selectionPath != null){
-        selection = (DefaultMutableTreeNode)selectionPath.getLastPathComponent();
-      }
-      final ModifiableModuleModel model = myContext.myModulesConfigurator.getModuleModel();
-      final Module[] modules = model.getModules();
-      for (Module module : modules) {
-        final String[] groupPath = model.getModuleGroupPath(module);
-        updateProjectTree(new Module[]{module}, groupPath != null ? new ModuleGroup(groupPath) : null);
-      }
-      if (state) {
-        removeModuleGroups();
-      }
-      if (selection != null){
-        TreeUtil.selectInTree(selection, true, myTree);
-      }
+    public boolean isSelected(@NotNull AnActionEvent e) {
+      return myHideModuleGroups;
     }
 
-    private void removeModuleGroups() {
-      for(int i = myRoot.getChildCount() - 1; i >=0; i--){
-        final MyNode node = (MyNode)myRoot.getChildAt(i);
-        if (node.getConfigurable().getEditableObject() instanceof ModuleGroup){
-          node.removeFromParent();
-        }
-      }
-      ((DefaultTreeModel)myTree.getModel()).reload(myRoot);
+    @Override
+    public void setSelected(@NotNull AnActionEvent e, boolean state) {
+      myHideModuleGroups = state;
+      regroupModules();
+    }
+  }
+
+  private void regroupModules() {
+    DefaultMutableTreeNode selection = null;
+    final TreePath selectionPath = myTree.getSelectionPath();
+    if (selectionPath != null) {
+      selection = (DefaultMutableTreeNode)selectionPath.getLastPathComponent();
+    }
+    createGroupingHelper(node -> true).moveAllModuleNodesToProperGroups(myRoot, getTreeModel());
+    if (selection != null) {
+      TreeUtil.selectInTree(selection, true, myTree);
     }
   }
 
   @Override
-  protected AbstractAddGroup createAddAction() {
-    return new AbstractAddGroup(ProjectBundle.message("add.new.header.text")) {
+  protected AbstractAddGroup createAddAction(boolean fromPopup) {
+    return new AbstractAddGroup(JavaUiBundle.message("add.new.header.text")) {
       @Override
-      @NotNull
-      public AnAction[] getChildren(@Nullable final AnActionEvent e) {
+      public AnAction @NotNull [] getChildren(final @Nullable AnActionEvent e) {
 
-        ArrayList<AnAction> result = new ArrayList<>();
-
-        AnAction addModuleAction = new AddModuleAction(false);
-        addModuleAction.getTemplatePresentation().setText("New Module");
+        AnAction addModuleAction = new AddModuleAction(false, fromPopup);
+        addModuleAction.getTemplatePresentation().setText(JavaUiBundle.message("action.text.new.module"));
+        List<AnAction> result = new ArrayList<>();
         result.add(addModuleAction);
 
-        AnAction importModuleAction = new AddModuleAction(true);
-        importModuleAction.getTemplatePresentation().setText("Import Module");
+        AnAction importModuleAction = new AddModuleAction(true, fromPopup);
+        importModuleAction.getTemplatePresentation().setText(JavaUiBundle.message("action.text.import.module"));
         importModuleAction.getTemplatePresentation().setIcon(AllIcons.ToolbarDecorator.Import);
         result.add(importModuleAction);
 
         final Collection<AnAction> actions = AddFacetToModuleAction.createAddFrameworkActions(myFacetEditorFacade, myProject);
         if (!actions.isEmpty()) {
-          result.add(new Separator(ProjectBundle.message("add.group.framework.separator")));
+          result.add(new Separator(JavaUiBundle.message("add.group.framework.separator")));
           result.addAll(actions);
         }
 
@@ -799,7 +930,7 @@ public class ModuleStructureConfigurable extends BaseStructureConfigurable imple
           result.add(new Separator());
         }
         result.addAll(actionsFromExtensions);
-        return result.toArray(new AnAction[result.size()]);
+        return result.toArray(AnAction.EMPTY_ARRAY);
       }
     };
   }
@@ -810,148 +941,181 @@ public class ModuleStructureConfigurable extends BaseStructureConfigurable imple
   }
 
   @Override
-  @Nullable
-  protected String getEmptySelectionString() {
-    return ProjectBundle.message("empty.module.selection.string");
+  protected @NotNull String getEmptySelectionString() {
+    return JavaUiBundle.message("empty.module.selection.string");
   }
 
-  private class MyCopyAction extends AnAction implements DumbAware {
+  private final class MyCopyAction extends AnAction implements DumbAware {
     private MyCopyAction() {
-      super(CommonBundle.message("button.copy"), CommonBundle.message("button.copy"), COPY_ICON);
+      super(CommonBundle.messagePointer("button.copy"), CommonBundle.messagePointer("button.copy"), COPY_ICON);
     }
 
     @Override
-    public void actionPerformed(final AnActionEvent e) {
-      final NamedConfigurable namedConfigurable = getSelectedConfigurable();
-      if (namedConfigurable instanceof ModuleConfigurable) {
-        try {
-          final ModuleEditor moduleEditor = ((ModuleConfigurable)namedConfigurable).getModuleEditor();
-          final String modulePresentation = IdeBundle.message("project.new.wizard.module.identification");
-          final NamePathComponent component = new NamePathComponent(IdeBundle.message("label.module.name"), IdeBundle.message("label.component.file.location", StringUtil.capitalize(modulePresentation)), IdeBundle.message("title.select.project.file.directory", modulePresentation),
-                                                                    IdeBundle.message("description.select.project.file.directory", StringUtil.capitalize(modulePresentation)), true,
-                                                                    false);
-          final Module originalModule = moduleEditor.getModule();
-          if (originalModule != null) {
-            component.setPath(FileUtil.toSystemDependentName(PathUtil.getParentPath(originalModule.getModuleFilePath())));
-          }
-
-          final DialogBuilder dialogBuilder = new DialogBuilder(myTree);
-          dialogBuilder.setTitle(ProjectBundle.message("copy.module.dialog.title"));
-          dialogBuilder.setCenterPanel(component);
-          dialogBuilder.setPreferredFocusComponent(component.getNameComponent());
-          dialogBuilder.setOkOperation(() -> {
-            final String name = component.getNameValue();
-            if (name.length() == 0) {
-              Messages.showErrorDialog(ProjectBundle.message("enter.module.copy.name.error.message"), CommonBundle.message("title.error"));
-              return;
-            }
-            if (getModule(name) != null) {
-              Messages.showErrorDialog(ProjectBundle.message("module.0.already.exists.error.message", name), CommonBundle.message("title.error"));
-              return;
-            }
-
-            if (component.getPath().length() == 0) {
-              Messages.showErrorDialog(IdeBundle.message("prompt.enter.project.file.location", modulePresentation),
-                                       CommonBundle.message("title.error"));
-              return;
-            }
-            if (!ProjectWizardUtil
-               .createDirectoryIfNotExists(IdeBundle.message("directory.project.file.directory", modulePresentation), component.getPath(),
-                                           true)) {
-              Messages.showErrorDialog(ProjectBundle.message("path.0.is.invalid.error.message", component.getPath()), CommonBundle.message("title.error"));
-               return;
-            }
-            dialogBuilder.getDialogWrapper().close(DialogWrapper.OK_EXIT_CODE);
-          });
-          if (dialogBuilder.show() != DialogWrapper.OK_EXIT_CODE) return;
-
-          final ModifiableRootModel rootModel = moduleEditor.getModifiableRootModel();
-          final String path = component.getPath();
-          final ModuleBuilder builder = new ModuleBuilder() {
-            @Override
-            public void setupRootModel(final ModifiableRootModel modifiableRootModel) throws ConfigurationException {
-              if (rootModel.isSdkInherited()) {
-                modifiableRootModel.inheritSdk();
-              }
-              else {
-                modifiableRootModel.setSdk(rootModel.getSdk());
-              }
-
-              modifiableRootModel.getModuleExtension(CompilerModuleExtension.class).inheritCompilerOutputPath(true);
-
-              modifiableRootModel.getModuleExtension(LanguageLevelModuleExtension.class).setLanguageLevel(
-                LanguageLevelModuleExtensionImpl.getInstance(rootModel.getModule()).getLanguageLevel());
-
-              for (OrderEntry entry : rootModel.getOrderEntries()) {
-                if (entry instanceof JdkOrderEntry) continue;
-                if (entry instanceof ModuleSourceOrderEntry) continue;
-                if (entry instanceof ClonableOrderEntry) {
-                  modifiableRootModel.addOrderEntry(((ClonableOrderEntry)entry).cloneEntry((RootModelImpl)modifiableRootModel,
-                                                                                           (ProjectRootManagerImpl)ProjectRootManager
-                                                                                             .getInstance(myProject),
-                                                                                           VirtualFilePointerManager.getInstance()));
-                }
-              }
-
-              VirtualFile content = LocalFileSystem.getInstance().findFileByPath(component.getPath());
-              if (content == null) {
-                content = LocalFileSystem.getInstance().refreshAndFindFileByPath(component.getPath());
-              }
-              modifiableRootModel.addContentEntry(content);
-            }
-
-            @Override
-            public ModuleType getModuleType() {
-              return ModuleType.get(rootModel.getModule());
-            }
-          };
-          builder.setName(component.getNameValue());
-          builder.setModuleFilePath(path + "/" + builder.getName() + ModuleFileType.DOT_DEFAULT_EXTENSION);
-          final Module module = myContext.myModulesConfigurator.addModule(builder);
-          if (module != null) {
-            addModuleNode(module);
-          }
-        }
-        catch (Exception e1) {
-          LOG.error(e1);
-        }
-      }
-      else {
+    public void actionPerformed(final @NotNull AnActionEvent e) {
+      NamedConfigurable<?> namedConfigurable = getSelectedConfigurable();
+      if (!(namedConfigurable instanceof ModuleConfigurable)) {
         copyByExtension(namedConfigurable);
       }
+
+      try {
+        ModuleEditor moduleEditor = ((ModuleConfigurable)namedConfigurable).getModuleEditor();
+        String modulePresentation = IdeCoreBundle.message("project.new.wizard.module.identification");
+        NamePathComponent component = new NamePathComponent(JavaUiBundle.message("label.module.name"),
+                                                            JavaUiBundle.message("label.component.file.location", StringUtil.capitalize(modulePresentation)),
+                                                            JavaUiBundle
+                                                              .message("title.select.project.file.directory", modulePresentation),
+                                                            JavaUiBundle.message("description.select.project.file.directory",
+                                                                                 StringUtil.capitalize(modulePresentation)),
+                                                            true,
+                                                            false);
+        Module originalModule = moduleEditor.getModule();
+        if (originalModule != null) {
+          component.setPath(FileUtil.toSystemDependentName(originalModule.getModuleNioFile().getParent().toString()));
+        }
+
+        DialogBuilder dialogBuilder = new DialogBuilder(myTree);
+        dialogBuilder.setTitle(JavaUiBundle.message("copy.module.dialog.title"));
+        dialogBuilder.setCenterPanel(component);
+        dialogBuilder.setPreferredFocusComponent(component.getNameComponent());
+        dialogBuilder.setOkOperation(() -> {
+          final String name = component.getNameValue();
+          if (name.isEmpty()) {
+            Messages.showErrorDialog(JavaUiBundle.message("enter.module.copy.name.error.message"), CommonBundle.getErrorTitle());
+            return;
+          }
+          if (getModule(name) != null) {
+            Messages
+              .showErrorDialog(JavaUiBundle.message("module.0.already.exists.error.message", name), CommonBundle.getErrorTitle());
+            return;
+          }
+
+          if (component.getPath().isEmpty()) {
+            Messages.showErrorDialog(JavaUiBundle.message("prompt.enter.project.file.location", modulePresentation),
+                                     CommonBundle.getErrorTitle());
+            return;
+          }
+          if (!ProjectWizardUtil
+            .createDirectoryIfNotExists(JavaUiBundle.message("directory.project.file.directory", modulePresentation), component.getPath(),
+                                        true)) {
+            Messages.showErrorDialog(JavaUiBundle.message("path.0.is.invalid.error.message", component.getPath()),
+                                     CommonBundle.getErrorTitle());
+            return;
+          }
+          dialogBuilder.getDialogWrapper().close(DialogWrapper.OK_EXIT_CODE);
+        });
+        if (dialogBuilder.show() != DialogWrapper.OK_EXIT_CODE) {
+          return;
+        }
+
+        ModifiableRootModel rootModel = moduleEditor.getModifiableRootModel();
+        Path path = Paths.get(component.getPath());
+        ModuleBuilder builder = new CopiedModuleBuilder(rootModel, path, myProject);
+        builder.setName(component.getNameValue());
+        builder.setModuleFilePath(path.resolve(builder.getName() + ModuleFileType.DOT_DEFAULT_EXTENSION).toString());
+        Module module = myContext.myModulesConfigurator.addModule(builder);
+        if (module != null) {
+          addModuleNode(module);
+        }
+      }
+      catch (Exception e1) {
+        LOG.error(e1);
+      }
     }
 
     @Override
-    public void update(final AnActionEvent e) {
+    public void update(final @NotNull AnActionEvent e) {
       TreePath[] selectionPaths = myTree.getSelectionPaths();
       if (selectionPaths == null || selectionPaths.length != 1) {
         e.getPresentation().setEnabled(false);
-      } else {
-        final NamedConfigurable selectedConfigurable = getSelectedConfigurable();
+      }
+      else {
+        final NamedConfigurable<?> selectedConfigurable = getSelectedConfigurable();
         e.getPresentation().setEnabled(selectedConfigurable instanceof ModuleConfigurable || canBeCopiedByExtension(selectedConfigurable));
       }
     }
+
+    @Override
+    public @NotNull ActionUpdateThread getActionUpdateThread() {
+      return ActionUpdateThread.EDT;
+    }
   }
 
-  private class AddModuleAction extends AnAction implements DumbAware {
+  @ApiStatus.Internal
+  public static final class CopiedModuleBuilder extends ModuleBuilder {
+    private final @NotNull ModifiableRootModel myRootModel;
+    private final @NotNull Path myComponentPath;
+    private final @NotNull Project myProject;
 
-    private final boolean myImport;
-
-    public AddModuleAction(boolean anImport) {
-      super(ProjectBundle.message("add.new.module.text.full"), null, AllIcons.Actions.Module);
-      myImport = anImport;
+    @VisibleForTesting
+    public CopiedModuleBuilder(@NotNull ModifiableRootModel rootModel, @NotNull Path componentPath, @NotNull Project project) {
+      this.myRootModel = rootModel;
+      this.myComponentPath = componentPath;
+      this.myProject = project;
     }
 
     @Override
-    public void actionPerformed(final AnActionEvent e) {
-      addModule(myImport);
+    public void setupRootModel(@NotNull ModifiableRootModel modifiableRootModel) {
+      if (myRootModel.isSdkInherited()) {
+        modifiableRootModel.inheritSdk();
+      }
+      else {
+        modifiableRootModel.setSdk(myRootModel.getSdk());
+      }
+
+      modifiableRootModel.getModuleExtension(CompilerModuleExtension.class).inheritCompilerOutputPath(true);
+
+      modifiableRootModel.getModuleExtension(LanguageLevelModuleExtension.class)
+        .setLanguageLevel(LanguageLevelUtil.getCustomLanguageLevel(myRootModel.getModule()));
+
+      for (OrderEntry entry : myRootModel.getOrderEntries()) {
+        if (entry instanceof JdkOrderEntry) continue;
+        if (entry instanceof ModuleSourceOrderEntry) continue;
+        if (entry instanceof ClonableOrderEntry) {
+          modifiableRootModel.addOrderEntry(((ClonableOrderEntry)entry).cloneEntry(modifiableRootModel,
+                                                                                   (ProjectRootManagerImpl)ProjectRootManager.getInstance(myProject),
+                                                                                   VirtualFilePointerManager.getInstance()));
+        }
+      }
+
+      VirtualFile content = VirtualFileManager.getInstance().findFileByNioPath(myComponentPath);
+      if (content == null) {
+        try {
+          Files.createFile(NioFiles.createParentDirectories(myComponentPath));
+        }
+        catch (IOException e) {
+          throw new UncheckedIOException(e);
+        }
+        content = VirtualFileManager.getInstance().refreshAndFindFileByNioPath(myComponentPath);
+      }
+      modifiableRootModel.addContentEntry(content);
+    }
+
+    @Override
+    public ModuleType<?> getModuleType() {
+      return ModuleType.get(myRootModel.getModule());
     }
   }
 
-  private static class MergingComparator<T> implements Comparator<T> {
-    private final List<Comparator<T>> myDelegates;
+  private final class AddModuleAction extends AnAction implements DumbAware {
+    private final boolean myImport;
+    private final boolean myDetectModuleBase;
 
-    public MergingComparator(final List<Comparator<T>> delegates) {
+    AddModuleAction(boolean anImport, boolean detectModuleBase) {
+      super(JavaUiBundle.message("add.new.module.text.full"), null, AllIcons.Nodes.Module);
+      myImport = anImport;
+      myDetectModuleBase = detectModuleBase;
+    }
+
+    @Override
+    public void actionPerformed(final @NotNull AnActionEvent e) {
+      addModule(myImport, myDetectModuleBase);
+    }
+  }
+
+  private static final class MergingComparator<T> implements Comparator<T> {
+    private final List<? extends Comparator<T>> myDelegates;
+
+    MergingComparator(final List<? extends Comparator<T>> delegates) {
       myDelegates = delegates;
     }
 
@@ -964,5 +1128,4 @@ public class ModuleStructureConfigurable extends BaseStructureConfigurable imple
       return 0;
     }
   }
-
 }
