@@ -1,94 +1,110 @@
-/*
- * Copyright 2000-2016 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.rt.execution;
 
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.FileInputStream;
-import java.io.FileReader;
+import java.io.IOException;
+import java.io.InputStreamReader;
 import java.lang.reflect.Method;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
-import java.util.*;
+import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
 import java.util.jar.JarInputStream;
 import java.util.jar.Manifest;
 
 /**
+ * Do not use this command-line method on Java 9+ - use @argfile instead.
+ *
  * @author anna
- * @since 12-Aug-2008
+ * @noinspection SSBasedInspection, UseOfSystemOutOrSystemErr
  */
-public class CommandLineWrapper {
+public final class CommandLineWrapper {
+  private static final class AppData {
+    private final List<String> properties;
+    private final Class<?> mainClass;
+    private final String[] args;
 
-  private static final String PREFIX = "-D";
-
-  public static void main(String[] args) throws Exception {
-    final File jarFile = new File(args[0]);
-    final MainPair mainPair = args[0].endsWith(".jar") ? loadMainClassFromClasspathJar(jarFile, args) 
-                                                       : loadMainClassWithOldCustomLoader(jarFile, args);
-    String[] mainArgs = mainPair.getArgs();
-    Class mainClass = mainPair.getMainClass();
-    //noinspection SSBasedInspection
-    Class mainArgType = (new String[0]).getClass();
-    Method main = mainClass.getMethod("main", new Class[]{mainArgType});
-    ensureAccess(main);
-    main.invoke(null, new Object[]{mainArgs});
+    private AppData(List<String> properties, Class<?> mainClass, String[] args) {
+      this.properties = properties;
+      this.mainClass = mainClass;
+      this.args = args;
+    }
   }
 
-  private static MainPair loadMainClassFromClasspathJar(File jarFile, String[] args) throws Exception {
-    String[] mainArgs;
-    final JarInputStream inputStream = new JarInputStream(new FileInputStream(jarFile));
+  public static void main(String[] args) throws Exception {
     try {
-      final Manifest manifest = inputStream.getManifest();
-      final String vmParams = manifest.getMainAttributes().getValue("VM-Options");
-      if (vmParams != null) {
-        final HashMap vmOptions = new HashMap();
-        parseVmOptions(vmParams, vmOptions);
-        for (Iterator iterator = vmOptions.keySet().iterator(); iterator.hasNext(); ) {
-          String optionName = (String)iterator.next();
-          System.setProperty(optionName, (String)vmOptions.get(optionName));
+      Class.forName("java.lang.Module");
+      System.err.println(
+        "`CommandLineWrapper` is ill-suited for launching apps on Java 9+.\n" +
+        "If the run configuration uses \"classpath file\", please change it to \"@argfile\".\n" +
+        "Otherwise, please contact support.");
+      System.exit(1);
+    }
+    catch (ClassNotFoundException ignored) { }
+
+    File file = new File(args[0]);
+    AppData appData = args[0].endsWith(".jar") ? loadMainClassFromClasspathJar(file, args) : loadMainClassWithCustomLoader(file, args);
+
+    List<String> properties = appData.properties;
+    for (String property : properties) {
+      if (property.startsWith("-D")) {
+        int p = property.indexOf('=');
+        if (p > 0) {
+          System.setProperty(property.substring(2, p), property.substring(p + 1));
+        }
+        else {
+          System.setProperty(property.substring(2), "");
         }
       }
-      String programParameters = manifest.getMainAttributes().getValue("Program-Parameters");
+    }
+
+    Method main = appData.mainClass.getMethod("main", String[].class);
+    main.setAccessible(true);  // need to launch package-private classes
+    main.invoke(null, new Object[]{appData.args});
+  }
+
+  private static AppData loadMainClassFromClasspathJar(File jarFile, String[] args) throws Exception {
+    List<String> properties = Collections.emptyList();
+    String[] mainArgs;
+
+    try (JarInputStream inputStream = new JarInputStream(new FileInputStream(jarFile))) {
+      Manifest manifest = inputStream.getManifest();
+
+      String vmOptions = manifest != null ? manifest.getMainAttributes().getValue("VM-Options") : null;
+      if (vmOptions != null) {
+        properties = splitBySpaces(vmOptions);
+      }
+
+      String programParameters = manifest != null ? manifest.getMainAttributes().getValue("Program-Parameters") : null;
       if (programParameters == null) {
-        mainArgs = new String[args.length - 2];
-        System.arraycopy(args, 2, mainArgs, 0, mainArgs.length);
+        mainArgs = Arrays.copyOfRange(args, 2, args.length);
       }
       else {
-        mainArgs = splitBySpaces(programParameters);
+        List<String> list = splitBySpaces(programParameters);
+        mainArgs = list.toArray(new String[0]);
       }
     }
     finally {
-      if (inputStream != null) {
-        inputStream.close();
-      }
       jarFile.deleteOnExit();
     }
 
-    return new MainPair(Class.forName(args[1]), mainArgs);
+    return new AppData(properties, Class.forName(args[1]), mainArgs);
   }
 
   /**
-   * The implementation is copied from copied from com.intellij.util.execution.ParametersListUtil.parse and adapted to old Java versions
+   * The implementation is copied from com.intellij.util.execution.ParametersListUtil#parse and adapted to old Java versions.
    */
-  private static String[] splitBySpaces(String parameterString) {
+  private static List<String> splitBySpaces(String parameterString) {
     parameterString = parameterString.trim();
 
-    final ArrayList params = new ArrayList();
-    final StringBuffer token = new StringBuffer(128);
+    List<String> params = new ArrayList<>();
+    StringBuilder token = new StringBuilder(128);
     boolean inQuotes = false;
     boolean escapedQuote = false;
     boolean nonEmpty = false;
@@ -128,125 +144,79 @@ public class CommandLineWrapper {
       params.add(token.toString());
     }
 
-    //noinspection SSBasedInspection
-    return (String[])params.toArray(new String[params.size()]);
+    return params;
   }
 
-  private static class MainPair {
-    private Class mainClass;
-    private String[] args;
-
-    public MainPair(Class mainClass, String[] args) {
-      this.mainClass = mainClass;
-      this.args = args;
+  /**
+   * args: "classpath file" [ @vm_params "VM options file" ] [ @app_params "args file" ] "main class" [ args ... ]
+   */
+  private static AppData loadMainClassWithCustomLoader(File classpathFile, String[] args) throws Exception {
+    List<URL> classpathUrls = new ArrayList<>();
+    StringBuilder classpathString = new StringBuilder();
+    List<String> pathElements = readLinesAndDeleteFile(classpathFile);
+    for (String pathElement : pathElements) {
+      classpathUrls.add(toUrl(new File(pathElement)));
+      if (classpathString.length() > 0) classpathString.append(File.pathSeparator);
+      classpathString.append(pathElement);
     }
-
-    public Class getMainClass() {
-      return mainClass;
-    }
-
-    public String[] getArgs() {
-      return args;
-    }
-  }
-  
-  public static void parseVmOptions(String vmParams, Map vmOptions) {
-    int idx = vmParams.indexOf(PREFIX);
-    while (idx >= 0) {
-      final int indexOf = vmParams.indexOf(PREFIX, idx + PREFIX.length());
-      final String vmParam = indexOf < 0 ? vmParams.substring(idx) : vmParams.substring(idx, indexOf - 1);
-      final int eqIdx = vmParam.indexOf('=');
-      String vmParamName;
-      String vmParamValue;
-      if (eqIdx > -1 && eqIdx < vmParam.length() - 1) {
-        vmParamName = vmParam.substring(0, eqIdx);
-        vmParamValue = vmParam.substring(eqIdx + 1);
-      } else {
-        vmParamName = vmParam;
-        vmParamValue = "";
-      }
-      vmOptions.put(vmParamName.trim().substring(PREFIX.length()), vmParamValue);
-      idx = indexOf;
-    }
-  }
-
-  private static void ensureAccess(Object reflectionObject) {
-    // need to call setAccessible here in order to be able to launch package-private classes
-    // calling setAccessible() via reflection because the method is missing from java version 1.1.x
-    final Class aClass = reflectionObject.getClass();
-    try {
-      final Method setAccessibleMethod = aClass.getMethod("setAccessible", new Class[]{boolean.class});
-      setAccessibleMethod.invoke(reflectionObject, new Object[]{Boolean.TRUE});
-    }
-    catch (Exception e) {
-      // the method not found
-    }
-  }
-
-  //todo delete; but new idea won't run correctly tests which start process with CommandLineWrapper
-  private static MainPair loadMainClassWithOldCustomLoader(File file, String[] args) throws Exception {
-    final List urls = new ArrayList();
-    final StringBuffer buf = new StringBuffer();
-    final BufferedReader reader = new BufferedReader(new FileReader(file));
-    try {
-      while (reader.ready()) {
-        final String fileName = reader.readLine();
-        if (buf.length() > 0) {
-          buf.append(File.pathSeparator);
-        }
-        buf.append(fileName);
-        File classpathElement = new File(fileName);
-        try {
-          //noinspection Since15, deprecation
-          urls.add(classpathElement.toURI().toURL());
-        }
-        catch (NoSuchMethodError e) {
-          //noinspection deprecation
-          urls.add(classpathElement.toURL());
-        }
-      }
-    }
-    finally {
-      reader.close();
-    }
-    if (!file.delete()) file.deleteOnExit();
-    System.setProperty("java.class.path", buf.toString());
+    System.setProperty("java.class.path", classpathString.toString());
 
     int startArgsIdx = 2;
 
+    List<String> properties = Collections.emptyList();
+    if (args.length > startArgsIdx && "@vm_params".equals(args[startArgsIdx - 1])) {
+      properties = readLinesAndDeleteFile(new File(args[startArgsIdx]));
+      startArgsIdx += 2;
+    }
+
+    String[] mainArgs;
+    if (args.length > startArgsIdx && "@app_params".equals(args[startArgsIdx - 1])) {
+      List<String> lines = readLinesAndDeleteFile(new File(args[startArgsIdx]));
+      mainArgs = lines.toArray(new String[0]);
+      startArgsIdx += 2;
+    }
+    else {
+      mainArgs = Arrays.copyOfRange(args, startArgsIdx, args.length);
+    }
+
     String mainClassName = args[startArgsIdx - 1];
-    String[] mainArgs = new String[args.length - startArgsIdx];
-    System.arraycopy(args, startArgsIdx, mainArgs, 0, mainArgs.length);
-
-    for (int i = 0; i < urls.size(); i++) {
-      URL url = (URL)urls.get(i);
-      urls.set(i, internFileProtocol(url));
-    }
-
-    ClassLoader loader = new URLClassLoader((URL[])urls.toArray(new URL[urls.size()]), null);
-    final String classLoader = System.getProperty("java.system.class.loader");
-    if (classLoader != null) {
+    ClassLoader loader = new URLClassLoader(classpathUrls.toArray(new URL[0]), null);
+    String systemLoaderName = System.getProperty("java.system.class.loader");
+    if (systemLoaderName != null) {
       try {
-        loader = (ClassLoader)Class.forName(classLoader).getConstructor(new Class[]{ClassLoader.class}).newInstance(new Object[]{loader});
+        loader = (ClassLoader)Class.forName(systemLoaderName).getConstructor(new Class[]{ClassLoader.class}).newInstance(new Object[]{loader});
       }
-      catch (Exception e) {
-        //leave URL class loader
-      }
+      catch (Exception ignored) { }
     }
-    Class mainClass = loader.loadClass(mainClassName);
+    Class<?> mainClass = loader.loadClass(mainClassName);
     Thread.currentThread().setContextClassLoader(loader);
 
-    return new MainPair(mainClass, mainArgs);
+    return new AppData(properties, mainClass, mainArgs);
   }
 
-  private static URL internFileProtocol(URL url) {
+  /** @noinspection ResultOfMethodCallIgnored */
+  private static List<String> readLinesAndDeleteFile(File file) throws IOException {
+    try (BufferedReader reader = new BufferedReader(new InputStreamReader(new FileInputStream(file), StandardCharsets.UTF_8))) {
+      List<String> lines = new ArrayList<>();
+      String line;
+      while ((line = reader.readLine()) != null) lines.add(line);
+      return lines;
+    }
+    finally {
+      file.delete();
+    }
+  }
+
+  /** @noinspection deprecation */
+  private static URL toUrl(File classpathElement) throws MalformedURLException {
+    URL url;
     try {
-      if ("file".equals(url.getProtocol())) {
-        return new URL("file", url.getHost(), url.getPort(), url.getFile());
-      }
+      url = classpathElement.toURI().toURL();
     }
-    catch (MalformedURLException ignored) {
+    catch (NoSuchMethodError e) {
+      url = classpathElement.toURL();
     }
+    url = new URL("file", url.getHost(), url.getPort(), url.getFile());
     return url;
   }
 }
