@@ -1,100 +1,128 @@
-/*
- * Copyright 2000-2015 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.debugger.impl;
 
-import com.intellij.execution.process.ProcessOutputTypes;
+import com.intellij.execution.process.ProcessOutputType;
+import com.intellij.ide.plugins.PluginManagerCore;
 import com.intellij.idea.IdeaLogger;
-import com.intellij.openapi.application.Application;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.application.PathManager;
-import com.intellij.openapi.diagnostic.Logger;
+import com.intellij.openapi.application.ReadAction;
+import com.intellij.openapi.projectRoots.JavaSdkVersionUtil;
 import com.intellij.openapi.projectRoots.Sdk;
 import com.intellij.openapi.projectRoots.ex.JavaSdkUtil;
 import com.intellij.openapi.projectRoots.impl.JavaAwareProjectJdkTableImpl;
 import com.intellij.openapi.util.Key;
 import com.intellij.openapi.util.SystemInfo;
-import com.intellij.openapi.util.ThrowableComputable;
 import com.intellij.openapi.util.io.FileUtil;
-import com.intellij.openapi.util.io.FileUtilRt;
+import com.intellij.openapi.util.io.NioFiles;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.openapi.util.text.StringUtilRt;
-import com.intellij.openapi.vfs.CharsetToolkit;
-import com.intellij.util.containers.HashMap;
-import org.jetbrains.annotations.NotNull;
-import org.junit.Assert;
+import com.intellij.platform.testFramework.core.FileComparisonFailedError;
+import com.intellij.project.IntelliJProjectConfiguration;
+import com.intellij.util.PathUtil;
+import com.intellij.util.UriUtil;
+import com.intellij.util.containers.ContainerUtil;
+import org.jetbrains.annotations.Nullable;
 
-import java.io.File;
 import java.net.InetAddress;
 import java.net.UnknownHostException;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.regex.Matcher;
+import java.util.function.Supplier;
 import java.util.regex.Pattern;
 
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.fail;
+
+/**
+ * Provides three streams of output named system, stdout and stderr,
+ * which are independent of Java's {@link System#out} and {@link System#err} but analogous to them.
+ * <p>
+ * This output can be validated against prerecorded output in <tt>{@link #myAppPath}/outs</tt>.
+ * The output files are named <i>testName[.platform][.jdkX].out</i>,
+ * where <i>platform</i> is either {@code unx} or {@code win}
+ * and <i>jdkX</i> tries all Java versions from the current SDK version down to 7.
+ * The output files contain the messages from the system, stdout and stderr streams,
+ * in this order, without any separators.
+ * <p>
+ * Call {@link #init(String)} to provide the test name,
+ * then write output using {@link #print(String, Key)} and {@link #println(String, Key)}
+ * and finally validate using {@link #checkValid(Sdk)}.
+ * <p>
+ * The output is filtered and normalized to make it platform-independent.
+ * To add custom normalization, override {@link #replaceAdditionalInOutput(String)}.
+ */
+@SuppressWarnings({"IO_FILE_USAGE", "UnnecessaryFullyQualifiedName", "ExtractMethodRecommender"})
 public class OutputChecker {
-  private static final Logger LOG = Logger.getInstance("#com.intellij.debugger.impl.OutputChecker");
-  private static final String JDK_HOME_STR = "!JDK_HOME!";
-
-  protected final String myAppPath;
-  private final String myOutputPath;
-
-  public static final Key[] OUTPUT_ORDER = new Key[] {
-    ProcessOutputTypes.SYSTEM, ProcessOutputTypes.STDOUT, ProcessOutputTypes.STDERR
+  public static final ProcessOutputType[] OUTPUT_ORDER = {
+    ProcessOutputType.SYSTEM,
+    ProcessOutputType.STDOUT,
+    ProcessOutputType.STDERR
   };
-  private Map<Key, StringBuffer> myBuffers;
-  protected String myTestName;
 
-
+  private static final String JDK_HOME_STR = "!JDK_HOME!";
   //ERROR: JDWP Unable to get JNI 1.2 environment, jvm->GetEnv() return code = -2
   private static final Pattern JDI_BUG_OUTPUT_PATTERN_1 =
-    Pattern.compile("ERROR\\:\\s+JDWP\\s+Unable\\s+to\\s+get\\s+JNI\\s+1\\.2\\s+environment,\\s+jvm-\\>GetEnv\\(\\)\\s+return\\s+code\\s+=\\s+-2\n");
+    Pattern.compile(
+      "ERROR:\\s+JDWP\\s+Unable\\s+to\\s+get\\s+JNI\\s+1\\.2\\s+environment,\\s+jvm->GetEnv\\(\\)\\s+return\\s+code\\s+=\\s+-2\n");
   //JDWP exit error AGENT_ERROR_NO_JNI_ENV(183):  [../../../src/share/back/util.c:820]
   private static final Pattern JDI_BUG_OUTPUT_PATTERN_2 =
-    Pattern.compile("JDWP\\s+exit\\s+error\\s+AGENT_ERROR_NO_JNI_ENV.*\\]\n");
+    Pattern.compile("JDWP\\s+exit\\s+error\\s+AGENT_ERROR_NO_JNI_ENV.*]\n");
 
-  public OutputChecker(String appPath, String outputPath) {
+  /** If a string containing one of the listed strings is written to {@link ProcessOutputType#STDERR}, the whole string is ignored. */
+  private static final String[] IGNORED_IN_STDERR = {"Picked up _JAVA_OPTIONS:", "Picked up JAVA_TOOL_OPTIONS:"};
+
+  private final Supplier<String> myAppPath;
+  private final Supplier<String> myOutputPath;
+  private Map<Key<?>, StringBuffer> myBuffers;
+  private String myTestName;
+
+  private static String HOST_NAME = null;
+  private static String CANONICAL_HOST_NAME = null;
+
+  static {
+    try {
+      var localHost = InetAddress.getLocalHost();
+      HOST_NAME = localHost.getHostName();
+      CANONICAL_HOST_NAME = localHost.getCanonicalHostName();
+    }
+    catch (UnknownHostException ignored) { }
+  }
+
+  public OutputChecker(Supplier<String> appPath, Supplier<String> outputPath) {
     myAppPath = appPath;
     myOutputPath = outputPath;
   }
 
+  @SuppressWarnings({"AssignmentToStaticFieldFromInstanceMethod", "SynchronizeOnThis"})
   public void init(String testName) {
     IdeaLogger.ourErrorsOccurred = null;
 
-    testName = Character.toLowerCase(testName.charAt(0)) + testName.substring(1);
-    myTestName = testName;
+    myTestName = Character.toLowerCase(testName.charAt(0)) + testName.substring(1);
     synchronized (this) {
       myBuffers = new HashMap<>();
     }
   }
 
-  public void print(String s, Key outputType) {
+  @SuppressWarnings("SynchronizeOnThis")
+  public void print(String s, Key<?> outputType) {
     synchronized (this) {
       if (myBuffers != null) {
-        StringBuffer buffer = myBuffers.get(outputType);
-        if (buffer == null) {
-          myBuffers.put(outputType, buffer = new StringBuffer());
+        if (ProcessOutputType.isStderr(outputType) && ContainerUtil.exists(IGNORED_IN_STDERR, s::contains)) {
+          return;
         }
-        buffer.append(s);
+        var key = outputType instanceof ProcessOutputType processOutputType ? processOutputType.getBaseOutputType() : outputType;
+        myBuffers.computeIfAbsent(key, _ -> new StringBuffer()).append(s);
       }
     }
   }
 
-  public void println(String s, Key outputType) {
+  public void println(String s, Key<?> outputType) {
     print(s + "\n", outputType);
   }
 
@@ -102,46 +130,57 @@ public class OutputChecker {
     checkValid(jdk, false);
   }
 
+  private Path getOutFile(Path outsDir, Sdk jdk, @Nullable Path current, String prefix) {
+    var name = myTestName + prefix;
+    var res = outsDir.resolve(name + ".out");
+    if (current == null || Files.exists(res)) {
+      current = res;
+    }
+    var version = JavaSdkVersionUtil.getJavaSdkVersion(jdk);
+    for (var feature = version.getMaxLanguageLevel().feature(); feature > 6; feature--) {
+      var outFile = outsDir.resolve(name + ".jdk" + feature + ".out");
+      if (Files.exists(outFile)) {
+        current = outFile;
+        break;
+      }
+    }
+    return current;
+  }
+
+  @SuppressWarnings("UseOfSystemOutOrSystemErr")
   public void checkValid(Sdk jdk, boolean sortClassPath) throws Exception {
     if (IdeaLogger.ourErrorsOccurred != null) {
       throw IdeaLogger.ourErrorsOccurred;
     }
 
-    String actual = preprocessBuffer(jdk, buildOutputString(), sortClassPath);
+    var actual = preprocessBuffer(buildOutputString(), sortClassPath);
 
-    File outs = new File(myAppPath + File.separator + "outs");
-    assert outs.exists() || outs.mkdirs() : outs;
+    var outsDir = NioFiles.createDirectories(Path.of(myAppPath.get(), "outs"));
 
-    File outFile = new File(outs, myTestName + ".out");
-    if (!outFile.exists()) {
+    var outFile = getOutFile(outsDir, jdk, null, "");
+    if (!Files.exists(outFile)) {
       if (SystemInfo.isWindows) {
-        final File winOut = new File(outs, myTestName + ".win.out");
-        if (winOut.exists()) {
-          outFile = winOut;
-        }
+        outFile = getOutFile(outsDir, jdk, outFile, ".win");
       }
       else if (SystemInfo.isUnix) {
-        final File unixOut = new File(outs, myTestName + ".unx.out");
-        if (unixOut.exists()) {
-          outFile = unixOut;
-        }
+        outFile = getOutFile(outsDir, jdk, outFile, ".unx");
       }
     }
 
-    if (!outFile.exists()) {
-      FileUtil.writeToFile(outFile, actual);
-      LOG.error("Test file created " + outFile.getPath() + "\n" + "**************** Don't forget to put it into VCS! *******************");
+    if (!Files.exists(outFile)) {
+      Files.writeString(outFile, actual);
+      fail("Test file created " + outFile + "\n" + "**************** Don't forget to put it into VCS! *******************");
     }
     else {
-      String originalText = FileUtilRt.loadFile(outFile, CharsetToolkit.UTF8);
-      String expected = StringUtilRt.convertLineSeparators(originalText);
+      var originalText = Files.readString(outFile);
+      var expected = StringUtilRt.convertLineSeparators(originalText);
       if (!expected.equals(actual)) {
         System.out.println("expected:");
         System.out.println(originalText);
         System.out.println("actual:");
         System.out.println(actual);
 
-        final int len = Math.min(expected.length(), actual.length());
+        var len = Math.min(expected.length(), actual.length());
         if (expected.length() != actual.length()) {
           System.out.println("Text sizes differ: expected " + expected.length() + " but actual: " + actual.length());
         }
@@ -152,120 +191,148 @@ public class OutputChecker {
           System.out.println("Rest from actual text is: \"" + actual.substring(len) + "\"");
         }
 
-        Assert.assertEquals(originalText, actual);
+        throw new FileComparisonFailedError(null, expected, actual, outFile.toString());
       }
     }
   }
 
-  private synchronized String buildOutputString() {
-    final StringBuilder result = new StringBuilder();
-    for (Key key : OUTPUT_ORDER) {
-      final StringBuffer buffer = myBuffers.get(key);
+  public final synchronized String buildOutputString() {
+    var result = new StringBuilder();
+    for (Key<?> key : OUTPUT_ORDER) {
+      var buffer = myBuffers.get(key);
       if (buffer != null) {
-        result.append(buffer.toString());
+        result.append(buffer);
       }
     }
     return result.toString();
   }
 
-  private String preprocessBuffer(final Sdk testJdk, final String buffer, final boolean sortClassPath) throws Exception {
-    Application application = ApplicationManager.getApplication();
+  @SuppressWarnings("SpellCheckingInspection")
+  private String preprocessBuffer(String buffer, boolean sortClassPath) {
+    var application = ApplicationManager.getApplication();
 
     if (application == null) return buffer;
 
-    return application.runReadAction(new ThrowableComputable<String, Exception>() {
-      @Override
-      public String compute() throws UnknownHostException {
-        String internalJdkHome = JavaAwareProjectJdkTableImpl.getInstanceEx().getInternalJdk().getHomeDirectory().getPath();
-        //System.out.println("internalJdkHome = " + internalJdkHome);
+    return ReadAction.compute(() -> {
+      var result = buffer;
 
-        String result = buffer;
-        //System.out.println("Original Output = " + result);
-        final boolean shouldIgnoreCase = !SystemInfo.isFileSystemCaseSensitive;
+      result = result.replace("\r\n", "\n");
+      result = result.replace('\r', '\n');
+      result = replaceAdditionalInOutput(result);
+      result = replacePath(result, myAppPath.get(), "!APP_PATH!");
+      result = replacePath(result, myOutputPath.get(), "!OUTPUT_PATH!");
+      result = replacePath(result, JavaSdkUtil.getIdeaRtJarPath(), "!RT_JAR!");
+      if (PluginManagerCore.isRunningFromSources()) {
+        result = replacePath(result, DebuggerUtilsImpl.getIdeaRtPath(), "!RT_JAR!");
+      }
 
-        result = StringUtil.replace(result, "\r\n", "\n");
-        result = StringUtil.replace(result, "\r", "\n");
-        result = replaceAdditionalInOutput(result);
-        result = StringUtil.replace(result, myAppPath, "!APP_PATH!", shouldIgnoreCase);
-        result = StringUtil.replace(result, myOutputPath, "!OUTPUT_PATH!", shouldIgnoreCase);
-        result = StringUtil.replace(result, FileUtil.toSystemIndependentName(myOutputPath), "!OUTPUT_PATH!", shouldIgnoreCase);
-        result = StringUtil.replace(result, FileUtil.toSystemIndependentName(myAppPath), "!APP_PATH!", shouldIgnoreCase);
-        result = StringUtil.replace(result, JavaSdkUtil.getIdeaRtJarPath(), "!RT_JAR!", shouldIgnoreCase);
-        result = StringUtil.replace(result, JavaSdkUtil.getJunit4JarPath(), "!JUNIT4_JAR!", shouldIgnoreCase);
-        result = StringUtil.replace(result, InetAddress.getLocalHost().getCanonicalHostName(), "!HOST_NAME!", shouldIgnoreCase);
-        result = StringUtil.replace(result, InetAddress.getLocalHost().getHostName(), "!HOST_NAME!", shouldIgnoreCase);
-        result = StringUtil.replace(result, "127.0.0.1", "!HOST_NAME!", shouldIgnoreCase);
-        result = StringUtil.replace(result, JavaSdkUtil.getIdeaRtJarPath().replace('/', File.separatorChar), "!RT_JAR!", shouldIgnoreCase);
-        result = StringUtil.replace(result, FileUtil.toSystemDependentName(internalJdkHome), JDK_HOME_STR, shouldIgnoreCase);
-        result = StringUtil.replace(result, internalJdkHome, JDK_HOME_STR, shouldIgnoreCase);
-        result = StringUtil.replace(result, PathManager.getHomePath(), "!IDEA_HOME!", shouldIgnoreCase);
-        result = StringUtil.replace(result, "Process finished with exit code 255", "Process finished with exit code -1");
+      var junit4JarPaths = StringUtil.join(IntelliJProjectConfiguration.getModuleLibrary("intellij.libraries.junit4", "JUnit4").getClassesPaths(), java.io.File.pathSeparator);
+      result = replacePath(result, junit4JarPaths, "!JUNIT4_JARS!");
 
-        //          result = result.replaceAll(" +\n", "\n");
-        result = result.replaceAll("!HOST_NAME!:\\d*", "!HOST_NAME!:!HOST_PORT!");
-        result = result.replaceAll("at \\'.*?\\'", "at '!HOST_NAME!:PORT_NAME!'");
-        result = result.replaceAll("address: \\'.*?\\'", "address: '!HOST_NAME!:PORT_NAME!'");
-        result = result.replaceAll("\"?file:.*AppletPage.*\\.html\"?", "file:!APPLET_HTML!");
-        result = result.replaceAll("\"(!JDK_HOME!.*?)\"", "$1");
-        result = result.replaceAll("\"(!APP_PATH!.*?)\"", "$1");
+      @SuppressWarnings("removal") var homeDirectory = JavaAwareProjectJdkTableImpl.getInstanceEx().getInternalJdk().getHomeDirectory();
+      assertNotNull(homeDirectory);
+      result = replacePath(result, homeDirectory.getPath(), JDK_HOME_STR);
 
-        // unquote extra params
-        result = result.replaceAll("\"(-D.*?)\"", "$1");
+      if (!StringUtil.isEmpty(CANONICAL_HOST_NAME)) {
+        result = StringUtil.replace(result, CANONICAL_HOST_NAME, "!HOST_NAME!", true);
+      }
+      if (!StringUtil.isEmpty(HOST_NAME)) {
+        result = StringUtil.replace(result, HOST_NAME, "!HOST_NAME!", true);
+      }
+      result = result.replace("0:0:0:0:0:0:0:1", "!HOST_NAME!");
+      result = result.replace("::1", "!HOST_NAME!");
+      result = result.replace("127.0.0.1", "!HOST_NAME!");
 
-        result = result.replaceAll("-Didea.launcher.port=\\d*", "-Didea.launcher.port=!IDEA_LAUNCHER_PORT!");
-        result = result.replaceAll("-Dfile.encoding=[\\w\\d-]*", "-Dfile.encoding=!FILE_ENCODING!");
-        result = result.replaceAll("\\((.*)\\:\\d+\\)", "($1:!LINE_NUMBER!)");
+      var productionFile = Path.of(PathUtil.getJarPathForClass(OutputChecker.class));
+      if (Files.isDirectory(productionFile)) {
+        result = replacePath(result, UriUtil.trimTrailingSlashes(productionFile.getParent().toUri().toString()), "!PRODUCTION_PATH!");
+      }
 
-        result = fixSlashes(result, JDK_HOME_STR);
+      result = replacePath(result, PathManager.getHomePath(), "!IDEA_HOME!");
+      result = result.replace("Process finished with exit code 255", "Process finished with exit code -1");
 
-        result = stripQuotesAroundClasspath(result);
+      result = result.replaceAll(" -javaagent:.*?debugger-agent\\.jar(=.+?\\.props)?", "");
+      result = result.replaceAll(" -agentpath:\\S*memory_agent([\\w^\\s]*)?\\.\\S+", "");
+      result = result.replaceAll("!HOST_NAME!:\\d*", "!HOST_NAME!:!HOST_PORT!");
+      result = result.replaceAll("at '.*?'", "at '!HOST_NAME!:PORT_NAME!'");
+      result = result.replaceAll("address: '.*?'", "address: '!HOST_NAME!:PORT_NAME!'");
+      result = result.replaceAll("\"?file:.*AppletPage.*\\.html\"?", "file:!APPLET_HTML!");
+      result = result.replaceAll("\"(!JDK_HOME!.*?)\"", "$1");
+      result = result.replaceAll("\"(!APP_PATH!.*?)\"", "$1");
+      result = result.replaceAll("\"(-D.*?)\"", "$1");  // unquote extra params
+      result = result.replaceAll("-Didea.launcher.port=\\d*", "-Didea.launcher.port=!IDEA_LAUNCHER_PORT!");
+      result = result.replaceAll("-Dfile.encoding=[\\w-]*", "-Dfile.encoding=!FILE_ENCODING!");
+      // Since Java 18, these options are added automatically to avoid garbled text in the console
+      // See JdkCommandLineSetup::appendEncoding and IDEA-291006
+      result = result.replace("-Dsun.stdout.encoding=UTF-8 -Dsun.stderr.encoding=UTF-8 ", "");
+      result = result.replace("-Dkotlinx.coroutines.debug.enable.creation.stack.trace=false ", "");
+      result = result.replace("-Ddebugger.agent.enable.coroutines=true ", "");
+      result = result.replace("-Dkotlinx.coroutines.debug.enable.flows.stack.trace=true ", "");
+      result = result.replace("-Dkotlinx.coroutines.debug.enable.mutable.state.flows.stack.trace=true ", "");
+      result = result.replace("-Ddebugger.async.stack.trace.for.all.threads=true ", "");
+      result = result.replace("-Ddebugger.agent.support.throwable=false ", "");
+      result = result.replace("-Ddebugger.agent.enable.log.capture=true ", "");
+      result = result.replace("--enable-native-access=ALL-UNNAMED ", "");
+      result = result.replaceAll("\\((.*):\\d+\\)", "($1:!LINE_NUMBER!)");
 
-        final Matcher matcher = Pattern.compile("-classpath\\s+(\\S+)\\s+").matcher(result);
-        while (matcher.find()) {
-          final String classPath = matcher.group(1);
-          final String[] classPathElements = classPath.split(File.pathSeparator);
+      // Ignore unstable lambdas ordering, IDEA-378517.
+      result = result.replaceAll("lambda\\$(.*)\\$\\d+", "lambda\\$$1\\$L");
 
-          // Combine all JDK jars into one marker
-          List<String> classpathRes = new ArrayList<>();
-          boolean hasJdkJars = false;
-          for (String element : classPathElements) {
-            if (!element.startsWith(JDK_HOME_STR)) {
-              classpathRes.add(element);
-            }
-            else {
-              hasJdkJars = true;
-            }
+      result = fixSlashes(result, JDK_HOME_STR);
+      result = result.replace("!JDK_HOME!\\bin\\java.exe", "!JDK_HOME!\\bin\\java");
+
+      result = stripQuotesAroundClasspath(result);
+
+      var matcher = Pattern.compile("-classpath\\s+(\\S+)\\s+").matcher(result);
+      while (matcher.find()) {
+        var classPath = matcher.group(1);
+        var classPathElements = classPath.split(java.io.File.pathSeparator);
+
+        // combine all JDK .jars into one marker
+        List<String> classpathRes = new ArrayList<>();
+        var hasJdkJars = false;
+        for (var element : classPathElements) {
+          if (!element.startsWith(JDK_HOME_STR)) {
+            classpathRes.add(element);
           }
-          if (hasJdkJars) {
-            classpathRes.add("!JDK_JARS!");
+          else {
+            hasJdkJars = true;
           }
-
-          if (sortClassPath) {
-            Collections.sort(classpathRes);
-          }
-
-          final String sortedPath = StringUtil.join(classpathRes, ";");
-          result = StringUtil.replace(result, classPath, sortedPath);
+        }
+        if (hasJdkJars) {
+          classpathRes.add("!JDK_JARS!");
         }
 
-        result = JDI_BUG_OUTPUT_PATTERN_1.matcher(result).replaceAll("");
-        result = JDI_BUG_OUTPUT_PATTERN_2.matcher(result).replaceAll("");
+        if (sortClassPath) {
+          Collections.sort(classpathRes);
+        }
 
-        return result;
+        var sortedPath = StringUtil.join(classpathRes, ";");
+        result = result.replace(" " + classPath + " ", " " + sortedPath + " ");
       }
+
+      result = JDI_BUG_OUTPUT_PATTERN_1.matcher(result).replaceAll("");
+      result = JDI_BUG_OUTPUT_PATTERN_2.matcher(result).replaceAll("");
+
+      return result;
     });
   }
 
-  @NotNull
-  private static String fixSlashes(String text, final String jdkHomeMarker) {
-    int commandLineStart = text.indexOf(jdkHomeMarker);
+  protected static String replacePath(String result, String path, String replacement) {
+    result = StringUtil.replace(result, FileUtil.toSystemDependentName(path), replacement, !SystemInfo.isFileSystemCaseSensitive);
+    result = StringUtil.replace(result, FileUtil.toSystemIndependentName(path), replacement, !SystemInfo.isFileSystemCaseSensitive);
+    return result;
+  }
+
+  private static String fixSlashes(String text, @SuppressWarnings("SameParameterValue") String jdkHomeMarker) {
+    var commandLineStart = text.indexOf(jdkHomeMarker);
     while (commandLineStart != -1) {
-      final StringBuilder builder = new StringBuilder(text);
-      int i = commandLineStart + 1;
+      var builder = new StringBuilder(text);
+      var i = commandLineStart + 1;
       while (i < builder.length()) {
-        char c = builder.charAt(i);
+        var c = builder.charAt(i);
         if (c == '\n') break;
-        else if (c == File.separatorChar) builder.setCharAt(i, '\\');
+        if (c == java.io.File.separatorChar) builder.setCharAt(i, '\\');
         i++;
       }
       text = builder.toString();
@@ -278,26 +345,20 @@ public class OutputChecker {
     return str;
   }
 
-  //do not depend on spaces in jdk path
+  // do not depend on spaces in the classpath
   private static String stripQuotesAroundClasspath(String result) {
-    final String clsp = "-classpath ";
-    int clspIdx = 0;
+    var cp = "-classpath ";
+    var cpIdx = 0;
     while (true) {
-      clspIdx = result.indexOf(clsp, clspIdx);
-      if (clspIdx <= -1) {
-        break;
-      }
-
-      final int spaceIdx = result.indexOf(" ", clspIdx + clsp.length());
-      if (spaceIdx > -1) {
-        result = result.substring(0, clspIdx) +
-                 clsp +
-                 StringUtil.stripQuotesAroundValue(result.substring(clspIdx + clsp.length(), spaceIdx)) +
-                 result.substring(spaceIdx);
-        clspIdx += clsp.length();
-      } else {
-        break;
-      }
+      cpIdx = result.indexOf(cp, cpIdx);
+      if (cpIdx == -1) break;
+      var spaceIdx = result.indexOf(" ", cpIdx + cp.length());
+      if (spaceIdx == -1) break;
+      result = result.substring(0, cpIdx) +
+               cp +
+               StringUtil.unquoteString(result.substring(cpIdx + cp.length(), spaceIdx)) +
+               result.substring(spaceIdx);
+      cpIdx += cp.length();
     }
     return result;
   }
