@@ -1,44 +1,29 @@
-/*
- * Copyright 2000-2015 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
+// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.util.config;
 
 import com.intellij.openapi.util.Factory;
-import com.intellij.openapi.util.InvalidDataException;
 import com.intellij.openapi.util.JDOMExternalizable;
-import com.intellij.openapi.util.WriteExternalException;
 import org.jdom.Element;
 import org.jetbrains.annotations.NonNls;
+import org.jetbrains.annotations.NotNull;
 
 import java.util.Iterator;
 
 public interface Externalizer<T> {
   @NonNls String VALUE_ATTRIBUTE = "value";
-  Externalizer<String> STRING = new BaseExternalizer<String>(){
+  Externalizer<String> STRING = new BaseExternalizer<>() {
     @Override
     public String readValue(Element dataElement) {
       return dataElement.getAttributeValue(VALUE_ATTRIBUTE);
     }
   };
-  Externalizer<Integer> INTEGER = new BaseExternalizer<Integer>() {
+  Externalizer<Integer> INTEGER = new BaseExternalizer<>() {
     @Override
     public Integer readValue(Element dataElement) {
       try {
-        return new Integer(dataElement.getAttributeValue(VALUE_ATTRIBUTE));
-      } catch(NumberFormatException e) {
+        return Integer.valueOf(dataElement.getAttributeValue(VALUE_ATTRIBUTE));
+      }
+      catch (NumberFormatException e) {
         return null;
       }
     }
@@ -46,13 +31,12 @@ public interface Externalizer<T> {
   Externalizer<Storage> STORAGE = new StorageExternalizer();
 
   abstract class BaseExternalizer<T> implements Externalizer<T> {
-
     @Override
     public void writeValue(Element dataElement, T value) {
       dataElement.setAttribute(VALUE_ATTRIBUTE, value.toString());
     }
   }
-  Externalizer<Boolean> BOOLEAN = new BaseExternalizer<Boolean>() {
+  Externalizer<Boolean> BOOLEAN = new BaseExternalizer<>() {
     @Override
     public Boolean readValue(Element dataElement) {
       return Boolean.valueOf(dataElement.getAttributeValue(VALUE_ATTRIBUTE));
@@ -63,44 +47,33 @@ public interface Externalizer<T> {
 
   void writeValue(Element dataElement, T value);
 
-  class FactoryBased<T extends JDOMExternalizable> implements Externalizer<T> {
-    private final Factory<T> myFactory;
+  interface SkippableValue {
+  }
 
-    public FactoryBased(Factory<T> factory) {
+  final class FactoryBased<T extends JDOMExternalizable> implements Externalizer<T> {
+    private final Factory<? extends T> myFactory;
+
+    public FactoryBased(@NotNull Factory<? extends T> factory) {
       myFactory = factory;
     }
 
     @Override
     public T readValue(Element dataElement) {
       T data = myFactory.create();
-      try {
-        data.readExternal(dataElement);
-      }
-      catch (InvalidDataException e) {
-        throw new RuntimeException(e);
-      }
+      data.readExternal(dataElement);
       return data;
     }
 
     @Override
     public void writeValue(Element dataElement, T value) {
-      try {
-        value.writeExternal(dataElement);
-      }
-      catch (WriteExternalException e) {
-        throw new RuntimeException(e);
-      }
-    }
-
-    public static <T extends JDOMExternalizable> FactoryBased<T> create(Factory<T> factory) {
-      return new FactoryBased<>(factory);
+      value.writeExternal(dataElement);
     }
   }
 
-  class StorageExternalizer implements Externalizer<Storage> {
-    @NonNls private static final String ITEM_TAG = "item";
-    @NonNls private static final String KEY_ATTR = "key";
-    @NonNls private static final String VALUE_ATTR = "value";
+  final class StorageExternalizer implements Externalizer<Storage> {
+    private static final @NonNls String ITEM_TAG = "item";
+    private static final @NonNls String KEY_ATTR = "key";
+    private static final @NonNls String VALUE_ATTR = "value";
 
     @Override
     public Storage readValue(Element dataElement) {
