@@ -1,28 +1,22 @@
-/*
- * Copyright 2000-2009 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2018 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.ui;
 
 import com.intellij.openapi.util.Pair;
+import com.intellij.ui.popup.list.InlineActionsUtilKt;
 
-import javax.swing.*;
+import javax.swing.JComponent;
+import javax.swing.JList;
+import javax.swing.ListCellRenderer;
+import javax.swing.ListModel;
+import javax.swing.ListSelectionModel;
 import javax.swing.event.ListDataEvent;
 import javax.swing.event.ListDataListener;
 import javax.swing.event.ListSelectionEvent;
 import javax.swing.event.ListSelectionListener;
-import java.awt.*;
+import java.awt.Component;
+import java.awt.Container;
+import java.awt.Point;
+import java.awt.Rectangle;
 import java.beans.PropertyChangeEvent;
 import java.beans.PropertyChangeListener;
 
@@ -31,6 +25,7 @@ public class ListExpandableItemsHandler extends AbstractExpandableItemsHandler<I
     super(list);
 
     final ListSelectionListener selectionListener = new ListSelectionListener() {
+      @Override
       public void valueChanged(ListSelectionEvent e) {
         if (e.getValueIsAdjusting()) return;
 
@@ -55,14 +50,17 @@ public class ListExpandableItemsHandler extends AbstractExpandableItemsHandler<I
 
 
     final ListDataListener modelListener = new ListDataListener() {
+      @Override
       public void intervalAdded(ListDataEvent e) {
         updateSelection(list);
       }
 
+      @Override
       public void intervalRemoved(ListDataEvent e) {
         updateSelection(list);
       }
 
+      @Override
       public void contentsChanged(ListDataEvent e) {
         updateSelection(list);
       }
@@ -75,10 +73,10 @@ public class ListExpandableItemsHandler extends AbstractExpandableItemsHandler<I
         updateSelection(list);
 
         if (evt.getOldValue() != null) {
-          ((ListModel)evt.getOldValue()).removeListDataListener(modelListener);
+          ((ListModel<?>)evt.getOldValue()).removeListDataListener(modelListener);
         }
         if (evt.getNewValue() != null) {
-          ((ListModel)evt.getNewValue()).addListDataListener(modelListener);
+          ((ListModel<?>)evt.getNewValue()).addListDataListener(modelListener);
         }
       }
     });
@@ -86,14 +84,16 @@ public class ListExpandableItemsHandler extends AbstractExpandableItemsHandler<I
 
   private void updateSelection(JList list) {
     int selection = list.getSelectedIndices().length == 1 ? list.getSelectedIndex() : -1;
-    handleSelectionChange(selection == -1 ? null : new Integer(selection));
+    handleSelectionChange(selection == -1 ? null : Integer.valueOf(selection));
   }
 
+  @Override
   protected Integer getCellKeyForPoint(Point point) {
     int rowIndex = myComponent.locationToIndex(point);
-    return rowIndex != -1 ? new Integer(rowIndex) : null;
+    return rowIndex != -1 ? Integer.valueOf(rowIndex) : null;
   }
 
+  @Override
   protected Pair<Component, Rectangle> getCellRendererAndBounds(Integer key) {
     int rowIndex = key.intValue();
 
@@ -114,8 +114,21 @@ public class ListExpandableItemsHandler extends AbstractExpandableItemsHandler<I
       myComponent.hasFocus()
     );
 
-    bounds.width = rendererComponent.getPreferredSize().width;
+    AppUIUtil.targetToDevice(rendererComponent, myComponent);
+
+    if (!containsInlineButtons(rendererComponent)) bounds.width = rendererComponent.getPreferredSize().width;
 
     return Pair.create(rendererComponent, bounds);
+  }
+
+  private static boolean containsInlineButtons(Component cmp) {
+    if (cmp instanceof JComponent && Boolean.TRUE.equals(((JComponent)cmp).getClientProperty(InlineActionsUtilKt.INLINE_BUTTON_MARKER))) return true;
+
+    if (cmp instanceof Container) {
+      for (Component child : ((Container)cmp).getComponents()) {
+        if (containsInlineButtons(child)) return true;
+      }
+    }
+    return false;
   }
 }
