@@ -1,39 +1,31 @@
-/*
- * Copyright 2000-2016 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 
 package org.jetbrains.plugins.groovy.debugger;
 
 import com.intellij.debugger.NoDataException;
-import com.intellij.debugger.PositionManager;
 import com.intellij.debugger.SourcePosition;
 import com.intellij.debugger.engine.CompoundPositionManager;
 import com.intellij.debugger.engine.DebugProcess;
 import com.intellij.debugger.engine.DebugProcessImpl;
+import com.intellij.debugger.engine.PositionManagerEx;
+import com.intellij.debugger.engine.evaluation.EvaluationContext;
 import com.intellij.debugger.engine.jdi.VirtualMachineProxy;
+import com.intellij.debugger.impl.DebuggerUtilsAsync;
+import com.intellij.debugger.impl.DebuggerUtilsEx;
+import com.intellij.debugger.jdi.StackFrameProxyImpl;
 import com.intellij.debugger.requests.ClassPrepareRequestor;
-import com.intellij.openapi.application.AccessToken;
-import com.intellij.openapi.application.ApplicationManager;
+import com.intellij.debugger.ui.impl.watch.StackFrameDescriptorImpl;
+import com.intellij.openapi.application.ReadAction;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.fileTypes.FileType;
+import com.intellij.openapi.fileTypes.FileTypeRegistry;
+import com.intellij.openapi.fileTypes.LanguageFileType;
+import com.intellij.openapi.fileTypes.UnknownFileType;
 import com.intellij.openapi.module.Module;
 import com.intellij.openapi.module.impl.scopes.ModuleWithDependenciesScope;
 import com.intellij.openapi.progress.ProcessCanceledException;
 import com.intellij.openapi.project.IndexNotReadyException;
 import com.intellij.openapi.project.Project;
-import com.intellij.openapi.util.Computable;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.psi.PsiClass;
@@ -42,6 +34,8 @@ import com.intellij.psi.PsiFile;
 import com.intellij.psi.search.GlobalSearchScope;
 import com.intellij.psi.util.PsiClassUtil;
 import com.intellij.psi.util.PsiTreeUtil;
+import com.intellij.util.ThreeState;
+import com.intellij.xdebugger.frame.XStackFrame;
 import com.sun.jdi.AbsentInformationException;
 import com.sun.jdi.Location;
 import com.sun.jdi.ReferenceType;
@@ -49,24 +43,25 @@ import com.sun.jdi.request.ClassPrepareRequest;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.plugins.groovy.GroovyFileType;
+import org.jetbrains.plugins.groovy.GroovyLanguage;
 import org.jetbrains.plugins.groovy.extensions.debugger.ScriptPositionManagerHelper;
 import org.jetbrains.plugins.groovy.lang.psi.GroovyFile;
 import org.jetbrains.plugins.groovy.lang.psi.GroovyFileBase;
 import org.jetbrains.plugins.groovy.lang.psi.GroovyPsiElement;
-import org.jetbrains.plugins.groovy.lang.psi.api.statements.blocks.GrClosableBlock;
+import org.jetbrains.plugins.groovy.lang.psi.api.GrFunctionalExpression;
+import org.jetbrains.plugins.groovy.lang.psi.api.statements.GrSwitchElement;
+import org.jetbrains.plugins.groovy.lang.psi.api.statements.expressions.GrSwitchExpression;
 import org.jetbrains.plugins.groovy.lang.psi.api.statements.typedef.GrTypeDefinition;
+import org.jetbrains.plugins.groovy.lang.psi.util.PsiUtil;
 import org.jetbrains.plugins.groovy.lang.stubs.GroovyShortNamesCache;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
-import java.util.Set;
 
-public class GroovyPositionManager implements PositionManager {
-  private static final Logger LOG = Logger.getInstance("#com.intellij.debugger.engine.PositionManagerImpl");
+public class GroovyPositionManager extends PositionManagerEx {
+  private static final Logger LOG = Logger.getInstance(GroovyPositionManager.class);
 
   private final DebugProcess myDebugProcess;
-  private static final Set<FileType> ourFileTypes = Collections.singleton(GroovyFileType.GROOVY_FILE_TYPE);
 
   public GroovyPositionManager(DebugProcess debugProcess) {
     myDebugProcess = debugProcess;
@@ -77,17 +72,14 @@ public class GroovyPositionManager implements PositionManager {
   }
 
   @Override
-  @NotNull
-  public List<Location> locationsOfLine(@NotNull ReferenceType type, @NotNull SourcePosition position) throws NoDataException {
+  public @NotNull List<Location> locationsOfLine(@NotNull ReferenceType type, @NotNull SourcePosition position) throws NoDataException {
     checkGroovyFile(position);
     try {
       if (LOG.isDebugEnabled()) {
         LOG.debug("locationsOfLine: " + type + "; " + position);
       }
       int line = position.getLine() + 1;
-      List<Location> locations = getDebugProcess().getVirtualMachineProxy().versionHigher("1.4")
-                                 ? type.locationsOfLine(DebugProcess.JAVA_STRATUM, null, line)
-                                 : type.locationsOfLine(line);
+      List<Location> locations = DebuggerUtilsAsync.locationsOfLineSync(type, DebugProcess.JAVA_STRATUM, null, line);
       if (locations == null || locations.isEmpty()) throw NoDataException.INSTANCE;
       return locations;
     }
@@ -96,17 +88,96 @@ public class GroovyPositionManager implements PositionManager {
     }
   }
 
-  @Nullable
-  private static GroovyPsiElement findReferenceTypeSourceImage(SourcePosition position) {
+  @Override
+  public ThreeState evaluateCondition(@NotNull EvaluationContext context,
+                                      @NotNull StackFrameProxyImpl frame,
+                                      @NotNull Location location,
+                                      @NotNull String expression) {
+    return ThreeState.UNSURE;
+  }
+
+  @Override
+  public @Nullable XStackFrame createStackFrame(@NotNull StackFrameDescriptorImpl descriptor) {
+    if (isInGroovyFile(descriptor.getLocation()) != ThreeState.YES) {
+      return null;
+    }
+    return new GroovyStackFrame(descriptor, true);
+  }
+
+  private static ThreeState isInGroovyFile(@Nullable Location location) {
+    if (location != null) {
+      var refType = location.declaringType();
+      try {
+        String safeName = refType.sourceName();
+        FileType fileType = FileTypeRegistry.getInstance().getFileTypeByFileName(safeName);
+        if (fileType == UnknownFileType.INSTANCE) {
+          return ThreeState.UNSURE;
+        }
+        if (fileType instanceof LanguageFileType languageFileType) {
+          if (languageFileType.getLanguage() == GroovyLanguage.INSTANCE) {
+            return ThreeState.YES;
+          }
+        }
+      } catch (AbsentInformationException ignore) {
+      }
+    }
+    return ThreeState.NO;
+  }
+
+  private static @Nullable GroovyPsiElement findReferenceTypeSourceImage(SourcePosition position) {
     PsiFile file = position.getFile();
     if (!(file instanceof GroovyFileBase)) return null;
     PsiElement element = file.findElementAt(position.getOffset());
     if (element == null) return null;
-    return PsiTreeUtil.getParentOfType(element, GrClosableBlock.class, GrTypeDefinition.class);
+    return getEnclosingPsiForElement(element);
   }
 
-  @Nullable
-  private static PsiClass findEnclosingTypeDefinition(SourcePosition position) {
+  /**
+   * In Groovy, there are some transformations performed before compiling or interpreting the source code.
+   * <br>
+   * First, all closures and lambdas are transformed to a local class extending {@code groovy.lang.Closure}. Therefore, code inside closures
+   * does not correspond to the class of the methods where the closure is defined.
+   * <br>
+   * Second, there is no such thing as a "switch expression".
+   * The following
+   * <code>
+   * <pre>
+   * switch(10) {
+   *   case 20 -> 30
+   *   case 30 -> {
+   *      40
+   *   }
+   * }
+   * </pre>
+   * </code>
+   * is transformed to
+   * <code>
+   * <pre>
+   * { ->
+   *   switch(10) {
+   *     case 20: return 30
+   *     case 30: return {->
+   *        return 40
+   *     }()
+   *   }
+   * }()
+   * </pre>
+   * </code>
+   * So the code inside switch expressions corresponds to a separate local class too.
+   */
+  private static GroovyPsiElement getEnclosingPsiForElement(PsiElement element) {
+    while (true) {
+      GroovyPsiElement parent = PsiTreeUtil.getParentOfType(element, GrSwitchExpression.class, GrFunctionalExpression.class, GrTypeDefinition.class);
+      if (!(parent instanceof GrSwitchElement && PsiUtil.isPlainSwitchStatement((GrSwitchElement)parent))) {
+        return parent;
+      } else {
+        element = parent;
+      }
+    }
+
+  }
+
+  private static @Nullable PsiClass findEnclosingTypeDefinition(SourcePosition position) {
     PsiFile file = position.getFile();
     if (!(file instanceof GroovyFileBase)) return null;
     PsiElement element = file.findElementAt(position.getOffset());
@@ -128,7 +199,7 @@ public class GroovyPositionManager implements PositionManager {
   }
 
   @Override
-  public ClassPrepareRequest createPrepareRequest(@NotNull final ClassPrepareRequestor requestor, @NotNull final SourcePosition position)
+  public ClassPrepareRequest createPrepareRequest(final @NotNull ClassPrepareRequestor requestor, final @NotNull SourcePosition position)
     throws NoDataException {
     if (LOG.isDebugEnabled()) {
       LOG.debug("createPrepareRequest: " + position);
@@ -155,27 +226,18 @@ public class GroovyPositionManager implements PositionManager {
     return myDebugProcess.getRequestsManager().createClassPrepareRequest(waitRequestor, qName + "$*");
   }
 
-  @Nullable
-  private static String findEnclosingName(@NotNull final SourcePosition position) {
-    AccessToken accessToken = ApplicationManager.getApplication().acquireReadActionLock();
-
-    try {
+  private static @Nullable String findEnclosingName(final @NotNull SourcePosition position) {
+    return ReadAction.compute(()->{
       PsiClass typeDefinition = findEnclosingTypeDefinition(position);
       if (typeDefinition != null) {
         return getClassNameForJvm(typeDefinition);
       }
       return getScriptQualifiedName(position);
-    }
-    finally {
-      accessToken.finish();
-    }
+    });
   }
 
-  @Nullable
-  private static String getOuterClassName(final SourcePosition position) {
-    AccessToken accessToken = ApplicationManager.getApplication().acquireReadActionLock();
-
-    try {
+  private static @Nullable String getOuterClassName(final SourcePosition position) {
+    return ReadAction.compute(()->{
       GroovyPsiElement sourceImage = findReferenceTypeSourceImage(position);
       if (sourceImage instanceof GrTypeDefinition) {
         return getClassNameForJvm((GrTypeDefinition)sourceImage);
@@ -184,14 +246,10 @@ public class GroovyPositionManager implements PositionManager {
         return getScriptQualifiedName(position);
       }
       return null;
-    }
-    finally {
-      accessToken.finish();
-    }
+    });
   }
 
-  @Nullable
-  private static String getClassNameForJvm(@NotNull final PsiClass typeDefinition) {
+  private static @Nullable String getClassNameForJvm(final @NotNull PsiClass typeDefinition) {
     String suffix = typeDefinition instanceof GrTypeDefinition && ((GrTypeDefinition)typeDefinition).isTrait() ? "$Trait$Helper" : "";
     final PsiClass psiClass = typeDefinition.getContainingClass();
     if (psiClass != null) {
@@ -213,8 +271,7 @@ public class GroovyPositionManager implements PositionManager {
     return qname == null ? null : qname + suffix;
   }
 
-  @Nullable
-  private static String getScriptQualifiedName(@NotNull SourcePosition position) {
+  private static @Nullable String getScriptQualifiedName(@NotNull SourcePosition position) {
     PsiFile file = position.getFile();
     if (file instanceof GroovyFile) {
       return getScriptFQName((GroovyFile)file);
@@ -223,8 +280,12 @@ public class GroovyPositionManager implements PositionManager {
   }
 
   @Override
-  public SourcePosition getSourcePosition(@Nullable final Location location) throws NoDataException {
+  public SourcePosition getSourcePosition(final @Nullable Location location) throws NoDataException {
     if (location == null) throw NoDataException.INSTANCE;
+    if (isInGroovyFile(location) == ThreeState.NO) throw NoDataException.INSTANCE;
+
+    int lineNumber = calcLineIndex(location);
+    if (lineNumber < 0) throw NoDataException.INSTANCE;
 
     if (LOG.isDebugEnabled()) {
       LOG.debug("getSourcePosition: " + location);
@@ -232,25 +293,16 @@ public class GroovyPositionManager implements PositionManager {
     PsiFile psiFile = getPsiFileByLocation(getDebugProcess().getProject(), location);
     if (psiFile == null) throw NoDataException.INSTANCE;
 
-    int lineNumber = calcLineIndex(location);
-    if (lineNumber < 0) throw NoDataException.INSTANCE;
     return SourcePosition.createFromLine(psiFile, lineNumber);
   }
 
   private int calcLineIndex(Location location) {
     LOG.assertTrue(myDebugProcess != null);
     if (location == null) return -1;
-
-    try {
-      return location.lineNumber() - 1;
-    }
-    catch (InternalError e) {
-      return -1;
-    }
+    return DebuggerUtilsEx.getLineNumber(location, true);
   }
 
-  @Nullable
-  private PsiFile getPsiFileByLocation(@NotNull final Project project, @Nullable final Location location) {
+  private @Nullable PsiFile getPsiFileByLocation(final @NotNull Project project, final @Nullable Location location) {
     if (location == null) return null;
 
     final ReferenceType refType = location.declaringType();
@@ -274,26 +326,23 @@ public class GroovyPositionManager implements PositionManager {
       if (classes.isEmpty()) {
         classes = cache.getClassesByFQName(qName, addModuleContent(searchScope), false);
       }
-      if (classes.isEmpty()) return null;
-      classes.sort(PsiClassUtil.createScopeComparator(searchScope));
-      PsiClass clazz = classes.get(0);
-      if (clazz != null) return clazz.getContainingFile();
+      if (!classes.isEmpty()) {
+        classes.sort(PsiClassUtil.createScopeComparator(searchScope));
+        PsiClass clazz = classes.getFirst();
+        if (clazz != null) return clazz.getContainingFile();
+      }
     }
-    catch (ProcessCanceledException e) {
-      return null;
-    }
-    catch (IndexNotReadyException e) {
+    catch (ProcessCanceledException | IndexNotReadyException e) {
       return null;
     }
 
     return getExtraScriptIfNotFound(project, refType, runtimeName, searchScope);
   }
 
-  @Nullable
-  private static PsiFile getExtraScriptIfNotFound(@NotNull Project project,
-                                                  @NotNull ReferenceType refType,
-                                                  @NotNull String runtimeName,
-                                                  @NotNull GlobalSearchScope searchScope) {
+  private static @Nullable PsiFile getExtraScriptIfNotFound(@NotNull Project project,
+                                                            @NotNull ReferenceType refType,
+                                                            @NotNull String runtimeName,
+                                                            @NotNull GlobalSearchScope searchScope) {
     for (ScriptPositionManagerHelper helper : ScriptPositionManagerHelper.EP_NAME.getExtensions()) {
       if (helper.isAppropriateRuntimeName(runtimeName)) {
         PsiFile file = helper.getExtraScriptIfNotFound(refType, runtimeName, project, searchScope);
@@ -324,42 +373,38 @@ public class GroovyPositionManager implements PositionManager {
   }
 
   @Override
-  @NotNull
-  public List<ReferenceType> getAllClasses(@NotNull final SourcePosition position) throws NoDataException {
+  public @NotNull List<ReferenceType> getAllClasses(final @NotNull SourcePosition position) throws NoDataException {
     if (LOG.isDebugEnabled()) {
       LOG.debug("getAllClasses: " + position);
     }
 
     checkGroovyFile(position);
-    List<ReferenceType> result = ApplicationManager.getApplication().runReadAction(new Computable<List<ReferenceType>>() {
-      @Override
-      public List<ReferenceType> compute() {
-        GroovyPsiElement sourceImage = findReferenceTypeSourceImage(position);
+    List<ReferenceType> result = ReadAction.compute(() -> {
+      GroovyPsiElement sourceImage = findReferenceTypeSourceImage(position);
 
-        if (sourceImage instanceof GrTypeDefinition && !((GrTypeDefinition)sourceImage).isAnonymous()) {
-          String qName = getClassNameForJvm((GrTypeDefinition)sourceImage);
-          if (qName != null) return myDebugProcess.getVirtualMachineProxy().classesByName(qName);
-        }
-        else if (sourceImage == null) {
-          final String scriptName = getScriptQualifiedName(position);
-          if (scriptName != null) return myDebugProcess.getVirtualMachineProxy().classesByName(scriptName);
-        }
-        else {
-          String enclosingName = findEnclosingName(position);
-          if (enclosingName == null) return null;
-
-          final List<ReferenceType> outers = myDebugProcess.getVirtualMachineProxy().classesByName(enclosingName);
-          final List<ReferenceType> result = new ArrayList<>(outers.size());
-          for (ReferenceType outer : outers) {
-            final ReferenceType nested = findNested(outer, sourceImage, position);
-            if (nested != null) {
-              result.add(nested);
-            }
-          }
-          return result;
-        }
-        return null;
+      if (sourceImage instanceof GrTypeDefinition && !((GrTypeDefinition)sourceImage).isAnonymous()) {
+        String qName = getClassNameForJvm((GrTypeDefinition)sourceImage);
+        if (qName != null) return VirtualMachineProxy.getCurrent().classesByName(qName);
       }
+      else if (sourceImage == null) {
+        final String scriptName = getScriptQualifiedName(position);
+        if (scriptName != null) return VirtualMachineProxy.getCurrent().classesByName(scriptName);
+      }
+      else {
+        String enclosingName = findEnclosingName(position);
+        if (enclosingName == null) return null;
+
+        final List<ReferenceType> outers = VirtualMachineProxy.getCurrent().classesByName(enclosingName);
+        final List<ReferenceType> result1 = new ArrayList<>(outers.size());
+        for (ReferenceType outer : outers) {
+          final ReferenceType nested = findNested(outer, sourceImage, position);
+          if (nested != null) {
+            result1.add(nested);
+          }
+        }
+        return result1;
+      }
+      return null;
     });
 
     if (LOG.isDebugEnabled()) {
@@ -369,15 +414,13 @@ public class GroovyPositionManager implements PositionManager {
     return result;
   }
 
-  @Nullable
-  private static String getScriptFQName(@NotNull GroovyFile groovyFile) {
+  private static @NotNull String getScriptFQName(@NotNull GroovyFile groovyFile) {
     String packageName = groovyFile.getPackageName();
     String fileName = getRuntimeScriptName(groovyFile);
     return StringUtil.getQualifiedName(packageName, fileName);
   }
 
-  @Nullable
-  private static String getRuntimeScriptName(@NotNull GroovyFile groovyFile) {
+  private static @NotNull String getRuntimeScriptName(@NotNull GroovyFile groovyFile) {
     if (groovyFile.isScript()) {
       for (ScriptPositionManagerHelper helper : ScriptPositionManagerHelper.EP_NAME.getExtensions()) {
         if (helper.isAppropriateScriptFile(groovyFile)) {
@@ -391,9 +434,8 @@ public class GroovyPositionManager implements PositionManager {
     return vFile.getNameWithoutExtension();
   }
 
-  @Nullable
-  private ReferenceType findNested(ReferenceType fromClass, final GroovyPsiElement toFind, SourcePosition classPosition) {
-    final VirtualMachineProxy vmProxy = myDebugProcess.getVirtualMachineProxy();
+  private @Nullable ReferenceType findNested(ReferenceType fromClass, final GroovyPsiElement toFind, SourcePosition classPosition) {
+    final VirtualMachineProxy vmProxy = VirtualMachineProxy.getCurrent();
     if (fromClass.isPrepared()) {
 
       final List<ReferenceType> nestedTypes = vmProxy.nestedTypes(fromClass);
@@ -407,11 +449,10 @@ public class GroovyPositionManager implements PositionManager {
 
       try {
         final int lineNumber = classPosition.getLine() + 1;
-        if (!fromClass.locationsOfLine(lineNumber).isEmpty()) {
+        if (!DebuggerUtilsAsync.locationsOfLineSync(fromClass, lineNumber).isEmpty()) {
           return fromClass;
         }
-        //noinspection LoopStatementThatDoesntLoop
-        for (Location location : fromClass.allLineLocations()) {
+        for (Location location : DebuggerUtilsAsync.allLineLocationsSync(fromClass)) {
           final SourcePosition candidateFirstPosition = SourcePosition.createFromLine(
             toFind.getContainingFile(), location.lineNumber() - 1
           );
@@ -427,9 +468,9 @@ public class GroovyPositionManager implements PositionManager {
     return null;
   }
 
-  @NotNull
   @Override
-  public Set<? extends FileType> getAcceptedFileTypes() {
-    return ourFileTypes;
+  public boolean isAcceptedFileType(@NotNull FileType fileType) {
+    return fileType == GroovyFileType.GROOVY_FILE_TYPE ||
+           ScriptPositionManagerHelper.EP_NAME.findFirstSafe(ext -> ext.getAcceptedFileTypes().contains(fileType)) != null;
   }
 }
