@@ -12,22 +12,28 @@
 // limitations under the License.
 package org.zmlx.hg4idea;
 
+import com.intellij.dvcs.commit.DvcsCommitModeProvider;
 import com.intellij.execution.ui.ConsoleViewContentType;
 import com.intellij.ide.BrowserUtil;
 import com.intellij.notification.Notification;
 import com.intellij.notification.NotificationListener;
+import com.intellij.openapi.Disposable;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.application.ApplicationNamesInfo;
-import com.intellij.openapi.application.ModalityState;
-import com.intellij.openapi.components.ServiceManager;
 import com.intellij.openapi.diagnostic.Logger;
-import com.intellij.openapi.diff.impl.patch.formove.FilePathComparator;
 import com.intellij.openapi.fileTypes.FileTypeManager;
-import com.intellij.openapi.options.Configurable;
 import com.intellij.openapi.options.ShowSettingsUtil;
+import com.intellij.openapi.progress.ProgressIndicator;
+import com.intellij.openapi.progress.Task;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.util.Disposer;
-import com.intellij.openapi.vcs.*;
+import com.intellij.openapi.vcs.AbstractVcs;
+import com.intellij.openapi.vcs.CommittedChangesProvider;
+import com.intellij.openapi.vcs.FileStatus;
+import com.intellij.openapi.vcs.ProjectLevelVcsManager;
+import com.intellij.openapi.vcs.VcsKey;
+import com.intellij.openapi.vcs.VcsNotifier;
+import com.intellij.openapi.vcs.VcsType;
 import com.intellij.openapi.vcs.annotate.AnnotationProvider;
 import com.intellij.openapi.vcs.changes.ChangeProvider;
 import com.intellij.openapi.vcs.changes.CommitExecutor;
@@ -36,55 +42,69 @@ import com.intellij.openapi.vcs.diff.DiffProvider;
 import com.intellij.openapi.vcs.history.VcsHistoryProvider;
 import com.intellij.openapi.vcs.merge.MergeProvider;
 import com.intellij.openapi.vcs.rollback.RollbackEnvironment;
-import com.intellij.openapi.vcs.roots.VcsRootDetector;
 import com.intellij.openapi.vcs.update.UpdateEnvironment;
-import com.intellij.openapi.vcs.versionBrowser.CommittedChangeList;
-import com.intellij.openapi.vfs.VfsUtilCore;
 import com.intellij.openapi.vfs.VirtualFile;
-import com.intellij.util.containers.ComparatorDelegate;
-import com.intellij.util.containers.Convertor;
-import com.intellij.util.messages.MessageBusConnection;
+import com.intellij.util.concurrency.annotations.RequiresEdt;
 import com.intellij.util.messages.Topic;
-import org.jetbrains.annotations.CalledInAwt;
+import com.intellij.vcs.commit.CommitMode;
+import com.intellij.vcs.console.VcsConsoleTabService;
+import kotlin.coroutines.EmptyCoroutineContext;
+import kotlinx.coroutines.CoroutineScope;
+import kotlinx.coroutines.CoroutineScopeKt;
+import org.jetbrains.annotations.Nls;
+import org.jetbrains.annotations.NonNls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
-import org.zmlx.hg4idea.provider.*;
+import org.zmlx.hg4idea.provider.HgChangeProvider;
+import org.zmlx.hg4idea.provider.HgCommittedChangesProvider;
+import org.zmlx.hg4idea.provider.HgDiffProvider;
+import org.zmlx.hg4idea.provider.HgHistoryProvider;
+import org.zmlx.hg4idea.provider.HgMergeProvider;
+import org.zmlx.hg4idea.provider.HgRollbackEnvironment;
 import org.zmlx.hg4idea.provider.annotate.HgAnnotationProvider;
 import org.zmlx.hg4idea.provider.commit.HgCheckinEnvironment;
-import org.zmlx.hg4idea.provider.commit.HgCloseBranchExecutor;
 import org.zmlx.hg4idea.provider.commit.HgCommitAndPushExecutor;
 import org.zmlx.hg4idea.provider.commit.HgMQNewExecutor;
 import org.zmlx.hg4idea.provider.update.HgUpdateEnvironment;
 import org.zmlx.hg4idea.roots.HgIntegrationEnabler;
 import org.zmlx.hg4idea.status.HgRemoteStatusUpdater;
-import org.zmlx.hg4idea.status.ui.HgHideableWidget;
-import org.zmlx.hg4idea.status.ui.HgIncomingOutgoingWidget;
-import org.zmlx.hg4idea.status.ui.HgStatusWidget;
+import org.zmlx.hg4idea.status.ui.HgWidgetUpdater;
 import org.zmlx.hg4idea.util.HgUtil;
 import org.zmlx.hg4idea.util.HgVersion;
 
 import javax.swing.event.HyperlinkEvent;
 import java.io.File;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
+import java.util.concurrent.atomic.AtomicReference;
+import java.util.function.Supplier;
 
-public class HgVcs extends AbstractVcs<CommittedChangeList> {
+import static com.intellij.platform.util.coroutines.CoroutineScopeKt.childScope;
+import static com.intellij.util.concurrency.AppJavaExecutorUtil.awaitCancellationAndDispose;
+import static com.intellij.util.containers.ContainerUtil.exists;
+import static org.zmlx.hg4idea.HgNotificationIdsHolder.UNABLE_TO_RUN_EXEC;
+import static org.zmlx.hg4idea.HgNotificationIdsHolder.UNSUPPORTED_EXT;
+import static org.zmlx.hg4idea.HgNotificationIdsHolder.UNSUPPORTED_VERSION;
 
+public final class HgVcs extends AbstractVcs {
+  @Topic.ProjectLevel
   public static final Topic<HgUpdater> REMOTE_TOPIC = new Topic<>("hg4idea.remote", HgUpdater.class);
+
+  @Topic.ProjectLevel
   public static final Topic<HgUpdater> STATUS_TOPIC = new Topic<>("hg4idea.status", HgUpdater.class);
-  public static final Topic<HgHideableWidget> INCOMING_OUTGOING_CHECK_TOPIC =
-    new Topic<>("hg4idea.incomingcheck", HgHideableWidget.class);
+
+  @Topic.ProjectLevel
+  public static final Topic<HgWidgetUpdater> INCOMING_OUTGOING_CHECK_TOPIC = new Topic<>("hg4idea.incomingcheck", HgWidgetUpdater.class);
+
   private static final Logger LOG = Logger.getInstance(HgVcs.class);
 
-  public static final String VCS_NAME = "hg4idea";
-  public static final String DISPLAY_NAME = "Mercurial";
-  private final static VcsKey ourKey = createKey(VCS_NAME);
+  public static final @NonNls String VCS_NAME = "hg4idea";
+  public static final Supplier<@Nls String> DISPLAY_NAME = HgBundle.messagePointer("hg4idea.vcs.name");
+  public static final Supplier<@Nls String> SHORT_DISPLAY_NAME = HgBundle.messagePointer("hg4idea.vcs.short.name");
+  private static final VcsKey ourKey = createKey(VCS_NAME);
   private static final int MAX_CONSOLE_OUTPUT_SIZE = 10000;
 
-  private static final String ORIG_FILE_PATTERN = "*.orig";
-  @Nullable public static final String HGENCODING = System.getenv("HGENCODING");
+  private static final @NonNls String ORIG_FILE_PATTERN = "*.orig";
+  public static final @Nullable @NonNls String HGENCODING = System.getenv("HGENCODING");
 
   private final HgChangeProvider changeProvider;
   private final HgRollbackEnvironment rollbackEnvironment;
@@ -93,60 +113,53 @@ public class HgVcs extends AbstractVcs<CommittedChangeList> {
   private final HgCheckinEnvironment checkinEnvironment;
   private final HgAnnotationProvider annotationProvider;
   private final HgUpdateEnvironment updateEnvironment;
-  private final HgCachingCommittedChangesProvider committedChangesProvider;
-  private MessageBusConnection messageBusConnection;
-  @NotNull private final HgGlobalSettings globalSettings;
-  @NotNull private final HgProjectSettings projectSettings;
-  private final ProjectLevelVcsManager myVcsManager;
+  private final HgCommittedChangesProvider committedChangesProvider;
 
-  private HgVFSListener myVFSListener;
+  private final AtomicReference<CoroutineScope> myActiveScope = new AtomicReference<>();
+
   private final HgMergeProvider myMergeProvider;
   private HgExecutableValidator myExecutableValidator;
   private final Object myExecutableValidatorLock = new Object();
   private File myPromptHooksExtensionFile;
   private final CommitExecutor myCommitAndPushExecutor;
   private final CommitExecutor myMqNewExecutor;
-  private final HgCloseBranchExecutor myCloseBranchExecutor;
 
   private HgRemoteStatusUpdater myHgRemoteStatusUpdater;
-  private HgStatusWidget myStatusWidget;
-  private HgIncomingOutgoingWidget myIncomingWidget;
-  private HgIncomingOutgoingWidget myOutgoingWidget;
-  @NotNull private HgVersion myVersion = HgVersion.NULL;  // version of Hg which this plugin uses.
+  private @NotNull HgVersion myVersion = HgVersion.NULL;  // version of Hg which this plugin uses.
 
-  public HgVcs(@NotNull Project project,
-               @NotNull HgGlobalSettings globalSettings,
-               @NotNull HgProjectSettings projectSettings,
-               ProjectLevelVcsManager vcsManager) {
+  public HgVcs(@NotNull Project project) {
     super(project, VCS_NAME);
-    this.globalSettings = globalSettings;
-    this.projectSettings = projectSettings;
-    myVcsManager = vcsManager;
+
     changeProvider = new HgChangeProvider(project, getKeyInstanceMethod());
     rollbackEnvironment = new HgRollbackEnvironment(project);
     diffProvider = new HgDiffProvider(project);
     historyProvider = new HgHistoryProvider(project);
-    checkinEnvironment = new HgCheckinEnvironment(project);
+    checkinEnvironment = new HgCheckinEnvironment(this);
     annotationProvider = new HgAnnotationProvider(project);
     updateEnvironment = new HgUpdateEnvironment(project);
-    committedChangesProvider = new HgCachingCommittedChangesProvider(project, this);
+    committedChangesProvider = new HgCommittedChangesProvider(project, this);
     myMergeProvider = new HgMergeProvider(myProject);
-    myCommitAndPushExecutor = new HgCommitAndPushExecutor(checkinEnvironment);
-    myMqNewExecutor = new HgMQNewExecutor(checkinEnvironment);
-    myCloseBranchExecutor = new HgCloseBranchExecutor(checkinEnvironment);
+    myCommitAndPushExecutor = new HgCommitAndPushExecutor();
+    myMqNewExecutor = new HgMQNewExecutor();
   }
 
-  public String getDisplayName() {
-    return DISPLAY_NAME;
+  @Override
+  public @NotNull String getDisplayName() {
+    return DISPLAY_NAME.get();
   }
 
-  public Configurable getConfigurable() {
-    return new HgProjectConfigurable(getProject(), projectSettings);
+  @Override
+  public @NotNull String getShortName() {
+    return SHORT_DISPLAY_NAME.get();
   }
 
-  @NotNull
-  public HgProjectSettings getProjectSettings() {
-    return projectSettings;
+  @Override
+  public @Nls @NotNull String getShortNameWithMnemonic() {
+    return HgBundle.message("hg4idea.vcs.short.name.with.mnemonic");
+  }
+
+  public @NotNull HgProjectSettings getProjectSettings() {
+    return HgProjectSettings.getInstance(myProject);
   }
 
   @Override
@@ -154,9 +167,8 @@ public class HgVcs extends AbstractVcs<CommittedChangeList> {
     return changeProvider;
   }
 
-  @Nullable
   @Override
-  public RollbackEnvironment createRollbackEnvironment() {
+  public @Nullable RollbackEnvironment createRollbackEnvironment() {
     return rollbackEnvironment;
   }
 
@@ -175,9 +187,8 @@ public class HgVcs extends AbstractVcs<CommittedChangeList> {
     return getVcsHistoryProvider();
   }
 
-  @Nullable
   @Override
-  public CheckinEnvironment createCheckinEnvironment() {
+  public @Nullable CheckinEnvironment createCheckinEnvironment() {
     return checkinEnvironment;
   }
 
@@ -191,9 +202,8 @@ public class HgVcs extends AbstractVcs<CommittedChangeList> {
     return myMergeProvider;
   }
 
-  @Nullable
   @Override
-  public UpdateEnvironment createUpdateEnvironment() {
+  public @Nullable UpdateEnvironment createUpdateEnvironment() {
     return updateEnvironment;
   }
 
@@ -208,6 +218,14 @@ public class HgVcs extends AbstractVcs<CommittedChangeList> {
   }
 
   @Override
+  public FileStatus[] getProvidedStatuses() {
+    return new FileStatus[]{
+      HgChangeProvider.FileStatuses.COPIED,
+      HgChangeProvider.FileStatuses.RENAMED
+    };
+  }
+
+  @Override
   public CommittedChangesProvider getCommittedChangesProvider() {
     return committedChangesProvider;
   }
@@ -217,47 +235,10 @@ public class HgVcs extends AbstractVcs<CommittedChangeList> {
     return true;
   }
 
-  @Override
-  public <S> List<S> filterUniqueRoots(final List<S> in, final Convertor<S, VirtualFile> convertor) {
-    Collections.sort(in, new ComparatorDelegate<>(convertor, FilePathComparator.getInstance()));
-
-    for (int i = 1; i < in.size(); i++) {
-      final S sChild = in.get(i);
-      final VirtualFile child = convertor.convert(sChild);
-      final VirtualFile childRoot = HgUtil.getHgRootOrNull(myProject, child);
-      if (childRoot == null) {
-        continue;
-      }
-      for (int j = i - 1; j >= 0; --j) {
-        final S sParent = in.get(j);
-        final VirtualFile parent = convertor.convert(sParent);
-        // if the parent is an ancestor of the child and that they share common root, the child is removed
-        if (VfsUtilCore.isAncestor(parent, child, false) && VfsUtilCore.isAncestor(childRoot, parent, false)) {
-          in.remove(i);
-          //noinspection AssignmentToForLoopParameter
-          --i;
-          break;
-        }
-      }
-    }
-    return in;
-  }
-
-  @Override
-  public RootsConvertor getCustomConvertor() {
-    return HgRootsHandler.getInstance(myProject);
-  }
-
-  @Override
-  public boolean isVersionedDirectory(VirtualFile dir) {
-    return HgUtil.getNearestHgRoot(dir) != null;
-  }
-
   /**
    * @return the prompthooks.py extension used for capturing prompts from Mercurial and requesting IDEA's user about authentication.
    */
-  @NotNull
-  public File getPromptHooksExtensionFile() {
+  public @NotNull File getPromptHooksExtensionFile() {
     if (myPromptHooksExtensionFile == null || !myPromptHooksExtensionFile.exists()) {
       // check that hooks are available
       myPromptHooksExtensionFile = HgUtil.getTemporaryPythonFile("prompthooks");
@@ -271,42 +252,32 @@ public class HgVcs extends AbstractVcs<CommittedChangeList> {
 
   @Override
   public void activate() {
+    CoroutineScope globalScope = HgDisposable.getCoroutineScope(myProject);
+    CoroutineScope activeScope = childScope(globalScope, "HgVcs", EmptyCoroutineContext.INSTANCE, true);
+
+    Disposable disposable = Disposer.newDisposable();
+    awaitCancellationAndDispose(activeScope, disposable);
+
+    // workaround the race between 'activate' and 'deactivate'
+    CoroutineScope oldScope = myActiveScope.getAndSet(activeScope);
+    if (oldScope != null) CoroutineScopeKt.cancel(oldScope, null);
+
     // validate hg executable on start and update hg version
     checkExecutableAndVersion();
 
-    // status bar
-    myStatusWidget = new HgStatusWidget(this, getProject(), projectSettings);
-    myStatusWidget.activate();
-
-    myIncomingWidget = new HgIncomingOutgoingWidget(this, getProject(), projectSettings, true);
-    myOutgoingWidget = new HgIncomingOutgoingWidget(this, getProject(), projectSettings, false);
-
-    ApplicationManager.getApplication().invokeAndWait(new Runnable() {
-      @Override
-      public void run() {
-        myIncomingWidget.activate();
-        myOutgoingWidget.activate();
-      }
-    }, ModalityState.NON_MODAL);
-
     // updaters and listeners
-    myHgRemoteStatusUpdater =
-      new HgRemoteStatusUpdater(this, myIncomingWidget.getChangesetStatus(), myOutgoingWidget.getChangesetStatus(),
-                                projectSettings);
-    myHgRemoteStatusUpdater.activate();
+    HgRemoteStatusUpdater remoteStatusUpdater = new HgRemoteStatusUpdater(this);
+    Disposer.register(disposable, remoteStatusUpdater);
+    myHgRemoteStatusUpdater = remoteStatusUpdater;
 
-    messageBusConnection = myProject.getMessageBus().connect();
-    myVFSListener = new HgVFSListener(myProject, this);
+    HgVFSListener VFSListener = HgVFSListener.createInstance(this, activeScope);
+    Disposer.register(disposable, VFSListener);
 
     // ignore temporary files
     final String ignoredPattern = FileTypeManager.getInstance().getIgnoredFilesList();
     if (!ignoredPattern.contains(ORIG_FILE_PATTERN)) {
       final String newPattern = ignoredPattern + (ignoredPattern.endsWith(";") ? "" : ";") + ORIG_FILE_PATTERN;
-      HgUtil.runWriteActionLater(new Runnable() {
-        public void run() {
-          FileTypeManager.getInstance().setIgnoredFilesList(newPattern);
-        }
-      });
+      HgUtil.runWriteActionLater(() -> FileTypeManager.getInstance().setIgnoredFilesList(newPattern));
     }
   }
 
@@ -318,80 +289,44 @@ public class HgVcs extends AbstractVcs<CommittedChangeList> {
 
   @Override
   public void deactivate() {
-    if (myHgRemoteStatusUpdater != null) {
-      myHgRemoteStatusUpdater.deactivate();
-      myHgRemoteStatusUpdater = null;
-    }
-    if (myStatusWidget != null) {
-      myStatusWidget.deactivate();
-      myStatusWidget = null;
-    }
-    if (myIncomingWidget != null) {
-      myIncomingWidget.deactivate();
-      myIncomingWidget = null;
-    }
-    if (myOutgoingWidget != null) {
-      myOutgoingWidget.deactivate();
-      myOutgoingWidget = null;
-    }
-    if (messageBusConnection != null) {
-      messageBusConnection.disconnect();
-    }
-
-    if (myVFSListener != null) {
-      Disposer.dispose(myVFSListener);
-      myVFSListener = null;
-    }
-
-    super.deactivate();
+    CoroutineScope oldScope = myActiveScope.getAndSet(null);
+    if (oldScope != null) CoroutineScopeKt.cancel(oldScope, null);
   }
 
-  @Nullable
-  public static HgVcs getInstance(Project project) {
+  public static @Nullable HgVcs getInstance(Project project) {
     if (project == null || project.isDisposed()) {
       return null;
     }
     final ProjectLevelVcsManager vcsManager = ProjectLevelVcsManager.getInstance(project);
-    if (vcsManager == null) {
-      return null;
-    }
     return (HgVcs)vcsManager.findVcsByName(VCS_NAME);
   }
 
-  @NotNull
-  public HgGlobalSettings getGlobalSettings() {
-    return globalSettings;
-  }
-
-  public void showMessageInConsole(@NotNull String message, @NotNull ConsoleViewContentType contentType) {
+  public void showMessageInConsole(@NotNull @Nls String message, @NotNull ConsoleViewContentType contentType) {
     if (message.length() > MAX_CONSOLE_OUTPUT_SIZE) {
       message = message.substring(0, MAX_CONSOLE_OUTPUT_SIZE);
     }
-    myVcsManager.addMessageToConsoleWindow(message, contentType);
+    VcsConsoleTabService.getInstance(myProject).addMessage(message, contentType);
   }
 
   public HgExecutableValidator getExecutableValidator() {
     synchronized (myExecutableValidatorLock) {
       if (myExecutableValidator == null) {
-        myExecutableValidator = new HgExecutableValidator(myProject, this);
+        myExecutableValidator = new HgExecutableValidator(myProject);
       }
       return myExecutableValidator;
     }
   }
 
   @Override
-  public boolean reportsIgnoredDirectories() {
-    return false;
-  }
-
-  @Override
   public List<CommitExecutor> getCommitExecutors() {
-    return Arrays.asList(myCommitAndPushExecutor, myMqNewExecutor);
+    if (exists(HgUtil.getRepositoryManager(myProject).getRepositories(), r -> r.getRepositoryConfig().isMqUsed())) {
+      return List.of(myCommitAndPushExecutor, myMqNewExecutor);
+    }
+    return List.of(myCommitAndPushExecutor);
   }
 
-  @NotNull
-  public HgCloseBranchExecutor getCloseBranchExecutor() {
-    return myCloseBranchExecutor;
+  public @Nullable HgRemoteStatusUpdater getRemoteStatusUpdater() {
+    return myHgRemoteStatusUpdater;
   }
 
   public static VcsKey getKey() {
@@ -404,19 +339,19 @@ public class HgVcs extends AbstractVcs<CommittedChangeList> {
   }
 
   @Override
-  @CalledInAwt
-  public void enableIntegration() {
-    HgUtil.executeOnPooledThread(new Runnable() {
-      public void run() {
-        Collection<VcsRoot> roots = ServiceManager.getService(myProject, VcsRootDetector.class).detect();
-        new HgIntegrationEnabler(HgVcs.this).enable(roots);
-      }
-    }, myProject);
+  public @Nullable CommitMode getForcedCommitMode(@NotNull CommitMode originalMode) {
+    return DvcsCommitModeProvider.compute();
   }
 
   @Override
-  public CheckoutProvider getCheckoutProvider() {
-    return new HgCheckoutProvider();
+  @RequiresEdt
+  public void enableIntegration(@Nullable VirtualFile targetDirectory) {
+    new Task.Backgroundable(myProject, HgBundle.message("progress.title.enabling.hg"), true) {
+      @Override
+      public void run(@NotNull ProgressIndicator indicator) {
+        new HgIntegrationEnabler(HgVcs.this, targetDirectory).detectAndEnable();
+      }
+    }.queue();
   }
 
   /**
@@ -424,7 +359,7 @@ public class HgVcs extends AbstractVcs<CommittedChangeList> {
    * In the case of nullable or unsupported version reports the problem.
    */
   public void checkVersion() {
-    final String executable = getGlobalSettings().getHgExecutable();
+    final String executable = HgExecutableManager.getInstance().getHgExecutable(myProject);
     VcsNotifier vcsNotifier = VcsNotifier.getInstance(myProject);
     final String SETTINGS_LINK = "settings";
     final String UPDATE_LINK = "update";
@@ -433,8 +368,7 @@ public class HgVcs extends AbstractVcs<CommittedChangeList> {
       protected void hyperlinkActivated(@NotNull Notification notification,
                                         @NotNull HyperlinkEvent e) {
         if (SETTINGS_LINK.equals(e.getDescription())) {
-          ShowSettingsUtil.getInstance()
-            .showSettingsDialog(myProject, getConfigurable().getDisplayName());
+          ShowSettingsUtil.getInstance().showSettingsDialog(myProject, HgProjectConfigurable.class);
         }
         else if (UPDATE_LINK.equals(e.getDescription())) {
           BrowserUtil.browse("http://mercurial.selenic.com");
@@ -442,21 +376,18 @@ public class HgVcs extends AbstractVcs<CommittedChangeList> {
       }
     };
     try {
-      myVersion = HgVersion.identifyVersion(executable);
+      myVersion = HgVersion.identifyVersion(myProject, executable);
       //if version is not supported, but have valid hg executable
       if (!myVersion.isSupported()) {
         LOG.info("Unsupported Hg version: " + myVersion);
-        String message = String.format("The <a href='" + SETTINGS_LINK + "'>configured</a> version of Hg is not supported: %s.<br/> " +
-                                       "The minimal supported version is %s. Please <a href='" + UPDATE_LINK + "'>update</a>.",
-                                       myVersion, HgVersion.MIN);
-        vcsNotifier.notifyError("Unsupported Hg version", message, linkAdapter);
+        String message = HgBundle.message("hg4idea.version.update", SETTINGS_LINK, myVersion, HgVersion.MIN, UPDATE_LINK);
+        vcsNotifier.notifyError(UNSUPPORTED_VERSION, HgBundle.message("hg4idea.version.unsupported"), message, linkAdapter);
       }
       else if (myVersion.hasUnsupportedExtensions()) {
         String unsupportedExtensionsAsString = myVersion.getUnsupportedExtensions().toString();
         LOG.warn("Unsupported Hg extensions: " + unsupportedExtensionsAsString);
-        String message = String.format("Some hg extensions %s are not found or not supported by your hg version and will be ignored.\n" +
-                                       "Please, update your hgrc or Mercurial.ini file", unsupportedExtensionsAsString);
-        vcsNotifier.notifyWarning("Unsupported Hg version", message);
+        String message = HgBundle.message("hg4idea.version.unsupported.ext", unsupportedExtensionsAsString);
+        vcsNotifier.notifyWarning(UNSUPPORTED_EXT, HgBundle.message("hg4idea.version.unsupported"), message);
       }
     }
     catch (Exception e) {
@@ -464,12 +395,9 @@ public class HgVcs extends AbstractVcs<CommittedChangeList> {
         //sometimes not hg application has version command, but we couldn't parse an answer as valid hg,
         // so parse(output) throw ParseException, but hg and git executable seems to be valid in this case
         final String reason = (e.getCause() != null ? e.getCause() : e).getMessage();
-        String message = HgVcsMessages.message("hg4idea.unable.to.run.hg", executable);
-        vcsNotifier.notifyError(message,
-                                reason +
-                                "<br/> Please check your hg executable path in <a href='" +
-                                SETTINGS_LINK +
-                                "'> settings </a>",
+        String message = HgBundle.message("hg4idea.unable.to.run.hg", executable);
+        vcsNotifier.notifyError(UNABLE_TO_RUN_EXEC, message,
+                                HgBundle.message("hg4idea.exec.not.found", reason, SETTINGS_LINK),
                                 linkAdapter
         );
       }
@@ -479,8 +407,7 @@ public class HgVcs extends AbstractVcs<CommittedChangeList> {
   /**
    * @return the version number of Hg, which is used by IDEA. Or {@link HgVersion#NULL} if version info is unavailable.
    */
-  @NotNull
-  public HgVersion getVersion() {
+  public @NotNull HgVersion getVersion() {
     return myVersion;
   }
 }
