@@ -1,26 +1,19 @@
-/*
- * Copyright 2000-2016 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2026 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.jetbrains.java.decompiler.struct.attr;
 
+import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 import org.jetbrains.java.decompiler.code.CodeConstants;
-import org.jetbrains.java.decompiler.modules.decompiler.exps.*;
+import org.jetbrains.java.decompiler.modules.decompiler.exps.AnnotationExprent;
+import org.jetbrains.java.decompiler.modules.decompiler.exps.ConstExprent;
+import org.jetbrains.java.decompiler.modules.decompiler.exps.Exprent;
+import org.jetbrains.java.decompiler.modules.decompiler.exps.FieldExprent;
+import org.jetbrains.java.decompiler.modules.decompiler.exps.NewExprent;
 import org.jetbrains.java.decompiler.struct.consts.ConstantPool;
 import org.jetbrains.java.decompiler.struct.consts.PrimitiveConstant;
 import org.jetbrains.java.decompiler.struct.gen.FieldDescriptor;
 import org.jetbrains.java.decompiler.struct.gen.VarType;
+import org.jetbrains.java.decompiler.util.DataInputFullStream;
 
 import java.io.DataInputStream;
 import java.io.IOException;
@@ -32,8 +25,8 @@ public class StructAnnotationAttribute extends StructGeneralAttribute {
   private List<AnnotationExprent> annotations;
 
   @Override
-  public void initContent(ConstantPool pool) throws IOException {
-    annotations = parseAnnotations(pool, stream());
+  public void initContent(DataInputFullStream data, ConstantPool pool) throws IOException {
+    annotations = parseAnnotations(pool, data);
   }
 
   public static List<AnnotationExprent> parseAnnotations(ConstantPool pool, DataInputStream data) throws IOException {
@@ -41,7 +34,10 @@ public class StructAnnotationAttribute extends StructGeneralAttribute {
     if (len > 0) {
       List<AnnotationExprent> annotations = new ArrayList<>(len);
       for (int i = 0; i < len; i++) {
-        annotations.add(parseAnnotation(data, pool));
+        AnnotationExprent annotation = parseAnnotation(data, pool);
+        if (isSupportedAnnotationName(annotation.getClassName())) {
+          annotations.add(annotation);
+        }
       }
       return annotations;
     }
@@ -50,7 +46,7 @@ public class StructAnnotationAttribute extends StructGeneralAttribute {
     }
   }
 
-  public static AnnotationExprent parseAnnotation(DataInputStream data, ConstantPool pool) throws IOException {
+  public static @NotNull AnnotationExprent parseAnnotation(DataInputStream data, ConstantPool pool) throws IOException {
     String className = pool.getPrimitiveConstant(data.readUnsignedShort()).getString();
 
     List<String> names;
@@ -69,61 +65,47 @@ public class StructAnnotationAttribute extends StructGeneralAttribute {
       values = Collections.emptyList();
     }
 
-    return new AnnotationExprent(new VarType(className).value, names, values);
+    return new AnnotationExprent(new VarType(className).getValue(), names, values);
+  }
+
+  /**
+   * Synthetic JDK markers like {@code jdk/Profile+Annotation} are legal in the classfile
+   * format but not a valid Java reference. Skip them at parse time.
+   */
+  private static boolean isSupportedAnnotationName(@Nullable String className) {
+    return className == null || (className.indexOf('+') < 0 && className.indexOf('-') < 0);
   }
 
   public static Exprent parseAnnotationElement(DataInputStream data, ConstantPool pool) throws IOException {
     int tag = data.readUnsignedByte();
 
     switch (tag) {
-      case 'e': // enum constant
+      case 'e' -> { // enum constant
         String className = pool.getPrimitiveConstant(data.readUnsignedShort()).getString();
         String constName = pool.getPrimitiveConstant(data.readUnsignedShort()).getString();
         FieldDescriptor descr = FieldDescriptor.parseDescriptor(className);
-        return new FieldExprent(constName, descr.type.value, true, null, descr, null);
-
-      case 'c': // class
+        return new FieldExprent(constName, descr.type.getValue(), true, null, descr, null);
+      }
+      case 'c' -> { // class
         String descriptor = pool.getPrimitiveConstant(data.readUnsignedShort()).getString();
         VarType type = FieldDescriptor.parseDescriptor(descriptor).type;
 
-        String value;
-        switch (type.type) {
-          case CodeConstants.TYPE_OBJECT:
-            value = type.value;
-            break;
-          case CodeConstants.TYPE_BYTE:
-            value = byte.class.getName();
-            break;
-          case CodeConstants.TYPE_CHAR:
-            value = char.class.getName();
-            break;
-          case CodeConstants.TYPE_DOUBLE:
-            value = double.class.getName();
-            break;
-          case CodeConstants.TYPE_FLOAT:
-            value = float.class.getName();
-            break;
-          case CodeConstants.TYPE_INT:
-            value = int.class.getName();
-            break;
-          case CodeConstants.TYPE_LONG:
-            value = long.class.getName();
-            break;
-          case CodeConstants.TYPE_SHORT:
-            value = short.class.getName();
-            break;
-          case CodeConstants.TYPE_BOOLEAN:
-            value = boolean.class.getName();
-            break;
-          case CodeConstants.TYPE_VOID:
-            value = void.class.getName();
-            break;
-          default:
-            throw new RuntimeException("invalid class type: " + type.type);
-        }
+        String value = switch (type.getType()) {
+          case CodeConstants.TYPE_OBJECT -> type.getValue();
+          case CodeConstants.TYPE_BYTE -> byte.class.getName();
+          case CodeConstants.TYPE_CHAR -> char.class.getName();
+          case CodeConstants.TYPE_DOUBLE -> double.class.getName();
+          case CodeConstants.TYPE_FLOAT -> float.class.getName();
+          case CodeConstants.TYPE_INT -> int.class.getName();
+          case CodeConstants.TYPE_LONG -> long.class.getName();
+          case CodeConstants.TYPE_SHORT -> short.class.getName();
+          case CodeConstants.TYPE_BOOLEAN -> boolean.class.getName();
+          case CodeConstants.TYPE_VOID -> void.class.getName();
+          default -> throw new RuntimeException("invalid class type: " + type.getType());
+        };
         return new ConstExprent(VarType.VARTYPE_CLASS, value, null);
-
-      case '[': // array
+      }
+      case '[' -> { // array
         List<Exprent> elements = Collections.emptyList();
         int len = data.readUnsignedShort();
         if (len > 0) {
@@ -138,42 +120,33 @@ public class StructAnnotationAttribute extends StructGeneralAttribute {
           newType = new VarType(CodeConstants.TYPE_OBJECT, 1, "java/lang/Object");
         }
         else {
-          VarType elementType = elements.get(0).getExprType();
-          newType = new VarType(elementType.type, 1, elementType.value);
+          VarType elementType = elements.getFirst().getExprType();
+          newType = new VarType(elementType.getType(), 1, elementType.getValue());
         }
 
         NewExprent newExpr = new NewExprent(newType, Collections.emptyList(), null);
         newExpr.setDirectArrayInit(true);
         newExpr.setLstArrayElements(elements);
         return newExpr;
-
-      case '@': // annotation
+      }
+      case '@' -> { // annotation
         return parseAnnotation(data, pool);
-
-      default:
+      }
+      default -> {
         PrimitiveConstant cn = pool.getPrimitiveConstant(data.readUnsignedShort());
-        switch (tag) {
-          case 'B':
-            return new ConstExprent(VarType.VARTYPE_BYTE, cn.value, null);
-          case 'C':
-            return new ConstExprent(VarType.VARTYPE_CHAR, cn.value, null);
-          case 'D':
-            return new ConstExprent(VarType.VARTYPE_DOUBLE, cn.value, null);
-          case 'F':
-            return new ConstExprent(VarType.VARTYPE_FLOAT, cn.value, null);
-          case 'I':
-            return new ConstExprent(VarType.VARTYPE_INT, cn.value, null);
-          case 'J':
-            return new ConstExprent(VarType.VARTYPE_LONG, cn.value, null);
-          case 'S':
-            return new ConstExprent(VarType.VARTYPE_SHORT, cn.value, null);
-          case 'Z':
-            return new ConstExprent(VarType.VARTYPE_BOOLEAN, cn.value, null);
-          case 's':
-            return new ConstExprent(VarType.VARTYPE_STRING, cn.value, null);
-          default:
-            throw new RuntimeException("invalid element type!");
-        }
+        return switch (tag) {
+          case 'B' -> new ConstExprent(VarType.VARTYPE_BYTE, cn.value, null);
+          case 'C' -> new ConstExprent(VarType.VARTYPE_CHAR, cn.value, null);
+          case 'D' -> new ConstExprent(VarType.VARTYPE_DOUBLE, cn.value, null);
+          case 'F' -> new ConstExprent(VarType.VARTYPE_FLOAT, cn.value, null);
+          case 'I' -> new ConstExprent(VarType.VARTYPE_INT, cn.value, null);
+          case 'J' -> new ConstExprent(VarType.VARTYPE_LONG, cn.value, null);
+          case 'S' -> new ConstExprent(VarType.VARTYPE_SHORT, cn.value, null);
+          case 'Z' -> new ConstExprent(VarType.VARTYPE_BOOLEAN, cn.value, null);
+          case 's' -> new ConstExprent(VarType.VARTYPE_STRING, cn.value, null);
+          default -> throw new RuntimeException("invalid element type!");
+        };
+      }
     }
   }
 
