@@ -1,22 +1,9 @@
-/*
- * Copyright 2000-2016 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.jetbrains.java.decompiler.struct.consts;
 
 import org.jetbrains.java.decompiler.code.CodeConstants;
 import org.jetbrains.java.decompiler.main.DecompilerContext;
+import org.jetbrains.java.decompiler.main.extern.ClassFormatException;
 import org.jetbrains.java.decompiler.modules.renamer.PoolInterceptor;
 import org.jetbrains.java.decompiler.struct.gen.FieldDescriptor;
 import org.jetbrains.java.decompiler.struct.gen.MethodDescriptor;
@@ -51,54 +38,43 @@ public class ConstantPool implements NewClassNameBuilder {
       byte tag = (byte)in.readUnsignedByte();
 
       switch (tag) {
-        case CodeConstants.CONSTANT_Utf8:
+        case CodeConstants.CONSTANT_Utf8 ->
           pool.add(new PrimitiveConstant(CodeConstants.CONSTANT_Utf8, in.readUTF()));
-          break;
-
-        case CodeConstants.CONSTANT_Integer:
-          pool.add(new PrimitiveConstant(CodeConstants.CONSTANT_Integer, new Integer(in.readInt())));
-          break;
-
-        case CodeConstants.CONSTANT_Float:
-          pool.add(new PrimitiveConstant(CodeConstants.CONSTANT_Float, new Float(in.readFloat())));
-          break;
-
-        case CodeConstants.CONSTANT_Long:
-          pool.add(new PrimitiveConstant(CodeConstants.CONSTANT_Long, new Long(in.readLong())));
+        case CodeConstants.CONSTANT_Integer ->
+          pool.add(new PrimitiveConstant(CodeConstants.CONSTANT_Integer, Integer.valueOf(in.readInt())));
+        case CodeConstants.CONSTANT_Float ->
+          pool.add(new PrimitiveConstant(CodeConstants.CONSTANT_Float, in.readFloat()));
+        case CodeConstants.CONSTANT_Long -> {
+          pool.add(new PrimitiveConstant(CodeConstants.CONSTANT_Long, in.readLong()));
           pool.add(null);
           i++;
-          break;
-
-        case CodeConstants.CONSTANT_Double:
-          pool.add(new PrimitiveConstant(CodeConstants.CONSTANT_Double, new Double(in.readDouble())));
+        }
+        case CodeConstants.CONSTANT_Double -> {
+          pool.add(new PrimitiveConstant(CodeConstants.CONSTANT_Double, in.readDouble()));
           pool.add(null);
           i++;
-          break;
-
-        case CodeConstants.CONSTANT_Class:
-        case CodeConstants.CONSTANT_String:
-        case CodeConstants.CONSTANT_MethodType:
+        }
+        case CodeConstants.CONSTANT_Class, CodeConstants.CONSTANT_String, CodeConstants.CONSTANT_MethodType, CodeConstants.CONSTANT_Module, CodeConstants.CONSTANT_Package -> {
           pool.add(new PrimitiveConstant(tag, in.readUnsignedShort()));
           nextPass[0].set(i);
-          break;
-
-        case CodeConstants.CONSTANT_NameAndType:
+        }
+        case CodeConstants.CONSTANT_NameAndType -> {
           pool.add(new LinkConstant(tag, in.readUnsignedShort(), in.readUnsignedShort()));
           nextPass[0].set(i);
-          break;
-
-        case CodeConstants.CONSTANT_Fieldref:
-        case CodeConstants.CONSTANT_Methodref:
-        case CodeConstants.CONSTANT_InterfaceMethodref:
-        case CodeConstants.CONSTANT_InvokeDynamic:
+        }
+        case CodeConstants.CONSTANT_Fieldref, CodeConstants.CONSTANT_Methodref, CodeConstants.CONSTANT_InterfaceMethodref, CodeConstants.CONSTANT_Dynamic, CodeConstants.CONSTANT_InvokeDynamic -> {
           pool.add(new LinkConstant(tag, in.readUnsignedShort(), in.readUnsignedShort()));
           nextPass[1].set(i);
-          break;
-
-        case CodeConstants.CONSTANT_MethodHandle:
+        }
+        case CodeConstants.CONSTANT_MethodHandle -> {
           pool.add(new LinkConstant(tag, in.readUnsignedByte(), in.readUnsignedShort()));
           nextPass[2].set(i);
-          break;
+        }
+        default ->
+          // Fail-fast on unknown constant pool entry.
+          // We have no chance to process this class correctly.
+          throw new ClassFormatException(
+            String.format("Unsupported constant pool entry type %d at index #%d! ", Byte.toUnsignedInt(tag), i));
       }
     }
 
@@ -118,41 +94,20 @@ public class ConstantPool implements NewClassNameBuilder {
     int size = in.readUnsignedShort();
 
     for (int i = 1; i < size; i++) {
-      switch (in.readUnsignedByte()) {
-        case CodeConstants.CONSTANT_Utf8:
-          in.readUTF();
-          break;
-
-        case CodeConstants.CONSTANT_Integer:
-        case CodeConstants.CONSTANT_Float:
-        case CodeConstants.CONSTANT_Fieldref:
-        case CodeConstants.CONSTANT_Methodref:
-        case CodeConstants.CONSTANT_InterfaceMethodref:
-        case CodeConstants.CONSTANT_NameAndType:
-        case CodeConstants.CONSTANT_InvokeDynamic:
+      byte tag = (byte)in.readUnsignedByte();
+      switch (tag) {
+        case CodeConstants.CONSTANT_Utf8 -> in.readUTF();
+        case CodeConstants.CONSTANT_Integer, CodeConstants.CONSTANT_Float, CodeConstants.CONSTANT_Fieldref, CodeConstants.CONSTANT_Methodref, CodeConstants.CONSTANT_InterfaceMethodref, CodeConstants.CONSTANT_NameAndType, CodeConstants.CONSTANT_Dynamic, CodeConstants.CONSTANT_InvokeDynamic ->
           in.discard(4);
-          break;
-
-        case CodeConstants.CONSTANT_Long:
-        case CodeConstants.CONSTANT_Double:
+        case CodeConstants.CONSTANT_Long, CodeConstants.CONSTANT_Double -> {
           in.discard(8);
           i++;
-          break;
-
-        case CodeConstants.CONSTANT_Class:
-        case CodeConstants.CONSTANT_String:
-        case CodeConstants.CONSTANT_MethodType:
-          in.discard(2);
-          break;
-
-        case CodeConstants.CONSTANT_MethodHandle:
-          in.discard(3);
+        }
+        case CodeConstants.CONSTANT_Class, CodeConstants.CONSTANT_String, CodeConstants.CONSTANT_MethodType, CodeConstants.CONSTANT_Module, CodeConstants.CONSTANT_Package -> in.discard(2);
+        case CodeConstants.CONSTANT_MethodHandle -> in.discard(3);
+        default -> throw new RuntimeException("Invalid Constant Pool entry #" + i + " Type: " + tag);
       }
     }
-  }
-
-  public int size() {
-    return pool.size();
   }
 
   public String[] getClassElement(int elementType, String className, int nameIndex, int descriptorIndex) {
@@ -205,14 +160,14 @@ public class ConstantPool implements NewClassNameBuilder {
         (ln.type == CodeConstants.CONSTANT_Fieldref ||
          ln.type == CodeConstants.CONSTANT_Methodref ||
          ln.type == CodeConstants.CONSTANT_InterfaceMethodref)) {
-      String newClassName = buildNewClassname(ln.classname);
-      String newElement = interceptor.getName(ln.classname + ' ' + ln.elementname + ' ' + ln.descriptor);
+      String newClassName = buildNewClassname(ln.className);
+      String newElement = interceptor.getName(ln.className + ' ' + ln.elementName + ' ' + ln.descriptor);
       String newDescriptor = buildNewDescriptor(ln.type == CodeConstants.CONSTANT_Fieldref, ln.descriptor);
       //TODO: Fix newElement being null caused by ln.classname being a leaf class instead of the class that declared the field/method.
       //See the comments of IDEA-137253 for more information.
       if (newClassName != null || newElement != null || newDescriptor != null) {
-        String className = newClassName == null ? ln.classname : newClassName;
-        String elementName = newElement == null ? ln.elementname : newElement.split(" ")[1];
+        String className = newClassName == null ? ln.className : newClassName;
+        String elementName = newElement == null ? ln.elementName : newElement.split(" ")[1];
         String descriptor = newDescriptor == null ? ln.descriptor : newDescriptor;
         ln = new LinkConstant(ln.type, className, elementName, descriptor);
       }
@@ -225,21 +180,15 @@ public class ConstantPool implements NewClassNameBuilder {
   public String buildNewClassname(String className) {
     VarType vt = new VarType(className, true);
 
-    String newName = interceptor.getName(vt.value);
+    String newName = interceptor.getName(vt.getValue());
     if (newName != null) {
       StringBuilder buffer = new StringBuilder();
-
-      if (vt.arrayDim > 0) {
-        for (int i = 0; i < vt.arrayDim; i++) {
-          buffer.append('[');
-        }
-
-        buffer.append('L').append(newName).append(';');
+      if (vt.getArrayDim() > 0) {
+        buffer.append("[".repeat(vt.getArrayDim())).append('L').append(newName).append(';');
       }
       else {
         buffer.append(newName);
       }
-
       return buffer.toString();
     }
 
