@@ -1,5 +1,5 @@
 /*
- * Copyright 2000-2013 JetBrains s.r.o.
+ * Copyright 2000-2017 JetBrains s.r.o.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,12 +15,24 @@
  */
 package com.jetbrains.python;
 
+import com.jetbrains.python.allure.Layers;
+import com.jetbrains.python.allure.Subsystems;
+
 import com.jetbrains.python.fixtures.PyTestCase;
-import com.jetbrains.python.psi.*;
+import com.jetbrains.python.psi.Property;
+import com.jetbrains.python.psi.PyCallable;
+import com.jetbrains.python.psi.PyClass;
+import com.jetbrains.python.psi.PyFile;
+import com.jetbrains.python.psi.PyFunction;
+import com.jetbrains.python.psi.PyTargetExpression;
+import com.jetbrains.python.psi.types.PyAnyType;
+import com.jetbrains.python.psi.types.PyClassType;
 import com.jetbrains.python.psi.types.PyType;
 import com.jetbrains.python.psi.types.TypeEvalContext;
 import com.jetbrains.python.toolbox.Maybe;
 
+@Subsystems.CodeInsight
+@Layers.Functional
 public class PyClassicPropertyTest extends PyTestCase {
   protected PyClass myClass;
 
@@ -32,10 +44,10 @@ public class PyClassicPropertyTest extends PyTestCase {
 
   protected void prepareFile() {
     final PyFile file = (PyFile)myFixture.configureByFile("property/Classic.py");
-    myClass = file.getTopLevelClasses().get(0);
+    myClass = file.getTopLevelClasses().getFirst();
   }
 
-  public void testV1() throws Exception {
+  public void testV1() {
     Property p;
     Maybe<PyCallable> accessor;
     p = myClass.findProperty("v1", true, null);
@@ -59,7 +71,7 @@ public class PyClassicPropertyTest extends PyTestCase {
     assertNull(accessor.value());
   }
 
-  public void testV2() throws Exception {
+  public void testV2() {
     Property p;
     Maybe<PyCallable> accessor;
     p = myClass.findProperty("v2", true, null);
@@ -84,7 +96,7 @@ public class PyClassicPropertyTest extends PyTestCase {
     assertEquals("deleter", accessor.value().getName());
   }
 
-  public void testV3() throws Exception {
+  public void testV3() {
     Maybe<PyCallable> accessor;
     Property p = myClass.findProperty("v3", true, null);
     assertNotNull(p);
@@ -95,8 +107,10 @@ public class PyClassicPropertyTest extends PyTestCase {
     accessor = p.getGetter();
     assertFalse(accessor.isDefined());
 
-    final PyType codeInsightType = p.getType(TypeEvalContext.codeInsightFallback(myClass.getProject()));
-    assertNull(codeInsightType);
+    TypeEvalContext context = TypeEvalContext.codeInsightFallback(myClass.getProject());
+    PyClassType classType = (PyClassType)context.getType(myClass);
+    final PyType codeInsightType = p.getType(classType, context);
+    assertEquals(PyAnyType.getAny(), codeInsightType);
 
     accessor = p.getSetter();
     assertTrue(accessor.isDefined());
